LPS-45978 Language keys

--- a/portal-impl/src/content/Language_ar.properties
+++ b/portal-impl/src/content/Language_ar.properties
@@ -888,6 +888,7 @@ always=Always (Automatic Copy)
 always-use-my-user-id=Always use my user ID. (Automatic Copy)
 am=AM (Automatic Copy)
 am-pm=AM/PM (Automatic Copy)
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Americas (Automatic Copy)
 amount=Amount (Automatic Copy)
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=An account with {0} as the email address already exists in the portal. Do you want to associate this activity with that account? (Automatic Copy)
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=حدث خطأ غير متوقع عند مح
 an-unexpected-system-error-occurred=حدث خطأ غير متوقع.
 analytics=Analytics (Automatic Copy)
 and=و
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=And Then By (Automatic Copy)
 and-x-more=and {0} more. (Automatic Copy)
 anniversary=مناسبة سنوية
@@ -1308,6 +1311,9 @@ border-styles=Border Styles (Automatic Copy)
 border-styling=Border Styling (Automatic Copy)
 border-width=Border Width (Automatic Copy)
 bottom=Bottom (Automatic Copy)
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Branch (Automatic Copy)
 branches=Branches (Automatic Copy)
 breadcrumb=دليل الطريق
@@ -1372,6 +1378,7 @@ cas-server-name-help=Set this to enable deep linking into the portal (e.g. http:
 cas-server-url-help=Set the CAS server domain URL. (Automatic Copy)
 cas-service-url-help=Set this to disable deep linking into the portal (e.g. http://localhost:8080/c/portal/login). Do not set this if the CAS server name is set. (Automatic Copy)
 categories=تصنيفات
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Categories and Messages (Automatic Copy)
 categories[message-board]=تصنيفات
 categorization=Categorization (Automatic Copy)
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Category Sets (Automatic Copy)
 category[message-board]=تصنيف
 cc=نسخة
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=أميريكان إكسبرس
 cc_discover=ديسكوفر
 cc_mastercard=ماستركارد
@@ -1428,6 +1437,7 @@ chapter=فصل
 chapters=فصول
 characters-maximum=العدد الأقصى للحروف
 chart=مخطّطات
+chart-type=Chart Type (Automatic Copy)
 chart-width=Chart Width (Automatic Copy)
 charts=مخطّطات
 chat=دردشة
@@ -1745,6 +1755,7 @@ custom-message=رسالة مخصصة
 custom-portlet-xml=Custom portlet.xml (Automatic Copy)
 custom-question=Custom Question (Automatic Copy)
 custom-range=Custom Range (Automatic Copy)
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Custom User Attributes (Automatic Copy)
 custom-user-attributes-help=Specifying the custom user attributes will retrieve assets that have matching categorization. Categories must be from the global context. (Automatic Copy)
 custom.field.boolean=True/False (Automatic Copy)
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Dismiss (Automatic Copy)
 display=العرض
 display-a-datepicker=Display a Datepicker (Automatic Copy)
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Display Additional Activity Counters (Automatic Copy)
 display-as-tooltip=Display as Tooltip (Automatic Copy)
 display-asset-categories-facet=Display Asset Categories Facet (Automatic Copy)
@@ -2480,7 +2492,9 @@ finished=إنتهى
 firm-name=إسم الشركة
 firms=الشركات
 first=الأول
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=الرسالة الأولى
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=الإسم الأول
 first-name-attribute=First Name Attribute (Automatic Copy)
 first-thread=النقاش الأول
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=نوع اللغة
 languages=اللغة
 large=أكبر
+large-file=Large File (Automatic Copy)
 large-image=صورة كبيرة
 large-image-url=الرابط التشعبي للصورة الكبيرة
 large-rectangle=مستطيل كبير
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Layout Template Plugin (Automatic Copy)
 layout-template-plugins=Layout Template Plugins (Automatic Copy)
 layout-templates=قوالب التصميم
@@ -3087,6 +3103,9 @@ leave-site=Leave Site (Automatic Copy)
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=أتركه فارغا إذا كان الكوبون لا يراجع رمز الصنف التعريفي.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=أتركه فارغا إذا كان الكوبون لا يراجع التصانيف الحاوية للصنف.
 left=يسار
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=الرمز التعريفي القانوني
 legal-name=الإسم القانوني
 legal-type=النوع القانوني
@@ -3161,6 +3180,7 @@ lockout-duration-help=This determines the amount of time that a user's account i
 lockout-enabled=Lockout Enabled (Automatic Copy)
 lockout-enabled-help=If this is checked, a user can attempt to login a certain number of times before their account is locked. (Automatic Copy)
 log-levels=مستوى التفصيل في السجل
+logger-name=Logger Name (Automatic Copy)
 login=إسم الدخول
 login-through-facebook=Login through Facebook (Automatic Copy)
 login-url=Login URL (Automatic Copy)
@@ -3280,6 +3300,7 @@ maybe-attending=Maybe Attending (Automatic Copy)
 me=أنا
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats: (Automatic Copy)
 medium=Medium (Automatic Copy)
+medium-file=Medium File (Automatic Copy)
 medium-image=صورة متوسطة
 medium-image-url=الرابط التشعبي للصورة المتوسطة
 medium-rectangle=مستطيل متوسط
@@ -3296,6 +3317,8 @@ membership-type-private-help=Users are not allowed to request membership. Only s
 membership-type-restricted-help=Users are allowed to request membership. The request will need to be approved by the site administrators. (Automatic Copy)
 memberships=Memberships (Automatic Copy)
 memory=Memory (Automatic Copy)
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=دمج
 merge-data=Merge Data (Automatic Copy)
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Merge {0} public pages (Automatic Copy)
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=رسالة
 message-added-email=الرسالة الإلكترونية عند إضافة رسالة
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=رسالة المنتدى
 message-boards-home=موضوع المنتدى
 message-boards-message-anonymous-help=If this is checked, then this message will be posted anonymously. (Automatic Copy)
@@ -3543,6 +3567,7 @@ monday-abbreviation=إث
 monitoring=مراقبة
 month=شهر
 month-abbreviation=ش
+month-position=Month Position (Automatic Copy)
 month-s=شهر/أشهر
 monthly=شهري
 monthly-payment=دفعة شهرية
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=More rows at bottom. (Automatic Copy)
 more-x-results=More {0} Results (Automatic Copy)
 move=فيلم
 move-column=أنقل العمود
+move-down=Move Down (Automatic Copy)
 move-files=إزالة الملفات
 move-page=Move Page (Automatic Copy)
 move-selected-item-in-x-one-position-down=Move selected item in {0} one position down. (Automatic Copy)
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Move selected items from {0} to {1}. (Automatic 
 move-thread=نقل المشاركة
 move-to=أنقل إلى
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=إختر محتوى
 move-x=Move {0} (Automatic Copy)
 movie=فيلم
@@ -3616,6 +3643,7 @@ never-review=لا يراجع أبداً
 new=جديد
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=New Application Display Template (Automatic Copy)
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=New Blog Entry (Automatic Copy)
 new-bookmark=عرض الأدلة المسجلة
 new-category=أضف تصنيف
@@ -4059,6 +4087,7 @@ pause=توقف
 payer-email-address=عنوان البريد الإلكتروني لمن يقوم بعملية الدفع
 payment-gross=المجموع الإجمالي للدفع
 payment-settings=إعدادات الدفع
+paypal=PayPal (Automatic Copy)
 paypal-email-address=عنوان البريد الإلكتروني لـPayPal
 paypal-order=طلب PayPal
 pending=بإنتظار
@@ -4389,6 +4418,7 @@ pop-up=إفتح في نافذة جديدة
 port=أرسل
 portal=الموقع
 portal-data=إسم البورتلت
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=مثيلات البورتال
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=إداري
 print=إطبع
 print-x-x=Print <span class="{0}">{1}</span> (Automatic Copy)
 priority=أولوية
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=خاص
 private-node=عقدة خاصة
 private-nodes=عقد خاصة
@@ -4552,6 +4585,7 @@ purchase-order=Purchase Order (Automatic Copy)
 px=px (Automatic Copy)
 quantity=الكمية
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=تذكرني
 reminder=مذكرات
 reminder-queries=Reminder Queries (Automatic Copy)
 reminder-query-and-answer-cannot-be-empty=Reminder query and answer cannot be empty. (Automatic Copy)
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Remote Host/IP (Automatic Copy)
 remote-live=Remote Live (Automatic Copy)
 remote-live-connection-settings=Remote Live Connection Settings (Automatic Copy)
@@ -4714,6 +4749,7 @@ reply=رد
 reply-all=رد للجميع
 reply-as=Reply as... (Automatic Copy)
 reply-as-anonymous=رد بدون هوية
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Reply Comments (Automatic Copy)
 reply-date=Reply Date (Automatic Copy)
 reply-membership-request-for-x=Reply Membership Request for {0} (Automatic Copy)
@@ -4816,6 +4852,9 @@ rich=Rich (Automatic Copy)
 rich-text-format=هيئة النص الغني
 ridge=Ridge (Automatic Copy)
 right=يمين
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robots (Automatic Copy)
 role=دور
 role-name=إسم الدور
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=إبحث
 search-all-organizations=أضف منظمة
 search-all-users=إبحث في المستخدمين
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Search applications (searches as you type). (Automatic Copy)
 search-bookmarks=Search Bookmarks (Automatic Copy)
 search-by-id-or-url=إبحث بواسطة الرمز التعريفي أو الرابط التشعبي
 search-categories=إبحث في التصانيف
 search-configuration=إعدادات الشكل
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string. (Automatic Copy)
+search-content=Search Content (Automatic Copy)
 search-coupons=Search Coupons (Automatic Copy)
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=الرجاء إختيار نوع.
@@ -4918,6 +4959,7 @@ search-operator=إبحث في المشغلين
 search-orders=إبحث في المجلّدات
 search-organizations=أضف منظمة
 search-pages=إبحث في التصنيفات
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Search Password Policies (Automatic Copy)
 search-plugins=Search Plugins (Automatic Copy)
 search-products=إبحث في المنتجات
@@ -4966,6 +5008,7 @@ select-a-page=الصفحة المختارة
 select-a-site=الصفحة المختارة
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Select a structure to filter the web content list by a structure. (Automatic Copy)
 select-a-type=الصفحة المختارة
+select-all=Select All (Automatic Copy)
 select-an-action-type=Select an Action Type (Automatic Copy)
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Select an existing list or add a list to be displayed in this portlet. (Automatic Copy)
 select-and-copy=إختر و إنسخ
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=إختر بورتلت
 select-question=Select Question (Automatic Copy)
 select-recipients=إختر المستقبلين
+select-search=Select Search (Automatic Copy)
 select-site=الصفحة المختارة
 select-tags=الصفحة المختارة
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Select the action that this role can perform on the <em>{0}</em> portlet. (Automatic Copy)
@@ -5078,6 +5122,7 @@ servers=الخادم
 service=الخدمة
 service-account=Service Account (Automatic Copy)
 service-password=Service Password (Automatic Copy)
+service-search=Service Search (Automatic Copy)
 service-url=Service URL (Automatic Copy)
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=الخدمات
@@ -5287,15 +5332,19 @@ sku=رمز الصنف التعريفي
 skus=رموز الأصناف التعريفية
 skype=Skype (Automatic Copy)
 skyscraper=لوحة رأسية
+slide-show=Slide Show (Automatic Copy)
 slovak=سلوفاني
 small=Small (Automatic Copy)
+small-file=Small File (Automatic Copy)
 small-image=صورة صغيرة
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=الرابط التشعبي للصورة الصغيرة
 small-rectangle=مستطيل صغير
 small-square=مربع صغير
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=الرمز التعريفي لمرسل SMS
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=غداً
 ton=طن
 tools=أدوات
 top=القمة
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level Organizations (Automatic Copy)
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=الأكثر مشاركة
 top-users-out-of-x=Top users out of {0}. (Automatic Copy)
 topic=عنوان رئيسي
@@ -6693,6 +6745,7 @@ with-scope=with scope (Automatic Copy)
 withdraw-submission=Withdraw Submission (Automatic Copy)
 within=خلال
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=بحث بالكلمة
 word-spacing=Word Spacing (Automatic Copy)
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=ياهوو! CVS
 yard=يارد
 year=سنة
 year-abbreviation=س
+year-position=Year Position (Automatic Copy)
 year-s=سنة/سنوات
 year-to-date=سنة إلى تاريخ
 yearly=سنوي
