--- a/portal-impl/src/content/Language_ca.properties
+++ b/portal-impl/src/content/Language_ca.properties
@@ -888,6 +888,7 @@ always=Sempre
 always-use-my-user-id=Fes servir sempre el meu ID d'usuari.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Amèriques
 amount=Quantitat
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Ja existeix en el portal un compte amb {0} com l'adreça de correu electrònic. Voleu associar aquesta activitat amb aquest compte?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=S'ha produït un error inesperat mentre s'i
 an-unexpected-system-error-occurred=S'ha produït un error inesperat de sistema.
 analytics=Analítiques
 and=I
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=i després per
 and-x-more=i {0} més.
 anniversary=Aniversari
@@ -1308,6 +1311,9 @@ border-styles=Estils de la vora
 border-styling=Fixa l'estil de la vora
 border-width=Amplada de la vora
 bottom=Inferior
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Bifurcació
 branches=Bifurcacions
 breadcrumb=Camí de navegació
@@ -1372,6 +1378,7 @@ cas-server-name-help=Establiu-ho per habilitar l'enllaç profund en el portal (p
 cas-server-url-help=Establiu l'URL del domini del servidor CAS.
 cas-service-url-help=Establiu-ho per inhabilitar l'enllaç profund en el portal (p.ex. http://localhost:8080/c/portal/login). No ho feu si el nom del servei CAS ja s'ha definit.
 categories=Categories
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Categories i missatges
 categories[message-board]=Categories
 categorization=Categorització
@@ -1383,6 +1390,8 @@ category-services=Serveis de categories
 category-sets=Conjunts de categories
 category[message-board]=Categoria
 cc=Cc
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Descobreix
 cc_mastercard=Mastercard
@@ -1428,6 +1437,7 @@ chapter=Capítol
 chapters=Capítols
 characters-maximum=Nombre màxim de caràcters
 chart=Gràfic
+chart-type=Chart Type (Automatic Copy)
 chart-width=Amplada del gràfic
 charts=Gràfics
 chat=Xat
@@ -1745,6 +1755,7 @@ custom-message=Missatge personalitzat
 custom-portlet-xml=Portlet.xml personalitzat
 custom-question=Pregunta personalitzada
 custom-range=Rang personalitzat
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Atributs d'usuari personalitzats
 custom-user-attributes-help=Si s'especifiquen els atributs personalitzats de l'usuari es recuperaran els continguts que coincideixin en la seva categoria. Les categories han de ser del context global.
 custom.field.boolean=Vertader/Fals
@@ -1986,6 +1997,7 @@ disk=Disc
 dismiss=Ignora
 display=Visualització
 display-a-datepicker=Mostra un seleccionador de dates
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Mostra els comptadors addicionals d'activitat
 display-as-tooltip=Mostra-ho com un indicador de funció
 display-asset-categories-facet=Mostra l'aspecte de les categories de contingut
@@ -2480,7 +2492,9 @@ finished=Acabat
 firm-name=Nom de l'empresa
 firms=Empreses
 first=Primer
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Primer missatge
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Nom
 first-name-attribute=Atribut del nom
 first-thread=Primer fil de discussió
@@ -2995,6 +3009,7 @@ language-to=Al llenguatge
 language-type=Tipus de llenguatge
 languages=Llengües
 large=Gran
+large-file=Large File (Automatic Copy)
 large-image=Imatge gran
 large-image-url=URL de la imatge gran
 large-rectangle=Rectangle gran
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Connector de la plantilla de presentació
 layout-template-plugins=Connectors de plantilles de presentació
 layout-templates=Plantilles de presentació
@@ -3087,6 +3103,9 @@ leave-site=Abandona el lloc web
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Deixa-ho en blanc si el cupó no coincideix amb l'SKU.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Deixa-ho buit si el cupó no coincideix amb les categories principals d'algun element.
 left=Esquerra
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=ID legal
 legal-name=Nom legal
 legal-type=Tipus legal
@@ -3161,6 +3180,7 @@ lockout-duration-help=Determina la quantitat de temps que el compte d'un usuari 
 lockout-enabled=Bloqueig activat
 lockout-enabled-help=Si s'activa aquesta opció, qualsevol usuari pot intentar connectar-se diverses vegades abans que es bloquegi el seu compte.
 log-levels=Nivells de registre
+logger-name=Logger Name (Automatic Copy)
 login=Connexió
 login-through-facebook=Iniciar la sessió amb Facebook
 login-url=URL de connexió
@@ -3280,6 +3300,7 @@ maybe-attending=Potser s'està atenent
 me=Jo
 media-files-must-be-one-of-the-following-formats=Els fitxers multimèdia han de ser d'algun dels formats següents:
 medium=Mitja
+medium-file=Medium File (Automatic Copy)
 medium-image=Imatge mitjana
 medium-image-url=URL de la imatge mitjana
 medium-rectangle=Rectangle mitjà
@@ -3296,6 +3317,8 @@ membership-type-private-help=Els usuaris no poden sol·licitar subscriure's. Nom
 membership-type-restricted-help=Els usuaris poden sol·licitar subscriure's; fet que els administradors del lloc web hauran d'aprovar.
 memberships=Membres del grup
 memory=Memòria
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menú
 merge=Fusiona
 merge-data=fusiona les dades
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Fusiona {0} pàgines públiques
 merged-from-x-x=(Fusionat des de {0}, {1})
 message=Missatge
 message-added-email=Notificació del missatge afegit
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Missatges del quadre de missatge
 message-boards-home=Inici dels quadres de missatge
 message-boards-message-anonymous-help=Si s'activa aquesta opció, es publicarà aquest missatge anònimament.
@@ -3543,6 +3567,7 @@ monday-abbreviation=L
 monitoring=Monitoratge
 month=Mes
 month-abbreviation=m
+month-position=Month Position (Automatic Copy)
 month-s=mes/mesos
 monthly=Mensualment
 monthly-payment=Pagament mensual
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Més files a la part inferior.
 more-x-results={0} resultats més
 move=Mou
 move-column=Mou la columna
+move-down=Move Down (Automatic Copy)
 move-files=Mou els fitxers
 move-page=Mou la pàgina
 move-selected-item-in-x-one-position-down=Mou l'objecte seleccionat en {0} una posició cap avall.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Mou els elements seleccionats de {0} a {1}.
 move-thread=Mou el fil
 move-to=Mou a
 move-to-the-recycle-bin=Mou a la paperera de reciclatge
+move-up=Move Up (Automatic Copy)
 move-web-content=Moure el contingut web
 move-x=Mou {0}
 movie=Pel·lícula
@@ -3616,6 +3643,7 @@ never-review=No es revisa mai
 new=Nou
 new-action-for-x=Nova acció per {0}
 new-application-display-template=Plantilla nova de visualització d'aplicacions
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Entrada de blog nova
 new-bookmark=Marcador nou
 new-category=Categoria nova
@@ -4059,6 +4087,7 @@ pause=Pausa
 payer-email-address=Adreça electrònica del pagador
 payment-gross=Import brut
 payment-settings=Paràmetres del pagament
+paypal=PayPal (Automatic Copy)
 paypal-email-address=Adreça de correu de PayPal
 paypal-order=Comanda de PayPal
 pending=Pendent
@@ -4389,6 +4418,7 @@ pop-up=Anunci emergent
 port=Port
 portal=Portal
 portal-data=Dades del portal
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Instància de portal
 portal-instance-help=Objecte que representa la instància de portal actual.
 portal-instance-id=Identificador de instància de portal
@@ -4473,6 +4503,9 @@ principal=Principal
 print=Imprimeix
 print-x-x=Imprimeix <span class="{0}">{1}</span>
 priority=Prioritat
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privat
 private-node=Node privat
 private-nodes=Nodes privats
@@ -4552,6 +4585,7 @@ purchase-order=Ordre de compra
 px=px
 quantity=Quantitat
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=Si aquesta opció està activa, les consultes que estan dins el llindar són indexades i suggerides als usuaris com a consultes relacionades o como part de suggeriments d'autocompletar.
 query-indexing-threshold=Llindar d'indexació de consultes
 query-indexing-threshold-help=Si el nombre de resultats de cerca està dins el llindar, la consulta es indexada i suggerida als usuaris cercant amb consultes similars.
@@ -4669,6 +4703,7 @@ remember-me=Recorda'm
 reminder=Recordatori
 reminder-queries=Preguntes de recordatori
 reminder-query-and-answer-cannot-be-empty=La pregunta de recordatori i la resposta no poden ser buides.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=IP del servidor remot
 remote-live=Entorn Live remot
 remote-live-connection-settings=Configuració de connexió de l'entorn Live remot
@@ -4714,6 +4749,7 @@ reply=Respon
 reply-all=Respon a tothom
 reply-as=Respon com a...
 reply-as-anonymous=Respon com a anònim
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Respon als comentaris
 reply-date=Data de la resposta
 reply-membership-request-for-x=Respon a la petició del grup de pertinença per a {0}
@@ -4816,6 +4852,9 @@ rich=Enriquit
 rich-text-format=Format de text enriquit
 ridge=Ridge
 right=Dreta
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robots
 role=Funció
 role-name=Nom de la funció
@@ -4886,12 +4925,14 @@ script-file=Fitxer script
 search=Cerca
 search-all-organizations=Cerca organitzacions
 search-all-users=Cerca tots els usuaris
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Cerca aplicacions (cerca mentre escriu).
 search-bookmarks=Cerca marcadors
 search-by-id-or-url=Cerca per ID o URL
 search-categories=Cerca categories
 search-configuration=Configuració de cerca
 search-configuration-help=Aquest camp s'utilitza per aplicar configuracions avançades de cerca en forma de cadena JSON.
+search-content=Search Content (Automatic Copy)
 search-coupons=Cerca cupons
 search-custom-range-date-format=Introduïu una data en el següent format: YYYY-MM-DD
 search-custom-range-invalid-date-range=Seleccioneu un interval de dates vàlid.
@@ -4918,6 +4959,7 @@ search-operator=Cerca l'operador
 search-orders=Cerca comandes
 search-organizations=Cerca organitzacions
 search-pages=Cerca pàgines
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Cerca polítiques de contrasenya
 search-plugins=Cerca connectors
 search-products=Cerca productes
@@ -4966,6 +5008,7 @@ select-a-page=Seleccioneu una pàgina
 select-a-site=Seleccioneu un lloc
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Seleccioneu una estructura perquè filtri la llista de continguts web.
 select-a-type=Seleccioneu un tipus
+select-all=Select All (Automatic Copy)
 select-an-action-type=Seleccioneu un tipus d'acció
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Seleccioneu una llista existent o afegiu-ne una perquè es visualitzi en aquest mòdul de portal.
 select-and-copy=Selecciona i copia
@@ -4997,6 +5040,7 @@ select-parent-site=Seleccioneu el lloc web principal
 select-portlet=Seleccioneu un mòdul de portal
 select-question=Seleccioneu una pregunta
 select-recipients=Seleccioneu els destinataris
+select-search=Select Search (Automatic Copy)
 select-site=Seleccioneu un lloc
 select-tags=Seleccioneu unes etiquetes
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Seleccioneu l'acció que aquesta funció pot realitzar en el mòdul de portal <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Servidors
 service=Servei
 service-account=Compte del servei
 service-password=Contrasenya del servei
+service-search=Service Search (Automatic Copy)
 service-url=URL del servei
 service-url-for-opensso-help=Es pot accedir al OpenSSO des d'aquesta URL per utilitzar els serveis web d'autenticació. Si esteu fent servir l'OpenSSO Express 8 o una versió posterior, es necessari que el servidor s'executi amb Java 6.
 services=Serveis
@@ -5287,15 +5332,19 @@ sku=referència
 skus=Referències
 skype=Skype
 skyscraper=Skyscraper
+slide-show=Slide Show (Automatic Copy)
 slovak=Eslovac
 small=Petit
+small-file=Small File (Automatic Copy)
 small-image=Imatge petita
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL de la imatge petita
 small-rectangle=Rectangle petit
 small-square=Quadrat petit
 smartphone=Smartphone
 sms=SMS
 sms-messenger-id=ID de SMS
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=vegades
 social-activity-limit-type-times-a-day=vegades al dia
 social-activity-limit-type-times-per-period=vegades en un període
@@ -6197,8 +6246,11 @@ tomorrow=Demà
 ton=Tona
 tools=Eines
 top=Superior
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Nivell superior
 top-level-organizations=Organitzacions de nivell superior
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Usuaris més actius
 top-users-out-of-x=Els usuaris més actius de {0}.
 topic=Tema
@@ -6693,6 +6745,7 @@ with-scope=amb l'abast
 withdraw-submission=Retira la sol·licitud
 within=Dintre
 within-x=Dins de {0}
+word=Word (Automatic Copy)
 word-search=Cerca per paraula
 word-spacing=Espai entre paraules
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=CSV de Yahoo!:
 yard=Iarda
 year=Any
 year-abbreviation=a
+year-position=Year Position (Automatic Copy)
 year-s=any(s)
 year-to-date=Any de la data
 yearly=Anualment
