--- a/portal-impl/src/content/Language_cs.properties
+++ b/portal-impl/src/content/Language_cs.properties
@@ -888,6 +888,7 @@ always=Vždy
 always-use-my-user-id=Vždy používat moje uživatelské ID.
 am=dop.
 am-pm=dop./odp.
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Americké
 amount=Množství
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Účet s e-mailovou adresou {0} je již v portálu evidován. Přejete si tuto aktivitu se zmiňovaným účtem propojit?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Nastala neočekávaná chyba.
 an-unexpected-system-error-occurred=Nastala neočekávaná systémová chyba.
 analytics=Analytika
 and=A
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=A pak podle
 and-x-more=a {0} navíc.
 anniversary=Výročí
@@ -1308,6 +1311,9 @@ border-styles=Styly rámečku
 border-styling=Stylování rámečku
 border-width=Šířka rámečku
 bottom=Odspodu
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Větev
 branches=Větve
 breadcrumb=Drobečková navigace
@@ -1372,6 +1378,7 @@ cas-server-name-help=Nastavte v případě že chcete aktivovat hluboké propoje
 cas-server-url-help=Zadejte URL adresu <abbr title="Centrální Autentizační Služba">CAS</abbr> serveru.
 cas-service-url-help=Nastavte v případě že si nepřejete aktivovat hluboké propojení do portálu (např. http://localhost:8080/c/portal/login). Pozor, nenastavujte je-li nastaven název serveru <abbr title="Centrální Autentizační Služba">CAS</abbr>.
 categories=Kategorie
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategorie a zprávy
 categories[message-board]=Kategorie
 categorization=Kategorizace
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Sady kategorií
 category[message-board]=Kategorie
 cc=Kopie
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Prozkoumat
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Kapitola
 chapters=Kapitoly
 characters-maximum=Maximálně znaků
 chart=Graf
+chart-type=Chart Type (Automatic Copy)
 chart-width=Šířka grafu
 charts=Znaky
 chat=Graf
@@ -1745,6 +1755,7 @@ custom-message=Vlastní zpráva
 custom-portlet-xml=Vlastní portlet.xml
 custom-question=Vlastní otázka
 custom-range=Vlastní rozsah
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Vlastní atributy
 custom-user-attributes-help=Specifikováním uživatelských atributů získáte položky, které mají odpovídající kategorizaci. Kategorie musí být z globálního kontextu.
 custom.field.boolean=Logická hodnota (pravda/nepravda)
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Zamítnout
 display=Zobrazit
 display-a-datepicker=Zobrazit Výběr data
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Zobrazit přídavné čítače aktivity
 display-as-tooltip=Zobrazit jako popisku pod kurzorem
 display-asset-categories-facet=Zobrazit položky z hlediska kategorií
@@ -2480,7 +2492,9 @@ finished=Dokončeno
 firm-name=Název společnosti
 firms=Společnosti
 first=První
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=První zpráva
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Jméno
 first-name-attribute=Atribut jména
 first-thread=První diskuse
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=Druh jazyka
 languages=jazyky
 large=Velký
+large-file=Large File (Automatic Copy)
 large-image=Velký obrázek
 large-image-url=URL velkého obrázku
 large-rectangle=Velký obdélník
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Šablona rozvržení
 layout-template-plugins=Šablony rozvržení
 layout-templates=Šablony rozvržení
@@ -3087,6 +3103,9 @@ leave-site=Opustit web
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Ponechte prázdné, pokud kupón nebude kontrolovat SKU.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Ponechte prázdné, pokud kupón nebude určený pro konkrétní kategorii.
 left=Vlevo
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=ID právní formy (IČO/DIČ/...)
 legal-name=Oficiální název subjektu
 legal-type=Právní forma subjektu
@@ -3161,6 +3180,7 @@ lockout-duration-help=Tato hodnota určuje, jak dlouho zůstane účet uživatel
 lockout-enabled=Povolit automatické zamčení účtu
 lockout-enabled-help=Pokud je zaškrtnuto, uživatel má pouze určitý počet pokusů o přihlášení než bude jeho účet zamknut.
 log-levels=Úrovně logování
+logger-name=Logger Name (Automatic Copy)
 login=Přihlášení
 login-through-facebook=Přihlásit pomocí Facebooku
 login-url=URL pro přihlášení
@@ -3280,6 +3300,7 @@ maybe-attending=Účast možná
 me=Já
 media-files-must-be-one-of-the-following-formats=Soubory médií musí být v jednom z následujících formátů:
 medium=Střední
+medium-file=Medium File (Automatic Copy)
 medium-image=Střední obrázek
 medium-image-url=URL středního obrázku
 medium-rectangle=Střední obdélník
@@ -3296,6 +3317,8 @@ membership-type-private-help=Uživatelé nemají povoleno žádat o členství. 
 membership-type-restricted-help=Uživatelé mohou žádat o členství. Požadavek však musí schválit některý ze správců.
 memberships=Členství
 memory=Paměť
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Sloučit
 merge-data=Sloučit data
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Sloučit {0} veřejných stránek
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=Zpráva
 message-added-email=E-mail o přidání zprávy
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Zpráva ve fóru
 message-boards-home=Úvodní stránka diskusního fóra
 message-boards-message-anonymous-help=Zaškrtnutí způsobí, že bude tato zpráva odeslána anonymně.
@@ -3543,6 +3567,7 @@ monday-abbreviation=Po
 monitoring=Monitorování
 month=Měsíc
 month-abbreviation=m
+month-position=Month Position (Automatic Copy)
 month-s=měsíc(ů)
 monthly=Měsíčně
 monthly-payment=Měsíční splátka
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Více řádků vespod.
 more-x-results=Dalších {0} položek
 move=Přesunout
 move-column=Posuň sloupec
+move-down=Move Down (Automatic Copy)
 move-files=Přesunout soubory
 move-page=Přesunout stránku
 move-selected-item-in-x-one-position-down=Posunout vybranou položku v {0} o pozici níže.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Přesunout vybrané položky z {0} do {1}.
 move-thread=Přesunout diskusi
 move-to=Posuň do
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Zápatí webového obsahu
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Nikdy nerevidovat
 new=Nový
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=Přidat šablonu aplikace
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Nový příspěvek blogu
 new-bookmark=Nová záložka
 new-category=Nová kategorie
@@ -4059,6 +4087,7 @@ pause=Pauza
 payer-email-address=E-mail plátce
 payment-gross=Hrubá platba
 payment-settings=Nastavení plateb
+paypal=PayPal (Automatic Copy)
 paypal-email-address=E-mailová adresa PayPal
 paypal-order=PayPal objednávka
 pending=Nevyřízené
@@ -4389,6 +4418,7 @@ pop-up=Ukázat se
 port=Odeslat
 portal=Portál
 portal-data=Data portálu
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Instance portálu
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Principy
 print=Tisk
 print-x-x=Tisk <span class="{0}">{1}</span>
 priority=Důležitost
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Soukromé
 private-node=Soukromý uzel
 private-nodes=Soukromé uzly
@@ -4552,6 +4585,7 @@ purchase-order=Objednávka
 px=px (Automatic Copy)
 quantity=Množství
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Zapamatovat si mě
 reminder=Upomínka
 reminder-queries=Ověřovací otázky
 reminder-query-and-answer-cannot-be-empty=Otázka a odpověď pro opětovné získání hesla nemohou být prázdné.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=IP adresa vzdáleného serveru
 remote-live=Vzdálená produkce
 remote-live-connection-settings=Nastavení připojení ke vzdálené produkci
@@ -4714,6 +4749,7 @@ reply=Odpovědět
 reply-all=Odpovědět všem
 reply-as=Odpovědět jako...
 reply-as-anonymous=Odpovědět jako anonym
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Komentáře v odpověď
 reply-date=datum odpovědi
 reply-membership-request-for-x=Odpovědět na žádost o přátelství od {0}
@@ -4816,6 +4852,9 @@ rich=Plný
 rich-text-format=Formátovaný text (Rich Text Format)
 ridge=Hřbet
 right=Vpravo
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Roboti
 role=Role
 role-name=Název role
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Vyhledávání
 search-all-organizations=Hledat organizace
 search-all-users=Hledat uživatele
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Prohledat aplikace (hledá již během psaní).
 search-bookmarks=Hledat v záložkách
 search-by-id-or-url=Hledat ID nebo URL
 search-categories=Hledat v kategoriích
 search-configuration=Konfigurace vyhledávání
 search-configuration-help=Toto pole je používáno pro aplikování pokročilého nastavení vyhledávání ve formuláři řetězce JSON.
+search-content=Search Content (Automatic Copy)
 search-coupons=Hledat kupony
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Zvolte prosím platný typ.
@@ -4918,6 +4959,7 @@ search-operator=Operátor pro vyhledávání
 search-orders=Hledat objednávky
 search-organizations=Hledat organizace
 search-pages=Hledat stránky
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Hledat politiky hesel
 search-plugins=Hledat zásuvné moduly
 search-products=Hledat produkty
@@ -4966,6 +5008,7 @@ select-a-page=Vybraná stránka
 select-a-site=Vybrat web
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Vyberte strukturu, podle které se bude seznam webového obsahu filtrovat.
 select-a-type=Vybrat typ
+select-all=Select All (Automatic Copy)
 select-an-action-type=Vybrat typ akce
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Vyberte existující seznam nebo přidejte seznam nový, který má být zobrazen v tomto portletu.
 select-and-copy=Vybrat a kopírovat
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Vybrat portlet
 select-question=Vybrat otázku
 select-recipients=Vybrat příjemce
+select-search=Select Search (Automatic Copy)
 select-site=Vybrat web
 select-tags=Vybrat štítky
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Zvolte akci, kterou smí uživatel s touto rolí provést s portletem <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Servery
 service=Služba
 service-account=Účet služby
 service-password=Heslo služby
+service-search=Service Search (Automatic Copy)
 service-url=URL služby
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Služby
@@ -5287,15 +5332,19 @@ sku=SKU
 skus=SKU
 skype=Skype
 skyscraper=Mrakodrap
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovenský
 small=Malý
+small-file=Small File (Automatic Copy)
 small-image=Malý obrázek
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL malého obrázku
 small-rectangle=Malý obdélník
 small-square=Malý čtverec
 smartphone=Smartphone (Automatic Copy)
 sms=SMS
 sms-messenger-id=ID SMS messengeru
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=krát
 social-activity-limit-type-times-a-day=krát denně
 social-activity-limit-type-times-per-period=krát za období
@@ -6197,8 +6246,11 @@ tomorrow=Zítra
 ton=Tuna
 tools=Nástroje
 top=Nahoru
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Organizace na nejvyšší úrovni
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Top přispěvatelé
 top-users-out-of-x=Top uživatelé z {0}.
 topic=Téma
@@ -6693,6 +6745,7 @@ with-scope=s rámcem
 withdraw-submission=Stáhnout podání
 within=Uvnitř
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Nalezení slova
 word-spacing=Odsazení slov
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV:
 yard=jard
 year=Rok
 year-abbreviation=r
+year-position=Year Position (Automatic Copy)
 year-s=rok(y)
 year-to-date=Rok do
 yearly=Ročně
