--- a/portal-impl/src/content/Language_da.properties
+++ b/portal-impl/src/content/Language_da.properties
@@ -888,6 +888,7 @@ always=Always (Automatic Copy)
 always-use-my-user-id=Benyt altid mit bruger-ID.
 am=AM (Automatic Copy)
 am-pm=AM/PM (Automatic Copy)
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Americas (Automatic Copy)
 amount=Amount (Automatic Copy)
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=An account with {0} as the email adresse already exists in the portal. Do you want to associate this activity with that account?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=An unexpected sign in error occurred. (Auto
 an-unexpected-system-error-occurred=An unexpected system error occurred. (Automatic Copy)
 analytics=Analytics (Automatic Copy)
 and=And (Automatic Copy)
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=And Then By (Automatic Copy)
 and-x-more=and {0} more. (Automatic Copy)
 anniversary=Anniversary (Automatic Copy)
@@ -1308,6 +1311,9 @@ border-styles=Kanttypografier
 border-styling=Kantformatering
 border-width=Kantbredde
 bottom=Bund
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Branch (Automatic Copy)
 branches=Branches (Automatic Copy)
 breadcrumb=Brødkrumme
@@ -1372,6 +1378,7 @@ cas-server-name-help=Set this to enable deep linking into the portal (e.g. http:
 cas-server-url-help=Set the CAS server domain URL. (Automatic Copy)
 cas-service-url-help=Set this to disable deep linking into the portal (e.g. http://localhost:8080/c/portal/login). Do not set this if the CAS server name is set. (Automatic Copy)
 categories=Kategorier
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategorier and Messages
 categories[message-board]=Kategorier
 categorization=Kategorisering
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Kategorisæt
 category[message-board]=Kategori
 cc=CC (Automatic Copy)
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express (Automatic Copy)
 cc_discover=Discover (Automatic Copy)
 cc_mastercard=MasterCard (Automatic Copy)
@@ -1428,6 +1437,7 @@ chapter=Chapter (Automatic Copy)
 chapters=Chapters (Automatic Copy)
 characters-maximum=Characters Maximum (Automatic Copy)
 chart=Kurv
+chart-type=Chart Type (Automatic Copy)
 chart-width=Chart Width (Automatic Copy)
 charts=Kurv
 chat=Kurv
@@ -1745,6 +1755,7 @@ custom-message=Custom Message (Automatic Copy)
 custom-portlet-xml=Custom portlet.xml (Automatic Copy)
 custom-question=Custom Question (Automatic Copy)
 custom-range=Custom Range (Automatic Copy)
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Custom bruger Attributes
 custom-user-attributes-help=Specifying the custom user attributes will retrieve assets that have matching categorization. Kategorier must be from the global context.
 custom.field.boolean=True/False (Automatic Copy)
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Dismiss (Automatic Copy)
 display=Display (Automatic Copy)
 display-a-datepicker=Display a Datepicker (Automatic Copy)
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Display Additional Activity Counters (Automatic Copy)
 display-as-tooltip=Display as Tooltip (Automatic Copy)
 display-asset-categories-facet=Display Asset Kategorier Facet
@@ -2480,7 +2492,9 @@ finished=Finished (Automatic Copy)
 firm-name=Firmanavn
 firms=Firmaer
 first=Første
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Første besked
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Fornavn
 first-name-attribute=Fornavnsattribut
 first-thread=Første tråd
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=Sprogtype
 languages=Sprog
 large=Large (Automatic Copy)
+large-file=Large File (Automatic Copy)
 large-image=Large Image (Automatic Copy)
 large-image-url=Large Image URL (Automatic Copy)
 large-rectangle=Large Rectangle (Automatic Copy)
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Layout skabelon Plugin
 layout-template-plugins=Layout skabelon Plugins
 layout-templates=Layout skabeloner
@@ -3087,6 +3103,9 @@ leave-site=Leave websted
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Leave this blank if the coupon does not check for the item SKU. (Automatic Copy)
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Leave this blank if the coupon does not check for the parent categories of an item. (Automatic Copy)
 left=venstre
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Legal ID (Automatic Copy)
 legal-name=Legal Name (Automatic Copy)
 legal-type=Legal Type (Automatic Copy)
@@ -3161,6 +3180,7 @@ lockout-duration-help=Værdien bestemmer hvor længe en brugers konto er spærre
 lockout-enabled=Spærring aktiveret
 lockout-enabled-help=Hvis aktiveret kan en bruger kun forsøge at logge ind et begrænset antal gange før deres konto spærres.
 log-levels=Logniveauer
+logger-name=Logger Name (Automatic Copy)
 login=Brugernavn
 login-through-facebook=Log ind gennem Facebook
 login-url=Log ind URL
@@ -3280,6 +3300,7 @@ maybe-attending=Maybe Attending (Automatic Copy)
 me=Me (Automatic Copy)
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats: (Automatic Copy)
 medium=Medium (Automatic Copy)
+medium-file=Medium File (Automatic Copy)
 medium-image=Benyt Medium Image
 medium-image-url=Mellemstor billede-adresse
 medium-rectangle=Medium Rectangle (Automatic Copy)
@@ -3296,6 +3317,8 @@ membership-type-private-help=Brugere are not allowed to request membership. Only
 membership-type-restricted-help=Brugere are allowed to request membership. The request will need to be approved by the site administrators.
 memberships=Medlemsskaber
 memory=Hukommelse
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Integrer
 merge-data=Integrationsdata
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Integrer {0} offentlige sider
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=Diskussionsfora
 message-added-email=Message Added e-mail
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Message Board Messages (Automatic Copy)
 message-boards-home=Message Boards emne
 message-boards-message-anonymous-help=If this is checked, then this message will be posted anonymously. (Automatic Copy)
@@ -3543,6 +3567,7 @@ monday-abbreviation=M (Automatic Copy)
 monitoring=Overvågning
 month=Måned
 month-abbreviation=m (Automatic Copy)
+month-position=Month Position (Automatic Copy)
 month-s=måned(s)
 monthly=Månedlig
 monthly-payment=Månedlig Payment
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Flere rækker i bunden.
 more-x-results=Flere {0} resultater
 move=Flyt
 move-column=Flyt kolonne
+move-down=Move Down (Automatic Copy)
 move-files=Flyt filer
 move-page=Flyt side
 move-selected-item-in-x-one-position-down=Flyt valgte elementer i {0} en position ned.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Flyt valgte elementer fra {0} til {1}.
 move-thread=Flyt tråd
 move-to=Flyt til
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Footer webindhold
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Never Review (Automatic Copy)
 new=Nyheder
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=New Application Display Template (Automatic Copy)
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Ny blog Entry
 new-bookmark=Nyt bogmærke
 new-category=Ny kategori
@@ -4059,6 +4087,7 @@ pause=Pause (Automatic Copy)
 payer-email-address=Payer e-mail-adresse
 payment-gross=Payment Gross (Automatic Copy)
 payment-settings=Sideindstillinger
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal e-mail-adresse
 paypal-order=PayPal Order (Automatic Copy)
 pending=Pending (Automatic Copy)
@@ -4389,6 +4418,7 @@ pop-up=Pop Up (Automatic Copy)
 port=Skriv
 portal=Portal (Automatic Copy)
 portal-data=Portal-data
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Portal forekomster
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Principal (Automatic Copy)
 print=Mal
 print-x-x=Rediger <span class="{0}">{1}</span>
 priority=Priority (Automatic Copy)
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privat
 private-node=Private sider
 private-nodes=Private sider
@@ -4552,6 +4585,7 @@ purchase-order=Purchase Order (Automatic Copy)
 px=px (Automatic Copy)
 quantity=Quantity (Automatic Copy)
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Husk mig
 reminder=Reminder (Automatic Copy)
 reminder-queries=Reminder Queries (Automatic Copy)
 reminder-query-and-answer-cannot-be-empty=Reminder query and answer cannot be empty. (Automatic Copy)
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Remote Host/IP (Automatic Copy)
 remote-live=Remote Live (Automatic Copy)
 remote-live-connection-settings=Remote Live Connection Settings (Automatic Copy)
@@ -4714,6 +4749,7 @@ reply=Reply (Automatic Copy)
 reply-all=Reply All (Automatic Copy)
 reply-as=Reply as... (Automatic Copy)
 reply-as-anonymous=Reply as Anonymous (Automatic Copy)
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Reply Comments (Automatic Copy)
 reply-date=Reply Date (Automatic Copy)
 reply-membership-request-for-x=Reply Membership Request for {0} (Automatic Copy)
@@ -4816,6 +4852,9 @@ rich=Rich (Automatic Copy)
 rich-text-format=Rich Text Format (Automatic Copy)
 ridge=Ridge (Automatic Copy)
 right=Højre
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robots (Automatic Copy)
 role=Rolle
 role-name=Rollenavn
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Søg
 search-all-organizations=Søg alle organisationer
 search-all-users=Søg alle brugere
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Søg applikationer (søger mens der indtastes).
 search-bookmarks=Søg bogmærker
 search-by-id-or-url=Søg efter ID eller URL
 search-categories=Søg kategorier
 search-configuration=Standard konfiguration
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string. (Automatic Copy)
+search-content=Search Content (Automatic Copy)
 search-coupons=Søg kuponer
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Vælg venligst a valid type.
@@ -4918,6 +4959,7 @@ search-operator=Søg Operator
 search-orders=Søg ordrer
 search-organizations=Søg organisationer
 search-pages=Søg sider
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Søg adgangskodepolitikker
 search-plugins=Søg udvidelser
 search-products=Søg produkter
@@ -4966,6 +5008,7 @@ select-a-page=Valgt side
 select-a-site=Vælg et websted
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Vælg en struktur for at filtrere webindholdslisten efter en struktur.
 select-a-type=Vælg en type
+select-all=Select All (Automatic Copy)
 select-an-action-type=Vælg en handlingstype
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Vælg en eksisterende liste eller tilføj en liste til visning i denne portlet.
 select-and-copy=Vælg og kopier
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Vælg oortlet
 select-question=Select Question (Automatic Copy)
 select-recipients=Vælg modtagere
+select-search=Select Search (Automatic Copy)
 select-site=Vælg et websted
 select-tags=Vælg Tags
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Vælg the action that this role can perform on the <em>{0}</em> portlet.
@@ -5078,6 +5122,7 @@ servers=Servers (Automatic Copy)
 service=Tjeneste
 service-account=Tjeneste-konto
 service-password=Tjeneste-adgangskode
+service-search=Service Search (Automatic Copy)
 service-url=Tjeneste-URL
 service-url-for-opensso-help=Denne URL er hvor OpenSSO kan tilgåes for autentificerede webtjenester. Hvis du benytter OpenSSO Express 8 eller nyere, skal serveren benytte Java 6.
 services=Tjenester
@@ -5287,15 +5332,19 @@ sku=SKU (Automatic Copy)
 skus=SKUs (Automatic Copy)
 skype=Skype (Automatic Copy)
 skyscraper=Skyscraper (Automatic Copy)
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovak (Automatic Copy)
 small=Small (Automatic Copy)
+small-file=Small File (Automatic Copy)
 small-image=Small Image (Automatic Copy)
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=Small Image URL (Automatic Copy)
 small-rectangle=Small Rectangle (Automatic Copy)
 small-square=Small Square (Automatic Copy)
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=SMS Messenger ID (Automatic Copy)
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=I morgen
 ton=Ton (Automatic Copy)
 tools=Værktøjer
 top=Top (Automatic Copy)
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level organisationer
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Top Posters (Automatic Copy)
 top-users-out-of-x=Top users out of {0}. (Automatic Copy)
 topic=Emne
@@ -6693,6 +6745,7 @@ with-scope=with scope (Automatic Copy)
 withdraw-submission=Withdraw Submission (Automatic Copy)
 within=Within (Automatic Copy)
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Word Search (Automatic Copy)
 word-spacing=Word Spacing (Automatic Copy)
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV: (Automatic Copy)
 yard=Yard (Automatic Copy)
 year=År
 year-abbreviation=å
+year-position=Year Position (Automatic Copy)
 year-s=år
 year-to-date=År til dato
 yearly=Årlig
