--- a/portal-impl/src/content/Language_de.properties
+++ b/portal-impl/src/content/Language_de.properties
@@ -888,6 +888,7 @@ always=Immer
 always-use-my-user-id=Verwende immer meinen Benutzernamen.
 am=Vormittags
 am-pm=AM/PM
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Amerika
 amount=Menge
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Ein Konto mit {0} als E-Mail-Adresse ist bereits im Portal vorhanden. Möchten Sie diese Aktivität mit dem entsprechenden Konto verknüpfen?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Unerwarteter Fehler bei der Anmeldung.
 an-unexpected-system-error-occurred=Unerwarteter Systemfehler.
 analytics=Analytik
 and=und
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=und dann nach
 and-x-more=und {0} mehr.
 anniversary=Jubiläum
@@ -1308,6 +1311,9 @@ border-styles=Rahmenstile
 border-styling=Rahmenstyling
 border-width=Rahmenbreite
 bottom=Unterseite
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Niederlassung
 branches=Niederlassungen
 breadcrumb=Breadcrumb (Wo bin ich?)
@@ -1372,6 +1378,7 @@ cas-server-name-help=Dies aktiviert Deeplinking innerhalb des Portals (z.B. http
 cas-server-url-help=Die CAS-Server-URL.
 cas-service-url-help=Dies deaktivert Deeplinking innerhalb des Portals (z.B. http://localhost:8080/c/portal/login). Lassen Sie dies leer, wenn der CAS-Servername konfiguriert wurde.
 categories=Kategorien
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategorien und Nachrichten
 categories[message-board]=Kategorien
 categorization=Kategorisierung
@@ -1383,6 +1390,8 @@ category-services=Category Services
 category-sets=Kategorienmenge
 category[message-board]=Kategorie
 cc=CC
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Finden
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Kapitel
 chapters=Kapitel
 characters-maximum=Maximale Zeichenanzahl
 chart=Diagramm
+chart-type=Chart Type (Automatic Copy)
 chart-width=Diagramm-Breite
 charts=Diagramme
 chat=Unterhaltung
@@ -1745,6 +1755,7 @@ custom-message=Benutzerdefinierte Nachricht
 custom-portlet-xml=Benutzerdefinierte portlet.xml
 custom-question=Benutzerdefinierte Frage
 custom-range=Benutzerdefinierter Bereich
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Benutzerdefinierte Attribute
 custom-user-attributes-help=Durch Angabe benutzerdefinierter Attribute werden Assets der entsprechenden Kategorie angezeigt. Kategorien müssen aus dem globalen Kontext stammen.
 custom.field.boolean=True/False
@@ -1986,6 +1997,7 @@ disk=Datenträger
 dismiss=Verwerfen
 display=Anzeige
 display-a-datepicker=Datumsauswahl anzeigen
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Weitere Aktivitäts-Zähler anzeigen
 display-as-tooltip=Anzeige als Tooltip
 display-asset-categories-facet=Kategorienfacette anzeigen
@@ -2480,7 +2492,9 @@ finished=Fertig
 firm-name=Firmenname
 firms=Firmen
 first=Erste
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Erste Nachricht
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Vorname
 first-name-attribute=Vorname-Attribut
 first-thread=Erster Thread
@@ -2995,6 +3009,7 @@ language-to=Zielsprache
 language-type=Sprachart
 languages=Sprachen
 large=Groß
+large-file=Large File (Automatic Copy)
 large-image=Großes Bild
 large-image-url=URL großes Bild
 large-rectangle=Großes Viereck
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Layoutvorlagen-Plugin
 layout-template-plugins=Layoutvorlagen-Plugins
 layout-templates=Layoutvorlage
@@ -3087,6 +3103,9 @@ leave-site=Site verlassen
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Dieses Feld leer lassen, wenn die SKU für den Gutschein nicht überprüft wird.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Dieses Feld leer lassen, wenn übergeordnete Kategorien eines Artikels für den Gutschein nicht überprüft werden.
 left=Links
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Rechtliche ID
 legal-name=Rechtlicher Name
 legal-type=Rechtlicher Typ
@@ -3161,6 +3180,7 @@ lockout-duration-help=Die Dauer, für die das Konto eines Benutzers gesperrt ist
 lockout-enabled=Sperren erlaubt
 lockout-enabled-help=Bei Auswahl dieser Option hat ein Benutzer eine bestimmte Anzahl von Anmeldeversuchen, bevor sein Konto gesperrt wird.
 log-levels=Loglevel
+logger-name=Logger Name (Automatic Copy)
 login=Anmelden
 login-through-facebook=Über Facebook anmelden
 login-url=Anmelde-URL
@@ -3280,6 +3300,7 @@ maybe-attending=Möglicherweise teilnehmend
 me=Ich
 media-files-must-be-one-of-the-following-formats=Mediendateien müssen eines der folgenden Formate haben:
 medium=Mittel
+medium-file=Medium File (Automatic Copy)
 medium-image=Mittelgroßes Bild
 medium-image-url=URL mittelgroßes Bild
 medium-rectangle=Mittleres Viereck
@@ -3296,6 +3317,8 @@ membership-type-private-help=Benutzern ist es nicht erlaubt Mitgliedschaften anz
 membership-type-restricted-help=Benutzern ist es erlaubt Mitgliedschaften anzufragen. Die Anfrage muss von einem Administrator überprüft werden.
 memberships=Mitgliedschaften
 memory=Speicher
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menü
 merge=Zusammenführen
 merge-data=Daten zusammenführen
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Öffentliche Seiten {0} zusammenfassen
 merged-from-x-x=(Zusammengeführt aus {0}, {1})
 message=Nachricht
 message-added-email=E-Mail: Nachricht hinzugefügt
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Forum-Nachricht
 message-boards-home=Forum - Startseite
 message-boards-message-anonymous-help=Bei Auswahl dieser Option wird diese Nachricht anonyme erstellt..
@@ -3543,6 +3567,7 @@ monday-abbreviation=Mo
 monitoring=Überwachung
 month=Monat
 month-abbreviation=M
+month-position=Month Position (Automatic Copy)
 month-s=Monat(e)
 monthly=Monatlich
 monthly-payment=Monatliche Zahlung
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Mehr Zeilen weiter unten.
 more-x-results=Mehr {0} Ergebnisse
 move=Verschieben
 move-column=Spalte verschieben
+move-down=Move Down (Automatic Copy)
 move-files=Dateien verschieben
 move-page=Seite verschieben
 move-selected-item-in-x-one-position-down=Das in {0} ausgewählte Element um eine Position nach unten verschieben.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Das ausgewählte Element von {0} nach {1} versch
 move-thread=Thread verschieben
 move-to=Verschieben nach
 move-to-the-recycle-bin=In Papierkorb verschieben
+move-up=Move Up (Automatic Copy)
 move-web-content=Webcontent verschieben
 move-x=Bewege {0}
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Niemals rezensieren
 new=Neu
 new-action-for-x=Neue Aktion für {0}
 new-application-display-template=Darstellungsvorlage für Anwendungen hinzufügen
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Neuer Blogeintrag
 new-bookmark=Neues Lesezeichen
 new-category=Neue Kategorie
@@ -4059,6 +4087,7 @@ pause=Pause
 payer-email-address=E-Mail-Adresse des Zahlenden
 payment-gross=Brutto Zahlung
 payment-settings=Zahlungs-Einstellungen
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal-E-Mail-Adresse
 paypal-order=PayPal-Bestellung
 pending=Anstehend
@@ -4389,6 +4418,7 @@ pop-up=Popup
 port=Posten
 portal=Portal
 portal-data=Portaldaten
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Portal Instanzen
 portal-instance-help=Repräsentiert die aktuelle Portalinstanz.
 portal-instance-id=Bezeichner der Portalinstanz
@@ -4473,6 +4503,9 @@ principal=Prinzipal
 print=Drucken
 print-x-x=<span class="{0}">{1}</span> drucken
 priority=Priorität
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privat
 private-node=Privater Knoten
 private-nodes=Private Knoten
@@ -4552,6 +4585,7 @@ purchase-order=Kaufauftrag
 px=px
 quantity=Anzahl
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=Bei Auswahl dieser Option werden Abfragen, die den Schwellwert erreichen, indiziert und Benutzern als ähnliche Abfragen oder Teil der automatischen Vervollständigung angezeigt.
 query-indexing-threshold=Suchindex-Schwellenwert
 query-indexing-threshold-help=Wenn die Anzahl der Suchergebnisse den Schwellwert erreicht, wird die Anfrage indiziert und Benutzer mit ähnlichen Suchanfragen vorgeschlagen.
@@ -4669,6 +4703,7 @@ remember-me=Anmeldedaten speichern
 reminder=Anzeige
 reminder-queries=Erinnerungsfragen
 reminder-query-and-answer-cannot-be-empty=Erinnerungsfrage und -antwort können nicht leer sein.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Host/IP des Remoteservers
 remote-live=Remote-Livesystem
 remote-live-connection-settings=Verbindungseinstellungen für Remote-Livesystem
@@ -4714,6 +4749,7 @@ reply=Antworten
 reply-all=Allen Antworten
 reply-as=Antworten als...
 reply-as-anonymous=Anonym antworten
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Antwort-Kommentare
 reply-date=Antwort-Datum
 reply-membership-request-for-x=Antwort auf Mitgliedschaftsanfrage für {0}
@@ -4816,6 +4852,9 @@ rich=Reich
 rich-text-format=Rich Text Format
 ridge=Berggrad
 right=Rechts
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robots
 role=Rolle
 role-name=Rollenname
@@ -4886,12 +4925,14 @@ script-file=Scriptdatei
 search=Suchen
 search-all-organizations=Alle Organisationen durchsuchen
 search-all-users=Alle Benutzer durchsuchen
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Nach Anwendungen suchen (sucht während Sie tippen).
 search-bookmarks=Lesezeichen durchsuchen
 search-by-id-or-url=Nach ID oder URL suchen
 search-categories=Kategorien durchsuchen
 search-configuration=Konfiguration der Suche
 search-configuration-help=Vorbelegung der erweiterten Sucheinstellungen mit Hilfe einer gültigen Zeichenkette im JSON-Format.
+search-content=Search Content (Automatic Copy)
 search-coupons=Gutscheine durchsuchen
 search-custom-range-date-format=Bitte geben Sie ein Datum in folgendem Format an: JJJJ-MM-TT
 search-custom-range-invalid-date-range=Bitte wählen Sie einen gültigen Datumsbereich.
@@ -4918,6 +4959,7 @@ search-operator=Suchoperator
 search-orders=Aufträge suchen
 search-organizations=Organisationen durchsuchen
 search-pages=Seiten durchsuchen
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Kennwortrichtlinien durchsuchen
 search-plugins=Plugins durchsuchen
 search-products=Produkte durchsuchen
@@ -4966,6 +5008,7 @@ select-a-page=Seite auswählen
 select-a-site=Wählen Sie eine Site aus
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Wählen Sie eine Struktur nach der die Webcontentliste gefiltert werden soll.
 select-a-type=Wählen Sie einen Typ aus
+select-all=Select All (Automatic Copy)
 select-an-action-type=Wählen Sie einen Aktionstyp aus
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Wählen Sie eine existierende Liste aus oder erstellen Sie eine Liste die in diesem Portlet angezeigt werden soll.
 select-and-copy=Auswählen und Kopieren
@@ -4997,6 +5040,7 @@ select-parent-site=Übergeordnete Site auswählen
 select-portlet=Portlet auswählen
 select-question=Frage auswählen
 select-recipients=Empfänger auswählen
+select-search=Select Search (Automatic Copy)
 select-site=Wählen Sie eine Site aus
 select-tags=Schlagwörter auswählen
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Aktion auswählen, die mit dieser Rolle im Portlet <em>{0}</em> ausgeführt werden darf.
@@ -5078,6 +5122,7 @@ servers=Server
 service=Service
 service-account=Service-Konto
 service-password=Service-Kennwort
+service-search=Service Search (Automatic Copy)
 service-url=Service-URL
 service-url-for-opensso-help=Unter dieser URL findet sich der Zugang zu OpenSSO für die Web Services Authentifizierung. Wenn Sie mit OpenSSO Express 8 oder späteren Versionen arbeiten sollte auf dem Server Java 6 laufen.
 services=Service
@@ -5287,15 +5332,19 @@ sku=SKU
 skus=SKUs
 skype=Skype
 skyscraper=Wolkenkratzer
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovakisch
 small=Klein
+small-file=Small File (Automatic Copy)
 small-image=Kleines Bild
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL kleines Bild
 small-rectangle=Kleines Viereck
 small-square=Kleines Quadrat
 smartphone=Smartphone
 sms=SMS
 sms-messenger-id=SMS-Messaging-ID
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=Mal
 social-activity-limit-type-times-a-day=Mal pro Tag
 social-activity-limit-type-times-per-period=Mal im Zeitraum
@@ -6197,8 +6246,11 @@ tomorrow=Morgen
 ton=Tonne
 tools=Werkzeuge
 top=Oben
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Oberste Ebene
 top-level-organizations=Oberste Organisationsebene
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Top-Autoren
 top-users-out-of-x=Top Benutzer von {0}.
 topic=Thema
@@ -6693,6 +6745,7 @@ with-scope=mit Geltungsbereich
 withdraw-submission=Einsendung zurückziehen
 within=Innerhalb
 within-x=Innerhalb von {0}
+word=Word (Automatic Copy)
 word-search=Wortsuche
 word-spacing=Wortabstand
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV:
 yard=Garten
 year=Jahr
 year-abbreviation=j
+year-position=Year Position (Automatic Copy)
 year-s=Jahr(e)
 year-to-date=Laufendes Jahr
 yearly=Jährlich
