--- a/portal-impl/src/content/Language_es.properties
+++ b/portal-impl/src/content/Language_es.properties
@@ -888,6 +888,7 @@ always=Siempre
 always-use-my-user-id=Usar siempre mi identificador de usuario.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Rankings de Amazon (Automatic Translation)
 americas=Américas
 amount=Cantidad
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Ya existe una cuenta con la dirección de correos {0}. ¿Quiere asociar esta actividad con dicha cuenta?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Se ha producido un error inesperado en el p
 an-unexpected-system-error-occurred=Se ha producido un error inesperado del sistema.
 analytics=Estadísticas
 and=y
+and-operator=Y el operador (Automatic Translation)
+and-or-operator=Y/o operador (Automatic Translation)
 and-then-by=y después por
 and-x-more=y {0} más.
 anniversary=Aniversario
@@ -1308,6 +1311,9 @@ border-styles=Estilos del borde
 border-styling=Estilos del borde
 border-width=Anchura del borde
 bottom=Abajo
+bottom-border-unit=Unidad de frontera inferior (Automatic Translation)
+bottom-margin-unit=Unidad de margen inferior (Automatic Translation)
+bottom-padding-unit=Unidad de acolchado inferior (Automatic Translation)
 branch=Rama
 branches=Ramas
 breadcrumb=Camino de migas
@@ -1372,6 +1378,7 @@ cas-server-name-help=Establezca esto para activar el enlazado profundo en el por
 cas-server-url-help=Establezca la URL del dominio del servidor CAS.
 cas-service-url-help=Establezca esto para desactivar el enlazado profundo en el portal (e.g. http://localhost:8080). No establezca esto si la URL del servicio CAS ha sido establecida.
 categories=Categorías
+categories-admin-select-search=Búsqueda de categorías seleccione Admin (Automatic Translation)
 categories-and-messages=Categorías y mensajes
 categories[message-board]=Categorías
 categorization=Clasificación
@@ -1383,6 +1390,8 @@ category-services=Servicios de categorías
 category-sets=Conjuntos de categorías
 category[message-board]=Categoría
 cc=Cc
+cc-exp-month=Mes de vencimiento CC (Automatic Translation)
+cc-exp-year=Año de expiración CC (Automatic Translation)
 cc_amex=American Express
 cc_discover=Discover
 cc_mastercard=Mastercard
@@ -1428,6 +1437,7 @@ chapter=Capítulo
 chapters=Capítulos
 characters-maximum=Número máximo de caracteres
 chart=Gráfico
+chart-type=Tipo de gráfico (Automatic Translation)
 chart-width=Anchura del gráfico
 charts=Gráficas
 chat=Gráfico
@@ -1745,6 +1755,7 @@ custom-message=Mensaje
 custom-portlet-xml=portlet.xml personalizado
 custom-question=Pregunta personalizada
 custom-range=Rango personalizado
+custom-title=Título personalizado (Automatic Translation)
 custom-user-attributes=Campos personalizados
 custom-user-attributes-help=Especificar los atributos personalizados del usuario devolverá los contenidos que coincidan en su categorización. Las categorías deben ser del contexto global.
 custom.field.boolean=Verdadero/falso
@@ -1986,6 +1997,7 @@ disk=Disco
 dismiss=Ignorar
 display=Presentación
 display-a-datepicker=Mostrar un selector de fecha
+display-activity-counter-name=Nombre para mostrar actividad contador (Automatic Translation)
 display-additional-activity-counters=Mostrar los contadores adicionales de actividad
 display-as-tooltip=Mostrar como un Tooltip
 display-asset-categories-facet=Mostrar filtros de categorías
@@ -2480,7 +2492,9 @@ finished=Terminar
 firm-name=Nombre de la compañía
 firms=Compañías
 first=Primero
+first-day-of-week=Primer día de la semana (Automatic Translation)
 first-message=Primer mensaje
+first-month-of-year=Primer mes del año (Automatic Translation)
 first-name=Nombre
 first-name-attribute=Atributo para el nombre
 first-thread=Primer hilo
@@ -2995,6 +3009,7 @@ language-to=Al lenguaje
 language-type=Tipo de lenguaje
 languages=Idiomas
 large=Más grande
+large-file=Archivos de gran tamaño (Automatic Translation)
 large-image=Imagen grande
 large-image-url=URL de la imagen grande
 large-rectangle=Rectángulo grande
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 columnas (70/30) (Automatic Translation)
 layout-template-3-2-3-columns=3-2-3 columnas (Automatic Translation)
 layout-template-3-columns=3 columnas (Automatic Translation)
 layout-template-freeform=FreeForm (Automatic Translation)
+layout-template-id=ID de plantilla de diseño (Automatic Translation)
 layout-template-plugin=Plugin de plantilla de página
 layout-template-plugins=Plugins de plantilla de página
 layout-templates=Plantillas de página
@@ -3087,6 +3103,9 @@ leave-site=Desvincularse del sitio web
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Deje este espacio en blanco si el cupón no coincide con el SKU del artículo.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Deje este espacio en blanco si el cupón no coincide con alguna de las categorías del artículo.
 left=Izquierda
+left-border-unit=Borde izquierdo unidad (Automatic Translation)
+left-margin-unit=Margen izquierda unidad (Automatic Translation)
+left-padding-unit=Acolchado de izquierda unidad (Automatic Translation)
 legal-id=Identificador legal
 legal-name=Nombre legal
 legal-type=Tipo legal
@@ -3161,6 +3180,7 @@ lockout-duration-help=Determina la cantidad de tiempo que la cuenta de un usuari
 lockout-enabled=Habilitar bloqueo
 lockout-enabled-help=Si se selecciona esta opción, se bloqueará la cuenta de un usuario si supera el límite de intentos de entrada fallidos.
 log-levels=Niveles de trazas
+logger-name=Nombre del registrador (Automatic Translation)
 login=Acceso
 login-through-facebook=Acceso mediante Facebook
 login-url=URL de autenticación
@@ -3280,6 +3300,7 @@ maybe-attending=Quizá atiendan
 me=Yo
 media-files-must-be-one-of-the-following-formats=Los ficheros multimedia deben ser de alguno de los siguiente formatos:
 medium=Medio
+medium-file=Escofina (Automatic Translation)
 medium-image=Imagen de tamaño mediano
 medium-image-url=URL de la imagen de tamaño mediano
 medium-rectangle=Rectángulo mediano
@@ -3296,6 +3317,8 @@ membership-type-private-help=No se permite a los usuarios solicitar pertenecer. 
 membership-type-restricted-help=Los usuarios pueden solicitar pertenecer. La petición tendrá que ser aprobada por el administrador del sitio.
 memberships=Miembros
 memory=Memoria
+memory-used-vs-max-memory=Memoria utilizada vs Max Memory (Automatic Translation)
+memory-used-vs-total-memory=Memoria utilizada vs memoria Total (Automatic Translation)
 menu=Menú
 merge=Fusión
 merge-data=Mezclar datos
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Fusionar {0} páginas públicas
 merged-from-x-x=(Fusionado desde {0}, {1})
 message=Mensaje
 message-added-email=Notificación de mensaje añadido
+message-attachment=Adjunto de un mensaje (Automatic Translation)
 message-board-messages=Mensajes del foro
 message-boards-home=Inicio
 message-boards-message-anonymous-help=Si esta opción está seleccionada, el mensaje se mostrará como anónimo.
@@ -3543,6 +3567,7 @@ monday-abbreviation=L
 monitoring=Supervisión
 month=Mes
 month-abbreviation=m
+month-position=Posición del mes (Automatic Translation)
 month-s=mes(es)
 monthly=Mensual
 monthly-payment=Cuota mensual
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Más filas por abajo.
 more-x-results={0} resultados más
 move=Mover
 move-column=Mover la columna
+move-down=Mover hacia abajo (Automatic Translation)
 move-files=Eliminar archivos
 move-page=Mover página
 move-selected-item-in-x-one-position-down=Mover elemento seleccionado en {0} una posición hacia abajo.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Mover los elementos seleccionados de {0} a {1}.
 move-thread=Mover hilo de discusión
 move-to=Mover a
 move-to-the-recycle-bin=Enviar a la papelera
+move-up=Mueva hacia arriba (Automatic Translation)
 move-web-content=Mover el contenido web.
 move-x=Mover {0}
 movie=Película
@@ -3616,6 +3643,7 @@ never-review=No revisado
 new=Nuevo
 new-action-for-x=Nueva acción para {0}
 new-application-display-template=Nueva plantilla de aplicación
+new-article-id=Nuevo artículo ID (Automatic Translation)
 new-blog-entry=Nueva entrada de blog
 new-bookmark=Nuevo enlace
 new-category=Nueva categoría
@@ -4059,6 +4087,7 @@ pause=Pausa
 payer-email-address=Dirección de correo del pagador
 payment-gross=Importe bruto
 payment-settings=Configuración del pago
+paypal=PayPal (Automatic Translation)
 paypal-email-address=Dirección de correo electrónico de PayPal
 paypal-order=Pedido de PayPal
 pending=Pendiente
@@ -4389,6 +4418,7 @@ pop-up=Ventana emergente
 port=Puerto
 portal=Portal
 portal-data=Datos del portal
+portal-ext=Portal EXT (Automatic Translation)
 portal-instance=Instancia de portal
 portal-instance-help=Objeto que representa la instancia de portal actual.
 portal-instance-id=Identificador de instancia de portal
@@ -4473,6 +4503,9 @@ principal=Principal
 print=Imprimir
 print-x-x=Imprimir <span class="{0}">{1}</span>
 priority=Prioridad
+priority-image=Imagen de prioridad (Automatic Translation)
+priority-name=Nombre de prioridad (Automatic Translation)
+priority-value=Valor de prioridad (Automatic Translation)
 private=Privado
 private-node=Nodo privado
 private-nodes=Nodos privados
@@ -4552,6 +4585,7 @@ purchase-order=Orden de compra
 px=px
 quantity=Cantidad
 query=Consulta (Automatic Translation)
+query-contains=Consulta contiene (Automatic Translation)
 query-indexing-enabled-help=Si se selecciona, las consultas que superen el umbral serán indexadas y sugeridas a los usuarios como consultas relacionadas o como sugerencias para auto-completar.
 query-indexing-threshold=Umbral para indexado de consultas
 query-indexing-threshold-help=Si el número de resultados de búsqueda alcanza este umbral, la consulta es indexada y sugerida a los usuarios cuando realizan consultas similares.
@@ -4669,6 +4703,7 @@ remember-me=Recuérdame
 reminder=Pregunta de seguridad
 reminder-queries=Preguntas de seguridad
 reminder-query-and-answer-cannot-be-empty=La pregunta y la respuesta seguridad no pueden estar vacías.
+reminder-query-question=Recordatorio consulta pregunta (Automatic Translation)
 remote-host-ip=IP del servidor remoto
 remote-live=Entorno Live remoto
 remote-live-connection-settings=Configuración de conexión con el entorno Live remoto
@@ -4714,6 +4749,7 @@ reply=Responder
 reply-all=Responder a todos
 reply-as=Contestar como...
 reply-as-anonymous=Responder como anónimo
+reply-body=Cuerpo de la respuesta (Automatic Translation)
 reply-comments=Comentarios de la contestación
 reply-date=Fecha de la contestación
 reply-membership-request-for-x=Contestar a la solicitud de membresía de {0}
@@ -4816,6 +4852,9 @@ rich=Avanzado
 rich-text-format=Formato de texto enriquecido
 ridge=Efecto 3D de borde saliente (ridge)
 right=Derecha
+right-border-unit=Borde derecho unidad (Automatic Translation)
+right-margin-unit=Margen derecha unidad (Automatic Translation)
+right-padding-unit=Unidad de relleno adecuado (Automatic Translation)
 robots=Robots
 role=Rol
 role-name=Nombre del rol
@@ -4886,12 +4925,14 @@ script-file=Archivo de script
 search=Buscar
 search-all-organizations=Buscar organizaciones
 search-all-users=Buscar usuarios
+search-application=Aplicación de búsqueda (Automatic Translation)
 search-applications-searches-as-you-type=Buscar(búsqueda incremental).
 search-bookmarks=Buscar enlaces
 search-by-id-or-url=Búscar por ID o URL
 search-categories=Buscar categorías
 search-configuration=Configuración de búsqueda
 search-configuration-help=Este campo se usa para aplicar configuraciones avanzadas de búsqueda en forma de cadena JSON.
+search-content=Contenido de búsqueda (Automatic Translation)
 search-coupons=Buscar cupones
 search-custom-range-date-format=Por favor, introduzca una fecha con formato: AAAA-MM-DD
 search-custom-range-invalid-date-range=Por favor, seleccione un rango de fechas válido.
@@ -4918,6 +4959,7 @@ search-operator=Operador de búsqueda
 search-orders=Buscar pedidos
 search-organizations=Buscar organizaciones
 search-pages=Buscar páginas
+search-panel=Panel de búsqueda (Automatic Translation)
 search-password-policies=Buscar políticas de contraseñas
 search-plugins=Buscar plugins
 search-products=Buscar productos
@@ -4966,6 +5008,7 @@ select-a-page=Seleccione una página
 select-a-site=Seleccione un sitio
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Seleccione una estructura para filtrar la lista de contenidos web por estructura.
 select-a-type=Seleccione un tipo
+select-all=Seleccionar todo (Automatic Translation)
 select-an-action-type=Seleccione un tipo de acción
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Seleccione una lista existente o añada una lista para ser mostrada en esta aplicación.
 select-and-copy=Seleccionar y copiar
@@ -4997,6 +5040,7 @@ select-parent-site=Seleccionar sitio padre
 select-portlet=Seleccionar portlet
 select-question=Seleccionar pregunta
 select-recipients=Seleccionar destinatarios
+select-search=Seleccione búsqueda (Automatic Translation)
 select-site=Seleccionar sitio
 select-tags=Seleccionar etiquetas
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Seleccione la acción que este rol puede llevar a cabo en el portlet <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Servidores
 service=Servicio
 service-account=Cuenta de servicio
 service-password=Contraseña de servicio
+service-search=Búsqueda de (Automatic Translation)
 service-url=URL del servicio
 service-url-for-opensso-help=OpenSSO será accedio desde esta URL para usar los servicios web de autenticación. Si usas OpenSSO Express 8 o posterior, es necesario que el servidor se ejecute con Java 6.
 services=Servicios
@@ -5287,15 +5332,19 @@ sku=Ref.
 skus=Refs.
 skype=Skype
 skyscraper=Rascacielos
+slide-show=Presentación de diapositivas (Automatic Translation)
 slovak=Eslovaco
 small=Pequeño
+small-file=Archivo pequeño (Automatic Translation)
 small-image=Imagen pequeña
+small-image-file=Imagen pequeña (Automatic Translation)
 small-image-url=URL de la imagen pequeña
 small-rectangle=Rectángulo pequeño
 small-square=Cuadrado pequeño
 smartphone=Smartphone
 sms=SMS
 sms-messenger-id=Identificador SMS
+sms-sn=Nombre de pantalla SMS (Automatic Translation)
 social-activity-limit-type-times=veces
 social-activity-limit-type-times-a-day=veces por día
 social-activity-limit-type-times-per-period=veces por periodo
@@ -6197,8 +6246,11 @@ tomorrow=Mañana
 ton=Tonelada
 tools=Herramientas
 top=Arriba
+top-border-unit=Borde superior unidad (Automatic Translation)
 top-level=Primer nivel
 top-level-organizations=Organizaciones de primer nivel
+top-margin-unit=Margen superior unidad (Automatic Translation)
+top-padding-unit=Unidad de relleno superior (Automatic Translation)
 top-posters=Usuarios más activos
 top-users-out-of-x=Usuarios más activos (de {0}).
 topic=Tema
@@ -6693,6 +6745,7 @@ with-scope=con ámbito
 withdraw-submission=Retirar la solicitud
 within=Dentro
 within-x=Dentro de {0}
+word=Palabra (Automatic Translation)
 word-search=Búsqueda por palabras
 word-spacing=Espacio entre palabras
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=CSV de Yahoo!:
 yard=Yarda
 year=Año
 year-abbreviation=a
+year-position=Año posición (Automatic Translation)
 year-s=año(s)
 year-to-date=Año hasta la fecha
 yearly=Anualmente
