--- a/portal-impl/src/content/Language_et.properties
+++ b/portal-impl/src/content/Language_et.properties
@@ -888,6 +888,7 @@ always=Alati
 always-use-my-user-id=Kasuta alati mu kasutaja ID-d.
 am=AM (Automatic Copy)
 am-pm=AM/PM (Automatic Copy)
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Põhja- ja Lõuna-Ameerika
 amount=Summa
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=An account with {0} as the email address already exists in the portal. Do you want to associate this activity with that account? (Automatic Copy)
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Sisselogimisel tekkis ootamatu viga.
 an-unexpected-system-error-occurred=Tekkis ootamatu süsteemiviga.
 analytics=Analytics (Automatic Copy)
 and=Ja
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=And Then By (Automatic Copy)
 and-x-more=and {0} more. (Automatic Copy)
 anniversary=Aastapäev
@@ -1308,6 +1311,9 @@ border-styles=Raami stiilid
 border-styling=Raami kujundus
 border-width=Raami laius
 bottom=Põhi
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Branch (Automatic Copy)
 branches=Branches (Automatic Copy)
 breadcrumb=Navigatsiooni rada
@@ -1372,6 +1378,7 @@ cas-server-name-help=Set this to enable deep linking into the portal (e.g. http:
 cas-server-url-help=Set the CAS server domain URL. (Automatic Copy)
 cas-service-url-help=Set this to disable deep linking into the portal (e.g. http://localhost:8080/c/portal/login). Do not set this if the CAS server name is set. (Automatic Copy)
 categories=Kategooriad
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategooriad ja sõnumid
 categories[message-board]=Kategooriad
 categorization=Kategoriseerimine
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Kategooriate kogumid
 category[message-board]=Kategooria
 cc=CC (Automatic Copy)
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express (Automatic Copy)
 cc_discover=Discover (Automatic Copy)
 cc_mastercard=MasterCard (Automatic Copy)
@@ -1428,6 +1437,7 @@ chapter=Peatükk
 chapters=Peatükid
 characters-maximum=Tähemärkide maksimumarv
 chart=Skeem
+chart-type=Chart Type (Automatic Copy)
 chart-width=Chart Width (Automatic Copy)
 charts=Skeemid
 chat=Vestlus
@@ -1745,6 +1755,7 @@ custom-message=Kohandatud sõnum
 custom-portlet-xml=Kohandatud portlet.xml
 custom-question=Custom Question (Automatic Copy)
 custom-range=Custom Range (Automatic Copy)
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Custom User Attributes (Automatic Copy)
 custom-user-attributes-help=Specifying the custom user attributes will retrieve assets that have matching categorization. Categories must be from the global context. (Automatic Copy)
 custom.field.boolean=True/False (Automatic Copy)
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Dismiss (Automatic Copy)
 display=Kuva
 display-a-datepicker=Display a Datepicker (Automatic Copy)
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Display Additional Activity Counters (Automatic Copy)
 display-as-tooltip=Display as Tooltip (Automatic Copy)
 display-asset-categories-facet=Display Asset Categories Facet (Automatic Copy)
@@ -2480,7 +2492,9 @@ finished=Lõpetatud
 firm-name=Firma nimi
 firms=Firmad
 first=Esimene
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Esimene sõnum
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Eesnimi
 first-name-attribute=Eesnime atribuut
 first-thread=esimene teema
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=Keele tüüp
 languages=Keeled
 large=Suurem
+large-file=Large File (Automatic Copy)
 large-image=Suur pilt
 large-image-url=Large Image URL (Automatic Copy)
 large-rectangle=Suur nelinurk
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Vormingu malli plugin
 layout-template-plugins=Vormingu malli pluginad
 layout-templates=Vormingu mallsid
@@ -3087,6 +3103,9 @@ leave-site=Leave Site (Automatic Copy)
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Jäta see tühjaks, kui kupong ei kontrolli elemendi SKU'd.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Jäta see tühjaks, kui kupong ei kotrolli elemendi vanemkategooriaid.
 left=Vasak
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Legaalne ID
 legal-name=Legaalne nimi
 legal-type=Legaalne tüüp
@@ -3161,6 +3180,7 @@ lockout-duration-help=See määrab aja, mille jooksul kasutaja konto on suletud.
 lockout-enabled=Lukustamine kasutusel
 lockout-enabled-help=Kui see on märgitud, saab kasutaja teatud arvu kordi sisse logida, enne kui tema konto lukustatakse.
 log-levels=Logi tasandid
+logger-name=Logger Name (Automatic Copy)
 login=Sisselogimine
 login-through-facebook=Login through Facebook (Automatic Copy)
 login-url=Sisselogimise aadress
@@ -3280,6 +3300,7 @@ maybe-attending=Võib-olla osaleb
 me=Mina
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats: (Automatic Copy)
 medium=Keskmine
+medium-file=Medium File (Automatic Copy)
 medium-image=Keskmine pilt
 medium-image-url=Keskmise pildi aadress
 medium-rectangle=Keskmine nelinurk
@@ -3296,6 +3317,8 @@ membership-type-private-help=Users are not allowed to request membership. Only s
 membership-type-restricted-help=Users are allowed to request membership. The request will need to be approved by the site administrators. (Automatic Copy)
 memberships=Memberships (Automatic Copy)
 memory=Mälu
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Merge (Automatic Copy)
 merge-data=Ühilda andmeid
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Merge {0} public pages (Automatic Copy)
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=Sõnum
 message-added-email=Sõnumile lisatud e-post
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Foorumi teade
 message-boards-home=Foorumi teema
 message-boards-message-anonymous-help=Kui see on märgitud, postitatakse see sõnum anonüümselt.
@@ -3543,6 +3567,7 @@ monday-abbreviation=E
 monitoring=Jälgimine
 month=Kuu
 month-abbreviation=k
+month-position=Month Position (Automatic Copy)
 month-s=Kuu(d)
 monthly=Igakuine
 monthly-payment=Igakuine makse
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=More rows at bottom. (Automatic Copy)
 more-x-results=More {0} Results (Automatic Copy)
 move=Liigu
 move-column=Liiguta tulpa
+move-down=Move Down (Automatic Copy)
 move-files=Eemalda failid
 move-page=Liiguta lehte
 move-selected-item-in-x-one-position-down=Move selected item in {0} one position down. (Automatic Copy)
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Move selected items from {0} to {1}. (Automatic 
 move-thread=Liiguta teemat
 move-to=Liiguta
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Jaluse veebisisu
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Keela ülevaatus
 new=Uus
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=New Application Display Template (Automatic Copy)
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Lisa blogi kirje
 new-bookmark=Vaata järjehoidjaid
 new-category=Lisa kategooria
@@ -4059,6 +4087,7 @@ pause=Paus
 payer-email-address=Maksja e-postiaadress
 payment-gross=Makse brutosumma
 payment-settings=Maksmise seaded
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal'i e-postiaadress
 paypal-order=PayPal'i tellimus
 pending=Ootel
@@ -4389,6 +4418,7 @@ pop-up=Pop Up (Automatic Copy)
 port=Postita
 portal=Portaal
 portal-data=Portaali andmed
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Portaalid
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Põhimõte
 print=Printimine
 print-x-x=Print <span class="{0}">{1}</span> (Automatic Copy)
 priority=Prioriteet
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privaatne
 private-node=Privaatne sõlm
 private-nodes=Privaatsed sõlmed
@@ -4552,6 +4585,7 @@ purchase-order=Purchase Order (Automatic Copy)
 px=px (Automatic Copy)
 quantity=Kogus
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Mäleta mind
 reminder=Meeldetuletus
 reminder-queries=Meeldetuletuspäringud
 reminder-query-and-answer-cannot-be-empty=Meeldetuletuspäring ja vastus ei saa olle tühjad.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Kaughost/IP
 remote-live=Remote Live (Automatic Copy)
 remote-live-connection-settings=Remote Live Connection Settings (Automatic Copy)
@@ -4714,6 +4749,7 @@ reply=Vasta
 reply-all=Vasta kõigile
 reply-as=Reply as... (Automatic Copy)
 reply-as-anonymous=Vasta anonüümsena
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Vasta kommentaaridele
 reply-date=Vastamise kuupäev
 reply-membership-request-for-x=Reply Membership Request for {0} (Automatic Copy)
@@ -4816,6 +4852,9 @@ rich=Rikas
 rich-text-format=Rikasteksti formaat
 ridge=Ridge (Automatic Copy)
 right=Parem
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robotid
 role=Roll
 role-name=Rolli nimi
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Otsi
 search-all-organizations=Otsi organisatsioone
 search-all-users=Otsi kasutajaid
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Otsi rakendusi (otsib trükkimise käigus).
 search-bookmarks=Search Bookmarks (Automatic Copy)
 search-by-id-or-url=Otsi ID või aadressi järgi
 search-categories=Otsi
 search-configuration=Küljenduse seadistamine
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string. (Automatic Copy)
+search-content=Search Content (Automatic Copy)
 search-coupons=Otsi kuponge
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Vali kehtiv tüüp.
@@ -4918,6 +4959,7 @@ search-operator=Otsi operaatorit
 search-orders=Otsi tellimusi
 search-organizations=Otsi organisatsioone
 search-pages=Otsi lehti
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Otsi salasõna reegleid
 search-plugins=Otsi plugin'e
 search-products=Otsi tooteid
@@ -4966,6 +5008,7 @@ select-a-page=Valitud leht
 select-a-site=Valitud leht
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Veebisisu loendi filtreerimiseks struktuuri järgi vali struktuur.
 select-a-type=Valitud leht
+select-all=Select All (Automatic Copy)
 select-an-action-type=Select an Action Type (Automatic Copy)
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Select an existing list or add a list to be displayed in this portlet. (Automatic Copy)
 select-and-copy=Vali ja kopeeri
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Vali portlet
 select-question=Select Question (Automatic Copy)
 select-recipients=Vali saajad
+select-search=Select Search (Automatic Copy)
 select-site=Valitud leht
 select-tags=Vali sildid
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Vali tegevus, mida see roll võib <em>{0}</em> portletil ellu viia.
@@ -5078,6 +5122,7 @@ servers=Servers (Automatic Copy)
 service=Teenus
 service-account=Service Account (Automatic Copy)
 service-password=Service Password (Automatic Copy)
+service-search=Service Search (Automatic Copy)
 service-url=Teenuse URL
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6. (Automatic Copy)
 services=Teenused
@@ -5287,15 +5332,19 @@ sku=SKUd
 skus=SKUd
 skype=Skype (Automatic Copy)
 skyscraper=Pilvelõhkuja
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovakkia
 small=Small (Automatic Copy)
+small-file=Small File (Automatic Copy)
 small-image=Väike pilt
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=Väikese pildi aadress
 small-rectangle=Väike ristkülik
 small-square=Väike nelinurk
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=SMS Messenger ID (Automatic Copy)
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=Homme
 ton=Tonn
 tools=Tööriistad
 top=Üles
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level Organizations (Automatic Copy)
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Postitajate pingerida
 top-users-out-of-x=Top users out of {0}. (Automatic Copy)
 topic=Teema
@@ -6693,6 +6745,7 @@ with-scope=lUatusega
 withdraw-submission=Withdraw Submission (Automatic Copy)
 within=Piirides
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Sõnaotsing
 word-spacing=Sõnade vahe
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV: (Automatic Copy)
 yard=jard
 year=Aasta
 year-abbreviation=a
+year-position=Year Position (Automatic Copy)
 year-s=aasta(t)
 year-to-date=Year to Date (Automatic Copy)
 yearly=Iga-aastane
