--- a/portal-impl/src/content/Language_fi.properties
+++ b/portal-impl/src/content/Language_fi.properties
@@ -888,6 +888,7 @@ always=Aina
 always-use-my-user-id=Käytä aina käyttäjätunnustani.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Amerikat
 amount=Määrä
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Käyttäjätili sähköpostiosoiteella {0} löytyy jo portaalista. Haluatko liittää tämän toiminnan tähän käyttäjätiliin?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Odottamaton virhe tapahtui sisäänkirjautu
 an-unexpected-system-error-occurred=Odottamaton järjestelmävirhe on tapahtunut.
 analytics=Tilastot
 and=Ja
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=ja sitten jollekin
 and-x-more=ja {0} lisää.
 anniversary=Vuosipäivä
@@ -1308,6 +1311,9 @@ border-styles=Kehystyylit
 border-styling=Kehyksen tyylitys
 border-width=Kehysleveys
 bottom=Alas
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Haarake
 branches=Haarakkeet
 breadcrumb=Murupolku
@@ -1372,6 +1378,7 @@ cas-server-name-help=Aseta tämä mahdollistaa syvän linkkauksen portaaliin (es
 cas-server-url-help=Määritä CAS palvelimen domain URL-osoite.
 cas-service-url-help=Aseta tämä estääksesi syvän linkkauksen portaaliin (esim. http://localhost:8080/c/portal/login). Älä aseta tätä, jos CAS-palvelimen nimi on asetettu.
 categories=Luokitukset
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Aihealueet ja viestit
 categories[message-board]=Aihealueet
 categorization=Luokittelut
@@ -1383,6 +1390,8 @@ category-services=Luokittelu Services
 category-sets=Luokittelujoukot
 category[message-board]=Aihealue
 cc=Kopio
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Discover
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Kappale
 chapters=Kappaleet
 characters-maximum=Merkkiä maksimissaan
 chart=Kaavio
+chart-type=Chart Type (Automatic Copy)
 chart-width=Kaavion leveys
 charts=Kaaviot
 chat=Chatti
@@ -1745,6 +1755,7 @@ custom-message=Oma viesti
 custom-portlet-xml=Oma portlet.xml
 custom-question=Omakysymys
 custom-range=Muokattu vaihteluväli
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Käyttäjän lisäkentät
 custom-user-attributes-help=Muokattujen käyttäjätietojen määritys sisällöille joilla on yhteensopivat luokitukset. Luokitusten tulee olla Globalissa kontekstissa.
 custom.field.boolean=Kyllä/Ei
@@ -1986,6 +1997,7 @@ disk=Levy
 dismiss=Hylkää
 display=Näyttö
 display-a-datepicker=Näytä päivämäärä valitsin
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Näytä ylimääräiset aktiveetti laskurit.
 display-as-tooltip=Näytä pikaohje
 display-asset-categories-facet=Näytä Sisältö luokitusten suodattimet
@@ -2480,7 +2492,9 @@ finished=Valmis
 firm-name=Yrityksen nimi
 firms=Yritykset
 first=Ensimmäinen
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Ensimmäinen viesti
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Etunimi
 first-name-attribute=Etunimi attribuutti
 first-thread=Ensimmäinen aihe
@@ -2995,6 +3009,7 @@ language-to=Seuraavaan kieleen
 language-type=Kielityyppi
 languages=Kielet
 large=Suuri
+large-file=Large File (Automatic Copy)
 large-image=Suuri kuva
 large-image-url=Suuren kuvan URL-osoite
 large-rectangle=Suuri suorakulmio
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Sivumalli laajennus
 layout-template-plugins=Sivumalli laajennukset
 layout-templates=Leiskat
@@ -3087,6 +3103,9 @@ leave-site=Jätä sivusto
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Jätä tämä tyhjöksi jos kuponkisi ei tarkasta tuotteen SKU:ta.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Jätä tämä tyhjäksi jos kuponkisi ei tarkista tuotteen kategorioita
 left=Vasen
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Yritystunnus
 legal-name=Virallinen nimi
 legal-type=Virallinen tyyppi
@@ -3161,6 +3180,7 @@ lockout-duration-help=Tämä määrittää kuinka kauan käyttäjän tunnus on l
 lockout-enabled=Lukitus päällä
 lockout-enabled-help=Jos tämä on valittu niin käyttäjä voi yrittää kirjautua tietyn määrän kertoja ennen kuin tunnus lukitaan.
 log-levels=Logi tasot
+logger-name=Logger Name (Automatic Copy)
 login=Tunnus
 login-through-facebook=Kirjaudu käyttäen Facebookia
 login-url=Kirjautumis osoite
@@ -3280,6 +3300,7 @@ maybe-attending=Mahdollisesti osallistuu
 me=Minä
 media-files-must-be-one-of-the-following-formats=Media tiedostot täytyy olla seuraavissa formaateissa:
 medium=Keskikoko
+medium-file=Medium File (Automatic Copy)
 medium-image=Keskikokoinen kuva
 medium-image-url=Keskikoikoisen kuvan URL-osoite
 medium-rectangle=Keskikokoinen suorakulmio
@@ -3296,6 +3317,8 @@ membership-type-private-help=Käyttäjät eivät saa pyytää jäsennyyttä. Vai
 membership-type-restricted-help=Käyttäjät voivat hakea jäsennyyttä. Ylläpitäjien pitää hyväksyä jäsennyys.
 memberships=Jäsennyydet
 memory=Muisti
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Valikko
 merge=Yhdistä
 merge-data=Yhdistä data
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Yhdistä {0} julkiset sivut
 merged-from-x-x=(Yhdistetty {0}:sta, {1}:n)
 message=Viesti
 message-added-email=Viesti lisätty sähköposti
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Keskusteluryhmien viestit
 message-boards-home=Keskustelualueet etusivu
 message-boards-message-anonymous-help=Jos tämä on valittu, viesti lisätään anonyymisti.
@@ -3543,6 +3567,7 @@ monday-abbreviation=Ma
 monitoring=Seuranta
 month=Kuukausi
 month-abbreviation=kk
+month-position=Month Position (Automatic Copy)
 month-s=kuukautta
 monthly=Kuukausittain
 monthly-payment=Kuukaisittainen maksu
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Lopussa lisää rivejä.
 more-x-results=Lisää {0} Tuloksia
 move=Siirrä
 move-column=Siirrä saraketta
+move-down=Move Down (Automatic Copy)
 move-files=Poista tiedostot
 move-page=Siirrä sivu
 move-selected-item-in-x-one-position-down=Siirrä valitut kohteet {0} yhden arvon alas.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Siirä valitut kohteet {0}sta {1}en.
 move-thread=Siirrä aihetta
 move-to=Siirrä
 move-to-the-recycle-bin=Siirrä roskakoriin.
+move-up=Move Up (Automatic Copy)
 move-web-content=Siirrä Web-sisältö
 move-x=Siirrä {0}
 movie=Elokuva
@@ -3616,6 +3643,7 @@ never-review=Ei katselmointia koskaan
 new=Uusi
 new-action-for-x=Uusi toiminto [0}lle
 new-application-display-template=Uuden sovelluksen esitysmalli
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Lisää blogi-merkintä
 new-bookmark=Uusi kirjanmerkki
 new-category=Lisää luokittelu
@@ -4058,6 +4086,7 @@ pause=Keskeytä
 payer-email-address=Maksajan sähköpostiosoite
 payment-gross=Maksu brutto
 payment-settings=Maksuasetukset
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal sähköpostiosoite
 paypal-order=PayPal tilaus
 pending=Vireillä
@@ -4388,6 +4417,7 @@ pop-up=Ponnahdusikkuna
 port=Portti
 portal=Portaali
 portal-data=Portaali data
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Portaali-ilmentymät
 portal-instance-help=Tämä esittää nykyistä portaali-ilmentymää.
 portal-instance-id=Portaalin-ilmentymän yksilöintitieto
@@ -4472,6 +4502,9 @@ principal=Prinsipaali
 print=Tulosta
 print-x-x=Tulosta <span class="{0}">{1}</span>
 priority=Prioriteetti
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Yksityinen
 private-node=Yksityinen solmu
 private-nodes=Yksityiset solmut
@@ -4551,6 +4584,7 @@ purchase-order=Ostotilaus
 px=px
 quantity=Määrä
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=Tämän ollessa valittu, haut jotka täyttävät kynnysehdon tullaan indeksoimaan ja niitä tullaan ehdottamaan liittyvinä hakuina automaattisen täydennyksen yhteydessä.
 query-indexing-threshold=Haku indeksoinnin kynnysarvo.
 query-indexing-threshold-help=Haun täyttäessä kynnysarvon, haku tullaan indeksoimaan ja sitä ehdotetaan käyttäjille, jotka hakevat samantyylisillä hauilla.
@@ -4668,6 +4702,7 @@ remember-me=Muista minut
 reminder=Muistutukset
 reminder-queries=Muistutus kyselyt
 reminder-query-and-answer-cannot-be-empty=Muistutus kysely ja vastaus eivät voi olla tyhjiä.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Etäpalvelin/IP
 remote-live=Etäjulkaisu
 remote-live-connection-settings=Etäjulkaisu palvelimen yhteysasetukset
@@ -4713,6 +4748,7 @@ reply=Vastaa
 reply-all=Vastaa kaikille
 reply-as=Vastaa nimellä...
 reply-as-anonymous=Vastaa anonyymisti
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Vastaus kommentit
 reply-date=Vastauspäivä
 reply-membership-request-for-x=Vastaa {0}:n jäsennyyspyyntöön
@@ -4815,6 +4851,9 @@ rich=Rikas
 rich-text-format=Rich text muoto
 ridge=Kohoava
 right=Oikea
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robotit
 role=Rooli
 role-name=Roolin nimi
@@ -4885,12 +4924,14 @@ script-file=Skripti-tiedosto
 search=Hae
 search-all-organizations=Hae organisaatioita
 search-all-users=Hae käyttäjiä
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Hae sovelluksia (hakee sitä mukaan kuin kirjoitat)
 search-bookmarks=Hae kirjanmerkkejä
 search-by-id-or-url=Hae ID:n tai URL:n perusteella
 search-categories=Hae luokituksista
 search-configuration=Ulkoasun konfigurointi
 search-configuration-help=Tätä kenttää käytetään lisäämään lisähaku asetuksia, tiedon muoto on JSON string.
+search-content=Search Content (Automatic Copy)
 search-coupons=Hae kuponkeja
 search-custom-range-date-format=Ole hyvä ja anna päiväys, seuraavassa formaatissa: VVVV-KK-PP
 search-custom-range-invalid-date-range=Valitse kelvollinen päivämääräväli
@@ -4917,6 +4958,7 @@ search-operator=Haku operaattori
 search-orders=Hae tilauksia
 search-organizations=Hae organisaatioita
 search-pages=Hae sivuja
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Hae salasanakäytäntöjä
 search-plugins=Hae plugineja
 search-products=Hae tuotteitta
@@ -4965,6 +5007,7 @@ select-a-page=Valitse sivu
 select-a-site=Valitse sivusto
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Valitse rakenne, suodattaaksesi Web-sisältö lista rakenteen mukaan.
 select-a-type=Valitse tyyppi
+select-all=Select All (Automatic Copy)
 select-an-action-type=Valitse toiminto tyyppi
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Valitse olemassa oleva lista tai lisää uusi lista näyttääksesi sen tässä portletissa.
 select-and-copy=Valitse ja kopioi
@@ -4996,6 +5039,7 @@ select-parent-site=Valitse isäntä sivu
 select-portlet=Valitse portletti
 select-question=Valitse kysymys
 select-recipients=Valitse vastaanottajat
+select-search=Select Search (Automatic Copy)
 select-site=Valitse sivusto
 select-tags=Valitut tagit
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Valitse toiminto, jonka tämä rooli voi suorittaa portletille <em>{0}</em>.
@@ -5077,6 +5121,7 @@ servers=Palvelin
 service=Palvelu
 service-account=Palvelutili
 service-password=Palvelusalasana
+service-search=Service Search (Automatic Copy)
 service-url=Palvelun URL-osoite
 service-url-for-opensso-help=Tätä URL osoitetta OpenSSO voi käyttää web-servicen authentikointiin. Jos käytät OpenSSO Express 8 tai uudempaa, palvelimen täytyy toimia Java 6:lla.
 services=Palvelut
@@ -5286,15 +5331,19 @@ sku=SKU:t
 skus=SKU:t
 skype=Skype
 skyscraper=Pilvenpiirtäjä
+slide-show=Slide Show (Automatic Copy)
 slovak=slovakialainen
 small=Pieni
+small-file=Small File (Automatic Copy)
 small-image=Pieni kuva
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=Pienen kuvan URL-osoite
 small-rectangle=Pieni suorakulmio
 small-square=Pieni neliö
 smartphone=Älypuhelin
 sms=SMS
 sms-messenger-id=SMS viestin ID
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=kertaa
 social-activity-limit-type-times-a-day=kertaa päivässä
 social-activity-limit-type-times-per-period=kertaa kaudessa
@@ -6195,8 +6244,11 @@ tomorrow=Huomenna
 ton=Tonni
 tools=Työkalut
 top=Ylös
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Ylätaso
 top-level-organizations=Ylimmäntason organisaatiot
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Aktiivisimmat
 top-users-out-of-x=Aktiivisimmat käyttäjät {0}:sta.
 topic=Aihe
@@ -6691,6 +6743,7 @@ with-scope=laajuudella
 withdraw-submission=Peruta lähetys
 within=Välillä
 within-x=sisässä {0}
+word=Word (Automatic Copy)
 word-search=Sanahaku
 word-spacing=Sanaväli
 wordpress=WordPress
@@ -6820,6 +6873,7 @@ yahoo-cvs=Yahoo! CSV:
 yard=Jaardi
 year=Vuosi
 year-abbreviation=v
+year-position=Year Position (Automatic Copy)
 year-s=vuosia
 year-to-date=Vuodesta päivään
 yearly=Vuosittain
