--- a/portal-impl/src/content/Language_fr.properties
+++ b/portal-impl/src/content/Language_fr.properties
@@ -888,6 +888,7 @@ always=Toujours
 always-use-my-user-id=Toujours utiliser mon identifiant.
 am=du matin
 am-pm=du matin / de l'après-midi
+amazon-rankings=Classement Amazon (Automatic Translation)
 americas=Les Amériques
 amount=Quantité
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Un compte avec l'adresse e-mail {0} existe déjà sur ce portail. Voulez-vous associer cette activité avec ce compte ?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Un signe inattendu est apparu par erreur.
 an-unexpected-system-error-occurred=Une erreur système inattendue s'est produite.
 analytics=Analytiques
 and=Et
+and-operator=Et l'opérateur (Automatic Translation)
+and-or-operator=Opérateur et/ou (Automatic Translation)
 and-then-by=Puis par
 and-x-more=et {0} de plus.
 anniversary=Anniversaire
@@ -1308,6 +1311,9 @@ border-styles=Styles de bordure
 border-styling=Style de bordure
 border-width=Largeur de bordure
 bottom=Bas
+bottom-border-unit=Fond frontière unité (Automatic Translation)
+bottom-margin-unit=Unité de marge inférieure (Automatic Translation)
+bottom-padding-unit=Unité de remplissage de fond (Automatic Translation)
 branch=Branche
 branches=Branche
 breadcrumb=Chapelure
@@ -1372,6 +1378,7 @@ cas-server-name-help=Définissez cela pour permette un lien profond vers le port
 cas-server-url-help=Définissez l'URL du domaine du serveur CAS.
 cas-service-url-help=Renseignez ceci pour désactiver les liens profonds vers le portail (e.g. http://localhost:8080/c/portal/login). Ne renseignez pas ceci si le nom du serveur CAS est renseigné.
 categories=Catégories
+categories-admin-select-search=Recherche Admin sélectionnez catégories (Automatic Translation)
 categories-and-messages=Catégories et messages
 categories[message-board]=Catégories
 categorization=Catégorisation
@@ -1383,6 +1390,8 @@ category-services=Services de catégories
 category-sets=Ensembles de catégorie
 category[message-board]=Catégorie
 cc=Copie
+cc-exp-month=Mois d'Expiration CC (Automatic Translation)
+cc-exp-year=Année d'Expiration CC (Automatic Translation)
 cc_amex=American Express
 cc_discover=Découvrez
 cc_mastercard=Mastercard
@@ -1428,6 +1437,7 @@ chapter=Chapitre
 chapters=Chapitres
 characters-maximum=caractères maximum
 chart=Diagramme
+chart-type=Type de graphique (Automatic Translation)
 chart-width=Largeur de diagramme
 charts=Graphiques
 chat=Diagramme
@@ -1745,6 +1755,7 @@ custom-message=Message personnalisé
 custom-portlet-xml=Fichier portlet.xml personnalisé
 custom-question=Question personnalisée
 custom-range=Intervalle personnalisé
+custom-title=Titre personnalisé (Automatic Translation)
 custom-user-attributes=Attributs personnalisés de l'utilisateur
 custom-user-attributes-help=Spécifier les attributs personnalisés de l'utilisateur permettra de retrouver les éléments correspondant à la catégorisation. Les catégories doivent venir du contexte global.
 custom.field.boolean=Case à cocher
@@ -1986,6 +1997,7 @@ disk=Disque
 dismiss=Écartez
 display=Affichage
 display-a-datepicker=Montrez un Datepicker
+display-activity-counter-name=Nom du compteur Affichage activité (Automatic Translation)
 display-additional-activity-counters=Affichage de compteurs additionnels d'activité
 display-as-tooltip=Affichage comme Tooltip
 display-asset-categories-facet=Afficher les facettes de catégories de capitaux
@@ -2480,7 +2492,9 @@ finished=Terminé
 firm-name=Nom de la société
 firms=Sociétés
 first=Premier
+first-day-of-week=Premier jour de la semaine (Automatic Translation)
 first-message=Premier message
+first-month-of-year=Premier mois de l'année (Automatic Translation)
 first-name=Prénom
 first-name-attribute=Attribut de prénom
 first-thread=Premier sujet
@@ -2995,6 +3009,7 @@ language-to=Langage à
 language-type=Type de language
 languages=Langues
 large=Grand
+large-file=Gros fichier (Automatic Translation)
 large-image=Grande image
 large-image-url=URL d'une grande image
 large-rectangle=Grand Rectangle
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 colonnes (70/30) (Automatic Translation)
 layout-template-3-2-3-columns=3-2-3 colonnes (Automatic Translation)
 layout-template-3-columns=3 colonnes (Automatic Translation)
 layout-template-freeform=Forme libre (Automatic Translation)
+layout-template-id=ID de modèle de mise en page (Automatic Translation)
 layout-template-plugin=Plugin de disposition
 layout-template-plugins=Plugins de disposition
 layout-templates=Modèles de disposition
@@ -3087,6 +3103,9 @@ leave-site=Quitter le site
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Laissez ce champ vide si le bon n'est pas conforme à l'article SKU.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Laissez ce champ vide si le bon n'est pas conforme aux catégories d'un article.
 left=Gauche
+left-border-unit=Unité de la bordure gauche (Automatic Translation)
+left-margin-unit=Unité de la marge de gauche (Automatic Translation)
+left-padding-unit=Unité de Padding gauche (Automatic Translation)
 legal-id=Identification Légale
 legal-name=Nom Légal
 legal-type=Type Légal
@@ -3161,6 +3180,7 @@ lockout-duration-help=Ceci détermine la quantité de temps pendant laquelle le 
 lockout-enabled=Verrouillage activé
 lockout-enabled-help=Si cette option est activée, un utilisateur à la droit à un certain nombre de connexions avant que son compte ne soit bloqué.
 log-levels=Niveaux de journalisation
+logger-name=Nom du créateur (Automatic Translation)
 login=Identifiant
 login-through-facebook=Authentification par Facebook
 login-url=URL d'accueil
@@ -3280,6 +3300,7 @@ maybe-attending=Peut-être étant présent
 me=Je
 media-files-must-be-one-of-the-following-formats=Les fichiers de type médias doivent être dans un des formats suivants :
 medium=Milieu
+medium-file=Dossier moyen (Automatic Translation)
 medium-image=Image moyenne
 medium-image-url=URL d'image moyenne
 medium-rectangle=Rectangle Moyen
@@ -3296,6 +3317,8 @@ membership-type-private-help=Les utilisateurs ne sont pas autorisés à effectue
 membership-type-restricted-help=Les utilisateurs sont autorisés à effectuer des demandes d'adhésion. Les requêtes nécessitent l'approbation d'un administrateur du site.
 memberships=Adhésions
 memory=Mémoire
+memory-used-vs-max-memory=Mémoire utilisée contre mémoire Max (Automatic Translation)
+memory-used-vs-total-memory=Mémoire utilisée contre mémoire totale (Automatic Translation)
 menu=Menu
 merge=Fusion
 merge-data=Fusionner les donnnées
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Fusionner {0} pages publiques
 merged-from-x-x=(fusionné de {0}, {1})
 message=Message
 message-added-email=Email de confirmation d'ajout de message
+message-attachment=Pièce jointe au message (Automatic Translation)
 message-board-messages=Messages de forum
 message-boards-home=Le forum
 message-boards-message-anonymous-help=Si ceci est vérifié, alors ce message sera signalé anonyme.
@@ -3543,6 +3567,7 @@ monday-abbreviation=L
 monitoring=Surveillance
 month=Mois
 month-abbreviation=m
+month-position=Position du mois (Automatic Translation)
 month-s=mois
 monthly=Mensuel
 monthly-payment=Paiement Mensuel
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Plus de lignes en bas.
 more-x-results=Plus de {0} résultats
 move=Mouvement
 move-column=Déplacer la colonne
+move-down=Déplacer vers le bas (Automatic Translation)
 move-files=Déplacer les fichiers
 move-page=Déplacez La Page
 move-selected-item-in-x-one-position-down=Déplacer l'item sélectionné en {0} une fois vers le bas.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Déplacer les items sélectionnés de {0} vers {
 move-thread=Déplacer le sujet
 move-to=Déplacer vers
 move-to-the-recycle-bin=Déplacer dans la corbeille
+move-up=Déplacer vers le haut (Automatic Translation)
 move-web-content=Déplacer le contenu web
 move-x=Déplacer {0}
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Jamais Revue
 new=Nouveau
 new-action-for-x=Nouvelle Action pour {0}
 new-application-display-template=Nouveau modèle d'affichage d'application
+new-article-id=Nouvel Article ID (Automatic Translation)
 new-blog-entry=Nouvelle entrée de blogue
 new-bookmark=Nouveau signet
 new-category=Nouvelle catégorie
@@ -4059,6 +4087,7 @@ pause=Pause
 payer-email-address=Adresse email du débiteur
 payment-gross=Paiement en gros
 payment-settings=Préférences de paiement
+paypal=PayPal (Automatic Translation)
 paypal-email-address=Email address sur PayPal
 paypal-order=Commande PayPal
 pending=En suspens
@@ -4389,6 +4418,7 @@ pop-up=Popup
 port=Envoyer
 portal=Portail
 portal-data=Données du portail
+portal-ext=Portail EXT (Automatic Translation)
 portal-instance=Instance de portail
 portal-instance-help=Objet qui représente l'instance actuelle du portail.
 portal-instance-id=Identifiant de l'instance du portail
@@ -4473,6 +4503,9 @@ principal=Principal
 print=Imprimer
 print-x-x=Modifier <span class="{0}">{1}</span>
 priority=Priorité
+priority-image=Priorité Image (Automatic Translation)
+priority-name=Nom de la priorité (Automatic Translation)
+priority-value=Valeur de priorité (Automatic Translation)
 private=Privé
 private-node=Noeud privé
 private-nodes=Noeuds privés
@@ -4552,6 +4585,7 @@ purchase-order=Ordre d'achat
 px=px
 quantity=Quantité
 query=Requête (Automatic Translation)
+query-contains=La requête contient (Automatic Translation)
 query-indexing-enabled-help=Si ceci est coché, les requêtes qui atteignent ce seuil sont indexées et suggérées aux utilisateur comme les requêtes relatives ou comme une partie de l'autocomplétion.
 query-indexing-threshold=Seuil de l'indexation de requête
 query-indexing-threshold-help=Si le nombre de résultats de recherche atteint le seuil, la requête est indexée and recommandée à des utilisateurs qui recherchent avec des requêtes similaires.
@@ -4669,6 +4703,7 @@ remember-me=Auto-connexion?
 reminder=Rappel
 reminder-queries=Questions de rappel
 reminder-query-and-answer-cannot-be-empty=La question et la réponse de rappel ne peuvent pas être vides.
+reminder-query-question=Question de requête de rappel (Automatic Translation)
 remote-host-ip=Nom de domaine/IP distant
 remote-live=Production distante
 remote-live-connection-settings=Configuration de l'environnement distant (production)
@@ -4714,6 +4749,7 @@ reply=Répondre
 reply-all=Répondre à tous
 reply-as=Répondre en tant que ...
 reply-as-anonymous=Réponse anonyme
+reply-body=Corps de la réponse (Automatic Translation)
 reply-comments=Répondre aux commentaires
 reply-date=Date De Réponse
 reply-membership-request-for-x=Répondre à la demande d'adhésion à {0}
@@ -4816,6 +4852,9 @@ rich=Riche
 rich-text-format=Mise en forme de texte enrichi (RTF)
 ridge=Arète
 right=Droite
+right-border-unit=Unité de la bordure droite (Automatic Translation)
+right-margin-unit=Unité de la marge de droite (Automatic Translation)
+right-padding-unit=Unité de remplissage droite (Automatic Translation)
 robots=Robots
 role=Rôle
 role-name=Nom de rôle
@@ -4886,12 +4925,14 @@ script-file=Fichier de script
 search=Rechercher
 search-all-organizations=Rechercher tous les organisations
 search-all-users=Rechercher tous les utilisateurs
+search-application=Application de recherche (Automatic Translation)
 search-applications-searches-as-you-type=Recherche d'applications (recherche instantanée).
 search-bookmarks=Rechercher signets
 search-by-id-or-url=Recherche par ID ou URL
 search-categories=Rechercher des catégories
 search-configuration=Configuration de défaut
 search-configuration-help=Ce champ est utilisé pour appliquer les paramètres de configuration de la recherche avancée sous la forme d'une chaîne JSON
+search-content=Rechercher le contenu (Automatic Translation)
 search-coupons=Rechercher des bons
 search-custom-range-date-format=Veuillez entrer une date dans le format suivant : AAAA-MM-JJ
 search-custom-range-invalid-date-range=Veuillez choisir une plage de dates valide.
@@ -4918,6 +4959,7 @@ search-operator=Opérateur de recherche
 search-orders=Recherche de commandes
 search-organizations=Recherche d'organisations
 search-pages=Rechercher des pages
+search-panel=Panneau Rechercher (Automatic Translation)
 search-password-policies=Rechercher des politiques de mot de passe
 search-plugins=Rechercher des plugins
 search-products=Rechercher des produits
@@ -4966,6 +5008,7 @@ select-a-page=Choisir une page
 select-a-site=Sélectionner un site
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Choisissez une structure pour filtrer la table des matières de Web par une structure.
 select-a-type=Sélectionner le type de media
+select-all=Sélectionner tout (Automatic Translation)
 select-an-action-type=Sélectionner un type d'action
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Sélectionner une liste existante ou ajouter une liste à afficher dans ce portlet.
 select-and-copy=Sélectionner et copier
@@ -4997,6 +5040,7 @@ select-parent-site=Sélectionner un site parent
 select-portlet=Choisir une application
 select-question=Sélectionner une question
 select-recipients=Choisir les destinataires
+select-search=Sélectionnez Rechercher (Automatic Translation)
 select-site=Sélectionner un site
 select-tags=Choisir les étiquettes
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Sélectionner l'action que ce rôle peut effectuer sur l'application <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Serveurs
 service=Service
 service-account=Compte de service
 service-password=Entretenez le mot de passe
+service-search=Recherche de service (Automatic Translation)
 service-url=URL de service
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Services
@@ -5287,15 +5332,19 @@ sku=Unité de gestion des stocks (SKU)
 skus=Unités de gestion des stocks (SKUs)
 skype=Skype
 skyscraper=Gratte-ciel
+slide-show=Diaporama (Automatic Translation)
 slovak=Slovaque
 small=Petit
+small-file=Petit fichier (Automatic Translation)
 small-image=Miniature (petite image)
+small-image-file=Petite Image File (Automatic Translation)
 small-image-url=URL de la petite image
 small-rectangle=Miniature (petit rectangle)
 small-square=Petite Place
 smartphone=Smartphone
 sms=SMS
 sms-messenger-id=Identification de message SMS
+sms-sn=Nom d'écran SMS (Automatic Translation)
 social-activity-limit-type-times=fois
 social-activity-limit-type-times-a-day=fois par jour
 social-activity-limit-type-times-per-period=fois par période
@@ -6197,8 +6246,11 @@ tomorrow=Demain
 ton=Tonne
 tools=Outils
 top=Haut
+top-border-unit=Unité de la bordure supérieure (Automatic Translation)
 top-level=Niveau supérieur
 top-level-organizations=Organisations de premier niveau
+top-margin-unit=Unité de la marge supérieure (Automatic Translation)
+top-padding-unit=Haut appareil de remplissage (Automatic Translation)
 top-posters=Publicateurs les plus actifs
 top-users-out-of-x=Top des utilisateurs parmi {0}.
 topic=Sujet
@@ -6693,6 +6745,7 @@ with-scope=avec la portée
 withdraw-submission=Retirer la soumission
 within=Dans
 within-x=dans {0}
+word=Word (Automatic Translation)
 word-search=Recherche de mots
 word-spacing=Espacement De Mot
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo ! CSV :
 yard=Cour
 year=Année
 year-abbreviation=a
+year-position=Position de l'année (Automatic Translation)
 year-s=année(s)
 year-to-date=Année jusqu'à aujourd'hui
 yearly=Annuel
