--- a/portal-impl/src/content/Language_hr.properties
+++ b/portal-impl/src/content/Language_hr.properties
@@ -888,6 +888,7 @@ always=Uvijek
 always-use-my-user-id=Uvijek koristi moj korisnički ID.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Amerika
 amount=Iznos
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Računa s {0} kao e-mail adresu već postoji na portalu. Želite li povezati ovu aktivnost s tim računom?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Došlo je do neočekivane greška prilikom 
 an-unexpected-system-error-occurred=Došlo je do neočekivane greške na sustavu.
 analytics=Analitika
 and=i
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=a zatim sa
 and-x-more=i {0} više.
 anniversary=Godišnjica
@@ -1308,6 +1311,9 @@ border-styles=Stilovi graničnih linija
 border-styling=Stiliziranje graničnih linija
 border-width=Širina graničnih linija
 bottom=Dno
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Grana
 branches=Podružnice
 breadcrumb=Povratna
@@ -1372,6 +1378,7 @@ cas-server-name-help=Postavite ovaj omogućiti povezivanje duboko u portal (npr.
 cas-server-url-help=Postavite domene CAS URL poslužitelja.
 cas-service-url-help=Postavite ovaj onemogućiti duboko povezivanje u portal (npr. http://localhost:8080/c/portal/login). Ne postavljaj ovo ako ime CAS poslužitelj postavljen.
 categories=Kategorije
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategorije i poruke
 categories[message-board]=Kategorije
 categorization=Kategorizacija
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Kategorija Setovi
 category[message-board]=Kategorija
 cc=CC
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Otkrij
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Poglavlje
 chapters=Poglavlja
 characters-maximum=Najveći broj slova
 chart=Grafikon
+chart-type=Chart Type (Automatic Copy)
 chart-width=Širina grafa
 charts=Grafovi
 chat=Čavrljanje
@@ -1745,6 +1755,7 @@ custom-message=Vlastita poruka
 custom-portlet-xml=Vlastiti portlet.xml
 custom-question=Vlastito pitanje
 custom-range=Vlastiti raspon
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Vlastiti korisnički atributi
 custom-user-attributes-help=Definiranje vlastitih korisničkih atributa uzrokuje dohvat imovine s podudarajućom kategorizacijom. Kategorije moraju pripadati globalnom kontekstu.
 custom.field.boolean=True / False
@@ -1986,6 +1997,7 @@ disk=Disk
 dismiss=Odbaciti
 display=Prikaži
 display-a-datepicker=Prikaži birač datuma
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Prikaži dodatne brojače aktivnosti
 display-as-tooltip=Prikaži kao Tooltip
 display-asset-categories-facet=Prikaz imovine s aspekta kategorije
@@ -2480,7 +2492,9 @@ finished=Dovršeno
 firm-name=Naziv tvrtke
 firms=Tvrtke
 first=Prvo
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Prva poruka
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Ime
 first-name-attribute=Atribut imena
 first-thread=Prva nit
@@ -2995,6 +3009,7 @@ language-to=Na jezik
 language-type=Tip jezika
 languages=Jezici
 large=Veliko
+large-file=Large File (Automatic Copy)
 large-image=Velika slika
 large-image-url=URL velike slike
 large-rectangle=Veliki pravokutnik
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Dodatak Predlošci razmještaja
 layout-template-plugins=Dodaci Predlošci razmještaja
 layout-templates=Predlošci razmještaja
@@ -3087,6 +3103,9 @@ leave-site=Napusti stranice
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Ostavi prazno ako se kupon ne provjerava SKU od stavke.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Ostavi prazno ako se kupon ne poklapa za roditeljske kategorije određene stavke.
 left=Lijevo
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Legalni ID
 legal-name=Legalno ime
 legal-type=Legalni tip
@@ -3161,6 +3180,7 @@ lockout-duration-help=Ovo određuje vrijeme na koje je korisnički račun zaklju
 lockout-enabled=Pokrenuto zaključavanje
 lockout-enabled-help=Ako je to označeno, korisnik se može probati uključiti određeni broj puta prije zaključavanja računa.
 log-levels=Razine logiranja
+logger-name=Logger Name (Automatic Copy)
 login=Prijava
 login-through-facebook=Prijava kroz Facebook
 login-url=URL za prijavu
@@ -3280,6 +3300,7 @@ maybe-attending=Možda Prisustvovanje
 me=Ja
 media-files-must-be-one-of-the-following-formats=Media datoteke moraju biti u jednom od ovih formata:
 medium=Srednje
+medium-file=Medium File (Automatic Copy)
 medium-image=Srednja slika
 medium-image-url=URL srednje slike
 medium-rectangle=Srednji pravokutnik
@@ -3296,6 +3317,8 @@ membership-type-private-help=Korisnicima nije dozvoljeno zahtijevati članstvo. 
 membership-type-restricted-help=Korisnicima je dozvoljeno zahtijevati članstvo. Zahtjev mora biti odobren od administratora sitea.
 memberships=Članstva
 memory=Memorija
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Spojiti
 merge-data=Spoji podatke
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Spajanje {0} javnih stranica
 merged-from-x-x=(Sjedinjeno iz {0}, {1})
 message=Poruka
 message-added-email=Email dodane poruke
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Poruke oglasne ploče
 message-boards-home=Poruka zajednice Home
 message-boards-message-anonymous-help=Ako je ovo označeno, poruka će biti objavljena anonimno.
@@ -3543,6 +3567,7 @@ monday-abbreviation=P
 monitoring=Nadzor
 month=Mjesec
 month-abbreviation=M
+month-position=Month Position (Automatic Copy)
 month-s=mjesec(i)
 monthly=Mjesečno
 monthly-payment=Mjesečna isplata
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Više reda na dnu.
 more-x-results=Više {0} Stranice
 move=Premjesti
 move-column=Premjesti stupac
+move-down=Move Down (Automatic Copy)
 move-files=Premjesti datoteke
 move-page=Premjesti stranicu
 move-selected-item-in-x-one-position-down=Premještanje odabrane stavke u {0} jedno mjesto prema dolje.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Premještanje odabrane stavke iz {0} do {1}.
 move-thread=Premjesti niz
 move-to=Premjesti na
 move-to-the-recycle-bin=Prebaci u Recycle Bin
+move-up=Move Up (Automatic Copy)
 move-web-content=Web sadržaj podnožja
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Nikada ne radi pregled
 new=Novo
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=Novi predložak prikaza aplikacije
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Novi blog zapis
 new-bookmark=Novi Bookmark
 new-category=Nova kategorija
@@ -4059,6 +4087,7 @@ pause=Pauziraj
 payer-email-address=Email adresa kupca
 payment-gross=Bruto isplata
 payment-settings=Posavke isplate
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal Email adresa
 paypal-order=PayPal narudžba
 pending=U tijeku
@@ -4389,6 +4418,7 @@ pop-up=Skočni
 port=Port
 portal=Portal
 portal-data=Podaci o portalu
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Instance portala
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Glavno
 print=Tiskaj
 print-x-x=Ispis <span class="{0}">{1}</span>
 priority=Prioritet
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privatno
 private-node=Privatni niz
 private-nodes=Privatni nizovi
@@ -4552,6 +4585,7 @@ purchase-order=Narudžbenica
 px=px (Automatic Copy)
 quantity=Količina
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Zapamti me
 reminder=Podsjetnik
 reminder-queries=Podsjetnik Upiti
 reminder-query-and-answer-cannot-be-empty=Podsjetnik upit i odgovor ne može biti prazan.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Udaljeni Host/IP
 remote-live=Daljinski Live
 remote-live-connection-settings=Udaljeno Live Connection Settings
@@ -4714,6 +4749,7 @@ reply=Odgovori
 reply-all=Odgovori svima
 reply-as=Odgovori kao...
 reply-as-anonymous=Odgovori anonimno
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Odgovori na komentare
 reply-date=Datum odgovora
 reply-membership-request-for-x=Odgovor Članstvo Zahtjev za {0}
@@ -4816,6 +4852,9 @@ rich=Puni
 rich-text-format=Oblik obogaćenog teksta
 ridge=Greben
 right=Desno
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Roboti
 role=Uloga
 role-name=Naziv uloge
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Pretraži
 search-all-organizations=Pretraži sve organizacije
 search-all-users=Pretraži sve korisnike
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Search aplikacije (searches dok pišete).
 search-bookmarks=Pretraži oznake
 search-by-id-or-url=Pretraži prema ID ili URL
 search-categories=Pretraži kategorije
 search-configuration=Postavke pretrage
 search-configuration-help=Ovo polje se koristi za primjenu naprednog podešavanja pretrage u JSON obliku.
+search-content=Search Content (Automatic Copy)
 search-coupons=Pretraži kupone
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Molimo, odaberite ispravan tip.
@@ -4918,6 +4959,7 @@ search-operator=Pretraži operatora
 search-orders=Pretraži narudžbe
 search-organizations=Pretraži organizacije
 search-pages=Pretraži stranice
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Pretraži pravila lozinke
 search-plugins=Pretraži dodatke
 search-products=Pretraži proizvode
@@ -4966,6 +5008,7 @@ select-a-page=Odaberi stranicu
 select-a-site=Odaberi site
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Odaberite strukturu za filtriranje web sadržaja po strukturi.
 select-a-type=Odaberi tip
+select-all=Select All (Automatic Copy)
 select-an-action-type=Odaberi tip akcije
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Odaberite postojeći popis ili dodate popisu koji će biti prikazani u ovom portlet.
 select-and-copy=Odaberi i kopiraj
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Odaberi portlet
 select-question=Odaberi pitanje
 select-recipients=Odaberi primatelje
+select-search=Select Search (Automatic Copy)
 select-site=Odaberi site
 select-tags=Odaberi oznake
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Odaberi akciju koju ova uloga može izvršiti na <em>{0}</em> portletu.
@@ -5078,6 +5122,7 @@ servers=Poslužitelji
 service=Servis
 service-account=Račun servisa
 service-password=Lozinka servisa
+service-search=Service Search (Automatic Copy)
 service-url=Servisni URL
 service-url-for-opensso-help=Preko ovog URL može se pristupiti OpenSSO usluzi radi korištenja web servisa za autentikaciju. Ako koristite OpenSSO Express 8 ili višu verziju, vaš server mora biti pokrenut sa Java 6.
 services=Servisi
@@ -5287,15 +5332,19 @@ sku=SKU
 skus=SKU-ovi
 skype=Skype
 skyscraper=Neboder
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovački
 small=Malo
+small-file=Small File (Automatic Copy)
 small-image=Mala slika
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL male slike
 small-rectangle=Mali pravokutnik
 small-square=Mali kvadrat
 smartphone=Smartphone (Automatic Copy)
 sms=SMS
 sms-messenger-id=ID SMS poruka
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=Sutra
 ton=Tona
 tools=Alati
 top=Vrh
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Vršne organizacije
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Top plakati
 top-users-out-of-x=Top korisnici od {0}.
 topic=Tema
@@ -6693,6 +6745,7 @@ with-scope=s opsegom
 withdraw-submission=Povuci Prijava
 within=Unutar
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Pretraživanje riječi
 word-spacing=Razmaci među riječima
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo CSV:
 yard=Jard
 year=Godina
 year-abbreviation=g
+year-position=Year Position (Automatic Copy)
 year-s=godina(e)
 year-to-date=Godina u datum
 yearly=Godišnje
