--- a/portal-impl/src/content/Language_hu.properties
+++ b/portal-impl/src/content/Language_hu.properties
@@ -888,6 +888,7 @@ always=Mindig
 always-use-my-user-id=Mindig a saját felhasználói azonosító használata.
 am=du.
 am-pm=de./du.
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Amerika
 amount=Mennyiség
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Ezzel az e-mail címmel ({0}) már regisztráltak. Társítsuk ezt a tevékenységet ehhez a fiókhoz?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Nem várt hiba jelentkezett a bejelentkezé
 an-unexpected-system-error-occurred=Nem várt rendszerhiba jelentkezett.
 analytics=Elemzések
 and=és
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=és aztán
 and-x-more=és még {0}.
 anniversary=Évforduló
@@ -1308,6 +1311,9 @@ border-styles=Keretstílusok
 border-styling=Keretformázás
 border-width=Keretvastagság
 bottom=Alja
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Változat
 branches=Változatok
 breadcrumb=Nyomvonal
@@ -1372,6 +1378,7 @@ cas-server-name-help=A portál mélységi hivatkozásainak engedélyezése (pl. 
 cas-server-url-help=A CAS szerver domain URL beállítása.
 cas-service-url-help=A portál mélységi hivatkozásainak kikapcsolása (pl. http://localhost:8080/c/portal/login). CAS szervernév beállítása esetén kerülendő a használata.
 categories=Kategóriák
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategóriák és üzenetek
 categories[message-board]=Kategóriák
 categorization=Kategorizálás
@@ -1383,6 +1390,8 @@ category-services=Kategória szolgáltatások
 category-sets=Kategóriakészletek
 category[message-board]=Kategória
 cc=Másolatot kap
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Discover
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Fejezet
 chapters=Fejezetek
 characters-maximum=Maximum karakter
 chart=Diagram
+chart-type=Chart Type (Automatic Copy)
 chart-width=Ábra szélessége
 charts=Diagramok
 chat=Csevegés
@@ -1745,6 +1755,7 @@ custom-message=Egyedi üzenet
 custom-portlet-xml=Egyedi portlet.xml
 custom-question=Egyedi kérdés
 custom-range=Egyedi tartomány
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Egyedi felhasználói jellemzők
 custom-user-attributes-help=Az egyedi felhasználói jellemzők megadása a kategorizálásra illeszkedő tartalmakat eredményez. A kategóriáknak a globális környezetből kell lenniük.
 custom.field.boolean=Igaz/hamis
@@ -1986,6 +1997,7 @@ disk=Lemez
 dismiss=Mellőz
 display=Megjelenítés
 display-a-datepicker=Dátumválasztó megjelenítése
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=További aktivitásszámlálók kijelzése
 display-as-tooltip=Tooltipként mutat
 display-asset-categories-facet=Tartalomkategóriák élének megjelenítése
@@ -2480,7 +2492,9 @@ finished=Kész
 firm-name=Cégnév
 firms=Cégek
 first=Első
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Első üzenet
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Keresztnév
 first-name-attribute=Keresztnév tulajdonság
 first-thread=Első szál
@@ -2995,6 +3009,7 @@ language-to=Erre a nyelvre:
 language-type=Nyelv típusa
 languages=Nyelvek
 large=Nagy
+large-file=Large File (Automatic Copy)
 large-image=Nagy kép
 large-image-url=Nagy kép URL-je
 large-rectangle=Nagy téglalap
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Elrendezés sablon plugin
 layout-template-plugins=Elrendezés sablon pluginek
 layout-templates=Elrendezés sablonok
@@ -3087,6 +3103,9 @@ leave-site=A webhely elhagyása
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Hagyd üresen ezt a mezőt, ha a kupon nem egyezik a cikk leltári azonosítójával (SKU).
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Hagyd üresen ezt a mezőt, ha a kupon nem egyezik a cikk szülőkategóriájával.
 left=Bal
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Jogi azonosító
 legal-name=Jogi név
 legal-type=Jogi típus
@@ -3161,6 +3180,7 @@ lockout-duration-help=A felhasználói fiók kizárási időtartama.
 lockout-enabled=Kizárás engedélyezve
 lockout-enabled-help=Ha be van jelölve, a felhasználónak adott számú bejelentkezési próbálkozása van, mielőtt kizáródik.
 log-levels=Naplózási szintek
+logger-name=Logger Name (Automatic Copy)
 login=Bejelentkezés
 login-through-facebook=Facebook-on keresztüli bejelentkezés
 login-url=Bejelentkezési URL
@@ -3280,6 +3300,7 @@ maybe-attending=Talán részt vesz
 me=Én
 media-files-must-be-one-of-the-following-formats=A médiafájlok típusa valamelyik a következők közül:
 medium=Közepes
+medium-file=Medium File (Automatic Copy)
 medium-image=Közepes kép
 medium-image-url=Közepes kép URL
 medium-rectangle=Közepes téglalap
@@ -3296,6 +3317,8 @@ membership-type-private-help=A felhasználók nem kérhetnek tagságot. Csak a w
 membership-type-restricted-help=A felhasználók kérhetik a tagságukat, amelyet a webhely adminisztrátorainak kell jóváhagyni.
 memberships=Tagságok
 memory=Memória
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menü
 merge=Összefésülés
 merge-data=Adatok összefésülése
@@ -3312,6 +3335,7 @@ merge-x-public-pages={0} nyilvános oldalak összefésülése
 merged-from-x-x=(Egyesítve ezekből: {0}, {1})
 message=Üzenet
 message-added-email=e-mail új üzenet hozzáadásáról
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Fórum üzenetek
 message-boards-home=Kezdőpont
 message-boards-message-anonymous-help=Ha be van jelölve, az üzenetküldés névtelenül történik.
@@ -3543,6 +3567,7 @@ monday-abbreviation=H
 monitoring=Monitorozás
 month=Hónap
 month-abbreviation=h
+month-position=Month Position (Automatic Copy)
 month-s=hónap
 monthly=Havi
 monthly-payment=Havi kifizetés
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Több sor alulra
 more-x-results=Következő {0} találat
 move=Mozgatás
 move-column=Oszlop mozgatása
+move-down=Move Down (Automatic Copy)
 move-files=Fájlok áthelyezése
 move-page=Oldal mozgatása
 move-selected-item-in-x-one-position-down=A kiválasztott elem egy pozícióval lefelé történő mozgatása a következőben: {0}
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Kijelölt elemek mozgatása innen: {0} ide: {1}.
 move-thread=Szál mozgatása
 move-to=Mozgatási cél
 move-to-the-recycle-bin=Áthelyezés a Lomtárba
+move-up=Move Up (Automatic Copy)
 move-web-content=Web tartalom áthelyezése
 move-x=Mozgasd {0}
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Soha nem kell felülvizsgálni
 new=Új
 new-action-for-x=Új akció ennek: {0}
 new-application-display-template=Új alkalmazás megjelenítési sablon
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Új blog bejegyzés
 new-bookmark=Új könyvjelző
 new-category=Új kategória
@@ -4059,6 +4087,7 @@ pause=Szünet
 payer-email-address=Fizető e-mail címe
 payment-gross=Fizetendő bruttó
 payment-settings=Fizetési beállítások
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal e-mail cím
 paypal-order=PayPal rendelés
 pending=Függő
@@ -4389,6 +4418,7 @@ pop-up=Felugró
 port=Port
 portal=Portál
 portal-data=Portáladatok
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Portál példány
 portal-instance-help=A jelenlegi portál példányt reprezentáló objektum.
 portal-instance-id=Portál példány azonosító
@@ -4473,6 +4503,9 @@ principal=Rang
 print=Nyomtatás
 print-x-x=Nyomtatás: <span class="{0}">{1}</span>
 priority=Prioritás
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privát
 private-node=Privát csomópont
 private-nodes=Privát csomópontok
@@ -4552,6 +4585,7 @@ purchase-order=Vásárlás megrendelés
 px=kp
 quantity=Mennyiség
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=Ha ez be van jelölve, akkor azok a lekérdezések, amelyek elérik a küszöbértéket, indexelve lesznek és javaslatként jelennek meg a felhasználók számára, kapcsolódó lekérdezésként vagy az automatikus kiegészítésű lekérdezési javaslatok részeként.
 query-indexing-threshold=Lekérdezés indexelési küszöbérték
 query-indexing-threshold-help=Ha a keresési eredmények mennyisége eléri ezt a küszöbértéket, a lekérdezés indexelve lesz, és javaslatként jelenik meg a felhasználók számára, akik hasonló lekérdezést futtatnak.
@@ -4669,6 +4703,7 @@ remember-me=Emlékezzen rám
 reminder=Emlékeztető
 reminder-queries=Emlékeztető kérdések
 reminder-query-and-answer-cannot-be-empty=Emlékeztető kérdés és válasz nem maradhat üresen
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Távoli host/IP cím
 remote-live=Távoli éles kiszolgáló
 remote-live-connection-settings=Távoli, éles kiszolgáló kapcsolatának beállításai
@@ -4714,6 +4749,7 @@ reply=Válasz
 reply-all=Mindenre válasz
 reply-as=Válasz mint ...
 reply-as-anonymous=Válasz névtelenül
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Válasz hozzászólások
 reply-date=Válasz dátuma
 reply-membership-request-for-x=Válasz a tagsági kérésre a következőhöz: {0}
@@ -4816,6 +4852,9 @@ rich=Gazdag
 rich-text-format=Rich Text Formátum
 ridge=Gerinc
 right=Jobb
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robotok
 role=Szerepkör
 role-name=Szerepkör neve
@@ -4886,12 +4925,14 @@ script-file=Szkript fájl
 search=Keresés
 search-all-organizations=Minden szervezet keresése
 search-all-users=Minden felhasználó keresése
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Alkalmazások keresése (gépelés közben keres).
 search-bookmarks=Könyvjelzők keresése
 search-by-id-or-url=Keresés azonosító vagy URL alapján
 search-categories=Kategóriák keresése
 search-configuration=Nézet konfiguráció
 search-configuration-help=Ezzel a mezővel haladó keresési beállításokat lehet a JSON-karakterlánc formátumában alkalmazni.
+search-content=Search Content (Automatic Copy)
 search-coupons=Kuponok keresése
 search-custom-range-date-format=Add meg a dátumot a következő formátumban: ÉÉÉÉ-HH-NN
 search-custom-range-invalid-date-range=Válassz eg yérvényes dátum tartományt.
@@ -4918,6 +4959,7 @@ search-operator=Operátor keresése
 search-orders=Rendelések keresése
 search-organizations=Szervezetek keresése
 search-pages=Oldalak keresése
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Jelszószabályok keresése
 search-plugins=Pluginek keresése
 search-products=Termékek keresése
@@ -4966,6 +5008,7 @@ select-a-page=Jelölj ki egy oldalt
 select-a-site=Webhely kiválasztása
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Válassz egyet a struktúrák közül, amivel a webtartalmat szűrni kívánod.
 select-a-type=Médiatípus kiválasztása
+select-all=Select All (Automatic Copy)
 select-an-action-type=Tevékenységtípus kiválasztása
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Egy már létező listát kell kiválasztani vagy újat hozzáadni, hogy ebben a portletben megjelenjen.
 select-and-copy=Kijelölés és másolás
@@ -4997,6 +5040,7 @@ select-parent-site=Szülő webhely választása
 select-portlet=Portlet kijelölése
 select-question=Kérdés kiválasztása
 select-recipients=Címzettek kijelölése
+select-search=Select Search (Automatic Copy)
 select-site=Webhely kiválasztása
 select-tags=Címkék kijelölése
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Válaszd ki, hogy milyen műveletet hajthat végre ez a szerepkör a(z) <em>{0}</em> portleten.
@@ -5078,6 +5122,7 @@ servers=Kiszolgálók
 service=Szolgáltatás
 service-account=Szerviz fiók
 service-password=Szerviz jelszó
+service-search=Service Search (Automatic Copy)
 service-url=Szolgáltatás URL-je
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Szolgáltatások
@@ -5287,15 +5332,19 @@ sku=SKU (leltári azonosító)
 skus=SKU-k (leltári azonosítók)
 skype=Skype
 skyscraper=Felhőkarcoló
+slide-show=Slide Show (Automatic Copy)
 slovak=Szlovák
 small=Kicsi
+small-file=Small File (Automatic Copy)
 small-image=Kis kép
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=Kis kép URL
 small-rectangle=Kis téglalap
 small-square=Kis négyzet
 smartphone=Okostelefon
 sms=SMS
 sms-messenger-id=SMS-küldő azonosító
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=alkalommal
 social-activity-limit-type-times-a-day=alkalommal naponta
 social-activity-limit-type-times-per-period=alkalommal időszakonként
@@ -6197,8 +6246,11 @@ tomorrow=Holnap
 ton=Tonna
 tools=Eszközök
 top=Teteje
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Felső szint
 top-level-organizations=Felsőszintű szervezetek
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Legtöbbet hozzászólók
 top-users-out-of-x=Kiemelt felhasználók ennyiből: {0}.
 topic=Téma
@@ -6693,6 +6745,7 @@ with-scope=tartományban
 withdraw-submission=Beküldés visszavonása
 within=benne
 within-x=Ezen belül: {0}
+word=Word (Automatic Copy)
 word-search=Szókeresés
 word-spacing=Szótávolság
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV:
 yard=Yard
 year=Év
 year-abbreviation=é
+year-position=Year Position (Automatic Copy)
 year-s=év
 year-to-date=Évből dátum
 yearly=Éves
