--- a/portal-impl/src/content/Language_in.properties
+++ b/portal-impl/src/content/Language_in.properties
@@ -888,6 +888,7 @@ always=Selalu
 always-use-my-user-id=Selalu pakai User ID saya.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Amerika
 amount=Jumlah
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Account dengan {0} sebagai alamat email sudah ada dalam portal. Apakah Anda ingin mengasosiasikan kegiatan ini dengan account tersebut?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Sebuah tanda tak terduga dalam kesalahan ya
 an-unexpected-system-error-occurred=Terjadi sebuah kesalahan sistem yang tak terduga
 analytics=Analisis
 and=Dan
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=Dan Kemudian Dengan
 and-x-more=dan {0} lebih.
 anniversary=Peringatan
@@ -1308,6 +1311,9 @@ border-styles=Gaya Batas
 border-styling=Gaya Batas
 border-width=Lebar Batas
 bottom=Bagian bawah
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Cabang
 branches=Cabang
 breadcrumb=Remah roti
@@ -1372,6 +1378,7 @@ cas-server-name-help=Set ini untuk mengaktifkan dalam menghubungkan ke portal (m
 cas-server-url-help=Mengatur URL CAS server domain
 cas-service-url-help=Set ini untuk menonaktifkan dalam menghubungkan ke portal (misalnya http://localhost:8080/c/portal/login). Tidak menetapkan ini jika nama server CAS diatur.
 categories=Kategori
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategori dan Pesan
 categories[message-board]=Kategori
 categorization=Kategorisasi
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Set Kategori
 category[message-board]=Kategori
 cc=CC
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Menemukan
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Bab
 chapters=Bab
 characters-maximum=Maksimum jumlah karakter
 chart=Bagan
+chart-type=Chart Type (Automatic Copy)
 chart-width=Bagan Lebar
 charts=Bagan
 chat=Obrolan
@@ -1745,6 +1755,7 @@ custom-message=Pesan Kustom
 custom-portlet-xml=Kostum portlet.xml
 custom-question=Kostum Pertanyaan
 custom-range=Jarak Kostum
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Atribut Khusus
 custom-user-attributes-help=Menentukan atribut pengguna kustom akan mengambil aset yang ada pencocokan kategorisasi. Kategori harus dari konteks global.
 custom.field.boolean=Benar/Salah
@@ -1986,6 +1997,7 @@ disk=Kaset
 dismiss=Memberhentikan
 display=Tampilan
 display-a-datepicker=Tampilan Datepicker
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Tampilan Counters Kegiatan Tambahan
 display-as-tooltip=Tampilan Tooltip
 display-asset-categories-facet=Tampilan Aset Facet Kategori
@@ -2480,7 +2492,9 @@ finished=Selesai
 firm-name=Nama Perusahaan
 firms=Perusahaan
 first=Pertama
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Pesan Pertama
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Nama Pertama
 first-name-attribute=Nama Atribut Pertama
 first-thread=Urutan Pertama
@@ -2995,6 +3009,7 @@ language-to=Bahasa untuk
 language-type=Jenis Bahasa
 languages=Bahasa
 large=Lebih besar
+large-file=Large File (Automatic Copy)
 large-image=Gambar Besar
 large-image-url=Gambar URL besar
 large-rectangle=Persegi Panjang Besar
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Template Layout Plugin
 layout-template-plugins=Template Layout Plugins
 layout-templates=Template Layout
@@ -3087,6 +3103,9 @@ leave-site=Tinggalkan Situs
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Membiarkan kosong jika kupon tidak memeriksa SKU item
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Membiarkan kosong jika kupon tidak memeriksa kategori induk dari item.
 left=Kiri
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=ID Legal
 legal-name=Nama Legal
 legal-type=Jenis Legal
@@ -3161,6 +3180,7 @@ lockout-duration-help=Ini menentukan jumlah waktu bahwa akun pengguna terkunci.
 lockout-enabled=Kunci diaktifkan
 lockout-enabled-help=Jika ini dicentang, pengguna dapat mencoba untuk login beberapa kali sebelum account mereka terkunci.
 log-levels=Tingkat log
+logger-name=Logger Name (Automatic Copy)
 login=Login
 login-through-facebook=Login melalui Facebook
 login-url=Login URL
@@ -3280,6 +3300,7 @@ maybe-attending=Mungkin Menghadiri
 me=Saya
 media-files-must-be-one-of-the-following-formats=File media harus menjadi salah satu format berikut:
 medium=Medium
+medium-file=Medium File (Automatic Copy)
 medium-image=Gambar Medium
 medium-image-url=Gambar URL medium
 medium-rectangle=Persegi Panjang Medium
@@ -3296,6 +3317,8 @@ membership-type-private-help=Pengguna tidak diperbolehkan untuk meminta keanggot
 membership-type-restricted-help=Pengguna yang diizinkan untuk meminta keanggotaan. Permintaan akan perlu disetujui oleh administrator situs.
 memberships=Keanggotaan
 memory=Memori
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Gabung
 merge-data=Menggabungkan Data
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Gabung {0} halaman publik
 merged-from-x-x=(Gabung dari {0}, {1}
 message=Pesan
 message-added-email=Pesan Email ditambahkan
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Pesan Message Boards
 message-boards-home=Topik Message Boards
 message-boards-message-anonymous-help=Jika ini dicentang, maka pesan ini akan dikirim secara anonim.
@@ -3543,6 +3567,7 @@ monday-abbreviation=M
 monitoring=Pemantauan
 month=Bulan
 month-abbreviation=m
+month-position=Month Position (Automatic Copy)
 month-s=Bulan
 monthly=Bulanan
 monthly-payment=Pembayaran Bulanan
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Lebih baris di bagian bawah.
 more-x-results=Hasil {0} Lebih
 move=Pindah
 move-column=Pindah Kolom
+move-down=Move Down (Automatic Copy)
 move-files=Menghapus File
 move-page=Pindah Halaman
 move-selected-item-in-x-one-position-down=Pindahkan item yang dipilih dalam {0} satu posisi bawah.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Pindahkan item yang dipilih dari {0} ke {1}.
 move-thread=Pindah Urutan
 move-to=Pindahkan ke
 move-to-the-recycle-bin=Pindah ke Recycle Bin
+move-up=Move Up (Automatic Copy)
 move-web-content=Web Content yang diberikan
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Tidak Pernah Review
 new=Baru
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=Memperlihatkan Aplikasi Baru Template
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Tambah Blog Entry
 new-bookmark=Bookmark baru
 new-category=Kategori baru
@@ -4059,6 +4087,7 @@ pause=Berhenti sebentar
 payer-email-address=Alamat Email Pembayar
 payment-gross=Pembayaran Bruto
 payment-settings=Pengaturan Pembayaran
+paypal=PayPal (Automatic Copy)
 paypal-email-address=Alamat Email PayPal
 paypal-order=Pesanan Paypal
 pending=Menunda
@@ -4389,6 +4418,7 @@ pop-up=Pop Up
 port=Posting
 portal=Portal
 portal-data=Data Portal
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Contoh Portal //tentatif
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Utama
 print=Mencetak
 print-x-x=Mencetak <span class="{0}">{1}</span>
 priority=Prioritas
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Pribadi
 private-node=Node Pribadi
 private-nodes=Node Pribadi
@@ -4552,6 +4585,7 @@ purchase-order=Order Pembelian
 px=px (Automatic Copy)
 quantity=Kuantitas
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Mengingat saya
 reminder=Peringatan
 reminder-queries=Pertanyaan Pengungat
 reminder-query-and-answer-cannot-be-empty=Pertanyaan Pengingat dan jawaban tidak boleh kosong.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Jauh Host/IP
 remote-live=Remote Live
 remote-live-connection-settings=Pengaturan Koneksi Remote Live
@@ -4714,6 +4749,7 @@ reply=Balas
 reply-all=Balas Semua
 reply-as=Balas sebagai...
 reply-as-anonymous=Balas sebagai anonim
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Balas komentar
 reply-date=Tanggal balas
 reply-membership-request-for-x=Balas Keanggotaan Permintaan untuk {0
@@ -4816,6 +4852,9 @@ rich=Kaya
 rich-text-format=Kaya Format Teks
 ridge=Pegunungan
 right=Kanan
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robot
 role=Peran
 role-name=Nama Peran
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Pencarian
 search-all-organizations=Pencarian Organisasi
 search-all-users=Pencarian Pengguna
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Cari aplikasi (pencarian saat Anda mengetik).
 search-bookmarks=Dicari Bookmark
 search-by-id-or-url=Cari berdasarkan ID atau URL
 search-categories=Cari Kategori
 search-configuration=Konfigurasi Layout
 search-configuration-help=Bidang ini digunakan untuk menerapkan pengaturan konfigurasi pencarian lanjutan dalam bentuk string JSON.
+search-content=Search Content (Automatic Copy)
 search-coupons=Cari Kupon
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Silakan pilih Jenis yang berlaku
@@ -4918,6 +4959,7 @@ search-operator=Operator Pencarian
 search-orders=Pencarian Pesanan
 search-organizations=Pencarian Organisasi
 search-pages=Pencarian Halaman
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Cari kebijakan Password
 search-plugins=Cari Plugin
 search-products=Pencarian Produk
@@ -4966,6 +5008,7 @@ select-a-page=Halaman Dipilih
 select-a-site=Halaman Dipilih
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Pilih struktur untuk menyaring daftar konten web dengan struktur.
 select-a-type=Halaman Dipilih
+select-all=Select All (Automatic Copy)
 select-an-action-type=Pilih Tipe Aksi
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Pilih daftar yang ada atau menambahkan daftar yang akan ditampilkan dalam portlet.
 select-and-copy=Pilih Dan Salin
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Pilih Portlet
 select-question=Pilih Pertanyaan
 select-recipients=Pilih Penerima
+select-search=Select Search (Automatic Copy)
 select-site=Halaman Dipilih
 select-tags=Pilih Tag
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Pilih tindakan yang dapat melakukan peran ini pada <em>{0}</em> portlet.
@@ -5078,6 +5122,7 @@ servers=Server
 service=Layanan
 service-account=Layanan Akun
 service-password=Layanan Kata sandi
+service-search=Service Search (Automatic Copy)
 service-url=Layanan URL
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Layanan
@@ -5287,15 +5332,19 @@ sku=SKU
 skus=SKUs
 skype=Skype
 skyscraper=Pencakar langit
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovak
 small=Kecil
+small-file=Small File (Automatic Copy)
 small-image=Gambar Kecil
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=Gambar Kecil URL
 small-rectangle=Persegi Panjang Kecil
 small-square=Persegi Kecil
 smartphone=Smartphone (Automatic Copy)
 sms=SMS
 sms-messenger-id=ID Pengguna SMS
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=waktu
 social-activity-limit-type-times-a-day=kali sehari
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=Besok
 ton=Ton
 tools=Tool
 top=Atas
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level Organisasi
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Top Poster
 top-users-out-of-x=Keluar Dari pengguna Top{0}.
 topic=Topik
@@ -6693,6 +6745,7 @@ with-scope=dengan lingkup
 withdraw-submission=Withdraw Submission
 within=Dalam
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Pencarian kata
 word-spacing=Jarak kata
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV:
 yard=Halaman
 year=Tahun
 year-abbreviation=y
+year-position=Year Position (Automatic Copy)
 year-s=Tahun
 year-to-date=Tahun sampai dengan Tanggal
 yearly=Tahunan
