--- a/portal-impl/src/content/Language_it.properties
+++ b/portal-impl/src/content/Language_it.properties
@@ -888,6 +888,7 @@ always=Sempre
 always-use-my-user-id=Usa sempre la mia User ID.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Classifica Amazon (Automatic Translation)
 americas=Le Americhe
 amount=Importo
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Un account con {0} come indirizzo email è gia presente nel portale. Vuoi associare questa attività con l'account?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Si è verificato un errore inatteso durante
 an-unexpected-system-error-occurred=Si è verificato un errore di sistema inatteso.
 analytics=Analytics
 and=E
+and-operator=E operatore (Automatic Translation)
+and-or-operator=E/o operatore (Automatic Translation)
 and-then-by=E poi da
 and-x-more=e {0} in più.
 anniversary=Anniversario
@@ -1308,6 +1311,9 @@ border-styles=Stili del Bordo
 border-styling=Stile del Bordo
 border-width=Ampiezza del Bordo
 bottom=Base
+bottom-border-unit=Unità di bordo inferiore (Automatic Translation)
+bottom-margin-unit=Unità del margine inferiore (Automatic Translation)
+bottom-padding-unit=Unità di riempimento inferiore (Automatic Translation)
 branch=Ramo
 branches=Rami
 breadcrumb=Barra di Navigazione
@@ -1372,6 +1378,7 @@ cas-server-name-help=Imposta se si vuole un collegamento profondo nel portale (e
 cas-server-url-help=Imposta l'URL del dominio CAS server.
 cas-service-url-help=Imposta questa opzione per disabilitare deep linking nel portale (es. http://localhost:8080/c/portal/login). Non impostarla se il nome server CAS è impostato.
 categories=Categorie
+categories-admin-select-search=Ricerca di categorie selezionare Admin (Automatic Translation)
 categories-and-messages=Categorie e messaggi
 categories[message-board]=Categorie
 categorization=Categorizzazione
@@ -1383,6 +1390,8 @@ category-services=Servizi Categorie
 category-sets=Insiemi di Categorie
 category[message-board]=Categoria
 cc=CC
+cc-exp-month=Mese di scadenza CC (Automatic Translation)
+cc-exp-year=Anno scadenza CC (Automatic Translation)
 cc_amex=American Express
 cc_discover=Discover
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Capitolo
 chapters=Capitoli
 characters-maximum=Numero massimo caratteri
 chart=Grafico
+chart-type=Tipo di grafico (Automatic Translation)
 chart-width=Larghezza Grafico
 charts=Grafici
 chat=Grafico
@@ -1745,6 +1755,7 @@ custom-message=Messaggio Personalizzato
 custom-portlet-xml=portlet.xml personalizzato
 custom-question=Domanda Personalizzata
 custom-range=Intervallo Personalizzato
+custom-title=Titolo personalizzato (Automatic Translation)
 custom-user-attributes=Attributi Utente Personalizzati
 custom-user-attributes-help=Specificando gli attributi utente personalizzati si richiameranno le risorse con la categorizzazione corrispondente. Le categorie devono appartenere al contesto globale.
 custom.field.boolean=Vero/Falso
@@ -1986,6 +1997,7 @@ disk=Disco
 dismiss=Dismetti
 display=Visualizzazione
 display-a-datepicker=Visualizza selezionatore di date
+display-activity-counter-name=Nome di visualizzazione attività contatore (Automatic Translation)
 display-additional-activity-counters=Visualizza contatori di attività addizionali
 display-as-tooltip=Visualizza come Tooltip
 display-asset-categories-facet=Visualizza l'aspetto delle categorie delle risorse
@@ -2480,7 +2492,9 @@ finished=Finito
 firm-name=Nome Azienda
 firms=Aziende
 first=Primo
+first-day-of-week=Primo giorno della settimana (Automatic Translation)
 first-message=Primo Messaggio
+first-month-of-year=Primo mese dell'anno (Automatic Translation)
 first-name=Nome
 first-name-attribute=Attributo di nome
 first-thread=Prima Discussione
@@ -2995,6 +3009,7 @@ language-to=Lingua a
 language-type=Tipo di Linguaggio
 languages=Lingue
 large=Grande
+large-file=File di grandi dimensioni (Automatic Translation)
 large-image=Immagine Grande
 large-image-url=URL Immagine Grande
 large-rectangle=Rettangolo Grande
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 colonne (70/30) (Automatic Translation)
 layout-template-3-2-3-columns=3-2-3 colonne (Automatic Translation)
 layout-template-3-columns=3 colonne (Automatic Translation)
 layout-template-freeform=A mano libera (Automatic Translation)
+layout-template-id=ID modello layout (Automatic Translation)
 layout-template-plugin=Plugin Modello Impaginazione
 layout-template-plugins=Plugin Modello Impaginazione
 layout-templates=Modelli di Impaginazione
@@ -3087,6 +3103,9 @@ leave-site=Esci dal Sito
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Lascia questo spazio in bianco se il buono non controlla l'SKU dell'articolo.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Lascia questo spazio in bianco se il buono non controlla le categorie padre dell'articolo.
 left=Sinistra
+left-border-unit=Unità di bordo sinistro (Automatic Translation)
+left-margin-unit=Margine sinistro unità (Automatic Translation)
+left-padding-unit=Unità di riempimento sinistro (Automatic Translation)
 legal-id=ID Legale
 legal-name=Nome Legale
 legal-type=Tipo Legale
@@ -3161,6 +3180,7 @@ lockout-duration-help=Determina per quanto tempo il profilo dell'utente rimarrà
 lockout-enabled=Blocco Abilitato
 lockout-enabled-help=Se questa opzione è selezionata, l'utente può tentare il login un certo numero di volte prima che il suo profilo sia bloccato.
 log-levels=Livelli Log
+logger-name=Nome del registratore (Automatic Translation)
 login=Login
 login-through-facebook=Login tramite Facebook
 login-url=URL del Login
@@ -3280,6 +3300,7 @@ maybe-attending=Forse in attesa
 me=Me
 media-files-must-be-one-of-the-following-formats=I file Media devono essere nei seguenti formati:
 medium=Medio
+medium-file=Media File (Automatic Translation)
 medium-image=Immagine Media
 medium-image-url=URL Immagine Media
 medium-rectangle=Rettangolo Medio
@@ -3296,6 +3317,8 @@ membership-type-private-help=Gli utenti non hanno il premesso di iscriversi. Sol
 membership-type-restricted-help=Gli utenti hanno il premesso di iscriversi. La richiesta dovrà essere approvata dall'amministratore del sito.
 memberships=Iscrizioni
 memory=Memoria
+memory-used-vs-max-memory=Memoria utilizzata vs memoria Max (Automatic Translation)
+memory-used-vs-total-memory=Memoria utilizzata vs memoria totale (Automatic Translation)
 menu=Menù
 merge=Unisci
 merge-data=Unisci i Dati
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Unisci {0} pagine pubbliche
 merged-from-x-x=(Uniti da {0}, {1})
 message=Messaggio
 message-added-email=Email Nuovo Messaggio
+message-attachment=Messaggio allegato (Automatic Translation)
 message-board-messages=Messaggi Forum
 message-boards-home=Home Forum
 message-boards-message-anonymous-help=Se l'opzione è selezionata, questo messaggio sarà inviato anonimo.
@@ -3543,6 +3567,7 @@ monday-abbreviation=L
 monitoring=Monitoraggio
 month=Mese
 month-abbreviation=m
+month-position=Posizione del mese (Automatic Translation)
 month-s=mese(i)
 monthly=Mensilmente
 monthly-payment=Rata Mensile
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Più righe in fondo.
 more-x-results=Più di {0} Risultati
 move=Sposta
 move-column=Sposta la Colonna
+move-down=Sposta giù (Automatic Translation)
 move-files=Sposta File
 move-page=Sposta la Pagina
 move-selected-item-in-x-one-position-down=Sposta l'elemento selezionato in {0} una posizione in basso.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Sposta gli elementi selezionati da {0} a {1}.
 move-thread=Sposta la Discussione
 move-to=Sposta
 move-to-the-recycle-bin=Sposta nel Cestino
+move-up=Spostarsi verso l'alto (Automatic Translation)
 move-web-content=Sposta Contenuto Web
 move-x=Sposta {0}
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Senza Revisione
 new=Nuovo
 new-action-for-x=Nuova Azione per {0}
 new-application-display-template=Aggiungi Modello Visualizzazione Applicazione
+new-article-id=Nuovo articolo ID (Automatic Translation)
 new-blog-entry=Aggiungi Articolo Blog
 new-bookmark=Nuovo Segnalibro
 new-category=Nuova Categoria
@@ -4059,6 +4087,7 @@ pause=Pausa
 payer-email-address=Indirizzo Email dell'Acquirente
 payment-gross=Totale Pagamento
 payment-settings=Impostazioni di Pagamento
+paypal=PayPal (Automatic Translation)
 paypal-email-address=Indirizzo Email di PayPal
 paypal-order=Ordine PayPal
 pending=In Attesa
@@ -4389,6 +4418,7 @@ pop-up=Pop Up
 port=Porta
 portal=Portale
 portal-data=Dati del Portale
+portal-ext=Portale EXT (Automatic Translation)
 portal-instance=Istanze di Portale
 portal-instance-help=Oggetto che rappresenta l'istanza di portale corrente.
 portal-instance-id=Identificatore dell'Istanza di Portale
@@ -4473,6 +4503,9 @@ principal=Principale
 print=Stampa
 print-x-x=Stampa <span class="{0}">{1}</span>
 priority=Priorità
+priority-image=Immagine di priorità (Automatic Translation)
+priority-name=Nome di priorità (Automatic Translation)
+priority-value=Valore di priorità (Automatic Translation)
 private=Privata
 private-node=Nodo Privato
 private-nodes=Nodi Privati
@@ -4552,6 +4585,7 @@ purchase-order=Ordine d'acquisto
 px=px
 quantity=Quantità
 query=Query (Automatic Translation)
+query-contains=Query contiene (Automatic Translation)
 query-indexing-enabled-help=Se selezionato, le query che corrispondono alla soglia sono indicizzate e suggerite agli utenti come query correlate o come parte di suggerimenti auto-completati.
 query-indexing-threshold=Soglia Indicizzazione Query
 query-indexing-threshold-help=Se il numero di risultati di ricerca corrispondono alla soglia, la query è indicizzata e suggerita agli utenti che fanno ricerche simili.
@@ -4669,6 +4703,7 @@ remember-me=Ricordami
 reminder=Sollecito
 reminder-queries=Domande di ricordo
 reminder-query-and-answer-cannot-be-empty=La domanda e la risposta di recupero password non possono essere vuote.
+reminder-query-question=Promemoria Query domanda (Automatic Translation)
 remote-host-ip=Host/IP Remoto
 remote-live=Live Remoto
 remote-live-connection-settings=Impostazioni Connesione Live Remoto
@@ -4714,6 +4749,7 @@ reply=Rispondi
 reply-all=Rispondi a Tutti
 reply-as=Rispondi come...
 reply-as-anonymous=Rispondi come Anonimo
+reply-body=Risposta corpo (Automatic Translation)
 reply-comments=Commenti in risposta
 reply-date=Data di Risposta
 reply-membership-request-for-x=Risposta alla richiesta di iscrizione per {0}
@@ -4816,6 +4852,9 @@ rich=Ricco
 rich-text-format=Rich Text Format
 ridge=Ridge
 right=Destra
+right-border-unit=Unità di bordo destro (Automatic Translation)
+right-margin-unit=Margine destro unità (Automatic Translation)
+right-padding-unit=Imbottitura giusta unità (Automatic Translation)
 robots=Robot
 role=Ruolo
 role-name=Nome del Ruolo
@@ -4886,12 +4925,14 @@ script-file=File Script
 search=Ricerca
 search-all-organizations=Ricerca Organizzazioni
 search-all-users=Ricerca Utenti
+search-application=Applicazione di ricerca (Automatic Translation)
 search-applications-searches-as-you-type=Ricerca applicazioni (cerca mentre scrivi).
 search-bookmarks=Ricerca Segnalibri
 search-by-id-or-url=Ricerca per ID o per URL
 search-categories=Ricerca Categorie
 search-configuration=Configurazione Ricerca
 search-configuration-help=Questo campo è usato per applicare impostazioni avanzate di ricerca nel formato di una stringa JSON.
+search-content=Ricerca di contenuti (Automatic Translation)
 search-coupons=Ricerca Buoni Sconto
 search-custom-range-date-format=Inserisci la data nel seguente formato: AAAA-MM-GG
 search-custom-range-invalid-date-range=Seleziona un intervallo di date valido.
@@ -4918,6 +4959,7 @@ search-operator=Ricerca Operatore
 search-orders=Ricerca Ordini
 search-organizations=Ricerca Organizzazioni
 search-pages=Ricerca Pagine
+search-panel=Pannello di ricerca (Automatic Translation)
 search-password-policies=Ricerca Criteri Password
 search-plugins=Ricerca Plugin
 search-products=Ricerca Prodotti
@@ -4966,6 +5008,7 @@ select-a-page=Seleziona una Pagina
 select-a-site=Seleziona un Sito
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Seleziona una struttura per filtrare la lista dei contenuti web in base a una struttura.
 select-a-type=Seleziona un tipo
+select-all=Seleziona tutto (Automatic Translation)
 select-an-action-type=Seleziona un Tipo di Azione
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Seleziona una lista esistente o aggiungine una da visualizzare nella portlet.
 select-and-copy=Seleziona e Copia
@@ -4997,6 +5040,7 @@ select-parent-site=Seleziona Sito Padre
 select-portlet=Seleziona Portlet
 select-question=Seleziona Domanda
 select-recipients=Seleziona Destinatari
+select-search=Selezionare ricerca (Automatic Translation)
 select-site=Seleziona Sito
 select-tags=Seleziona Tag
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Seleziona l'azione che questo ruolo può effettuare sul portlet <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Server
 service=Servizio
 service-account=Account di Servizio
 service-password=Password Servizio
+service-search=Servizio ricerca (Automatic Translation)
 service-url=URL Service
 service-url-for-opensso-help=Questo URL è dove si può accedere a OpenSSO per utilizzare i web service per l'autenticazione. Se si usa OpenSS0 Express 8 o maggiore, bisogna avere Java 6.
 services=I Service
@@ -5287,15 +5332,19 @@ sku=SKU
 skus=SKU
 skype=Skype
 skyscraper=Grattacielo
+slide-show=Slide-Show (Automatic Translation)
 slovak=Slovacco
 small=Piccola
+small-file=File di piccole dimensioni (Automatic Translation)
 small-image=Immagine Piccola
+small-image-file=File immagine piccola (Automatic Translation)
 small-image-url=URL Immagine Piccola
 small-rectangle=Rettangolo Piccolo
 small-square=Quadrato Piccolo
 smartphone=Smartphone
 sms=SMS
 sms-messenger-id=ID SMS Messenger
+sms-sn=Nome schermata SMS (Automatic Translation)
 social-activity-limit-type-times=volte
 social-activity-limit-type-times-a-day=volte al giorno
 social-activity-limit-type-times-per-period=volte per periodo
@@ -6197,8 +6246,11 @@ tomorrow=Domani
 ton=Tonnellata
 tools=Strumenti
 top=Sopra
+top-border-unit=Unità di bordo superiore (Automatic Translation)
 top-level=Livello Superiore
 top-level-organizations=Organizzazioni di livello superiore
+top-margin-unit=Margine superiore unità (Automatic Translation)
+top-padding-unit=Top imbottitura unità (Automatic Translation)
 top-posters=Utenti più Attivi
 top-users-out-of-x=Utenti più attivi su {0}.
 topic=Argomento
@@ -6693,6 +6745,7 @@ with-scope=con ambito
 withdraw-submission=Ritirare l'Invio
 within=Entro
 within-x=All'interno {0}
+word=Parola (Automatic Translation)
 word-search=Ricerca Parole
 word-spacing=Spaziatura Parole
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=CSV Yahoo!:
 yard=Iarda
 year=Anno
 year-abbreviation=a
+year-position=Posizione di anno (Automatic Translation)
 year-s=anno(i)
 year-to-date=Anni alla data
 yearly=Annualmente
