--- a/portal-impl/src/content/Language_ko.properties
+++ b/portal-impl/src/content/Language_ko.properties
@@ -888,6 +888,7 @@ always=항상
 always-use-my-user-id=항상 나의 사용자 고유 번호를 사용하십시요.
 am=오전 (Automatic Translation)
 am-pm=오전/오후 (Automatic Translation)
+amazon-rankings=아마존 순위 (Automatic Translation)
 americas=아메리카
 amount=총계
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=An account with {0} as the email address already exists in the portal. Do you want to associate this activity with that account? (Automatic Copy)
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=과실안에 의외 표시는 일어났다.
 an-unexpected-system-error-occurred=의외 체계 과실은 일어났다.
 analytics=분석 (Automatic Translation)
 and=그리고
+and-operator=그리고 연산자 (Automatic Translation)
+and-or-operator=연산자 및/또는 (Automatic Translation)
 and-then-by=그리고에 의해 (Automatic Translation)
 and-x-more=and {0} more. (Automatic Copy)
 anniversary=기념일
@@ -1308,6 +1311,9 @@ border-styles=국경 작풍
 border-styling=국경 유행에 따라 디자인 함
 border-width=국경 폭
 bottom=바닥
+bottom-border-unit=아래쪽 테두리 단위 (Automatic Translation)
+bottom-margin-unit=아래쪽 여백 단위 (Automatic Translation)
+bottom-padding-unit=아래쪽 여백 단위 (Automatic Translation)
 branch=지점 (Automatic Translation)
 branches=분기 (Automatic Translation)
 breadcrumb=빵부스러기
@@ -1372,6 +1378,7 @@ cas-server-name-help=이 포털 (예: http://localhost:8080)에 깊은 연결을
 cas-server-url-help=CAS 서버 도메인 URL을 설정 합니다. (Automatic Translation)
 cas-service-url-help=이 포털 (예: http://localhost:8080/c/portal/login)에 깊은 연결을 사용 하지 않도록 설정 합니다. CAS 서버 이름을 설정 하는 경우 이것을 설정 하지 마십시오. (Automatic Translation)
 categories=종류
+categories-admin-select-search=카테고리 관리자 선택 검색 (Automatic Translation)
 categories-and-messages=종류와 메시지
 categories[message-board]=종류
 categorization=분류
@@ -1383,6 +1390,8 @@ category-services=카테고리 서비스 (Automatic Translation)
 category-sets=종류 세트
 category[message-board]=종류
 cc=CC (Automatic Translation)
+cc-exp-month=CC 만료 달 (Automatic Translation)
+cc-exp-year=CC 만료 년 (Automatic Translation)
 cc_amex=급행 미국인
 cc_discover=발견하십시요
 cc_mastercard=마스터 카드 (Automatic Translation)
@@ -1428,6 +1437,7 @@ chapter=지부
 chapters=지부
 characters-maximum=최대 특성
 chart=도표
+chart-type=차트 종류 (Automatic Translation)
 chart-width=차트 너비 (Automatic Translation)
 charts=도표
 chat=잡담
@@ -1745,6 +1755,7 @@ custom-message=주문 메시지
 custom-portlet-xml=관례portlet.xml
 custom-question=사용자 정의 질문 (Automatic Translation)
 custom-range=사용자 정의 범위 (Automatic Translation)
+custom-title=사용자 지정 제목 (Automatic Translation)
 custom-user-attributes=사용자 지정 특성 (Automatic Translation)
 custom-user-attributes-help=사용자 지정 특성을 지정 하면 일치 하는 분류는 자산 검색 합니다. 카테고리 글로벌 컨텍스트에 있어야 합니다. (Automatic Translation)
 custom.field.boolean=참/거짓 (Automatic Translation)
@@ -1986,6 +1997,7 @@ disk=디스크 (Automatic Translation)
 dismiss=기 각 (Automatic Translation)
 display=전시
 display-a-datepicker=Datepicker를 표시하십시오
+display-activity-counter-name=디스플레이 활동 카운터 이름 (Automatic Translation)
 display-additional-activity-counters=추가 활동 카운터 표시 (Automatic Translation)
 display-as-tooltip=도구 설명으로 표시 (Automatic Translation)
 display-asset-categories-facet=디스플레이 자산 범주 패싯 (Automatic Translation)
@@ -2480,7 +2492,9 @@ finished=끝나는
 firm-name=확고한 이름
 firms=상사
 first=첫째로
+first-day-of-week=주의 첫째 요일 (Automatic Translation)
 first-message=첫번째 메시지
+first-month-of-year=올해의 첫 번째 달 (Automatic Translation)
 first-name=이름
 first-name-attribute=이름 속성
 first-thread=첫번째 실
@@ -2995,6 +3009,7 @@ language-to=언어를 (Automatic Translation)
 language-type=언어 유형
 languages=언어
 large=더 큰
+large-file=큰 파일 (Automatic Translation)
 large-image=큰 심상
 large-image-url=큰 심상 URL
 large-rectangle=큰 장방형
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 열 (70/30) (Automatic Translation)
 layout-template-3-2-3-columns=3-2-3 열 (Automatic Translation)
 layout-template-3-columns=3 열 (Automatic Translation)
 layout-template-freeform=자유형 (Automatic Translation)
+layout-template-id=레이아웃 서식 파일 ID (Automatic Translation)
 layout-template-plugin=플러그 접속식 배치 템플렛
 layout-template-plugins=배치 템플렛Plugins
 layout-templates=배치 템플렛
@@ -3087,6 +3103,9 @@ leave-site=사이트를 남겨 주세요 (Automatic Translation)
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=쿠폰이 품목SKU을 검사하지 않으면 이 공백을 남겨두십시요.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=쿠폰이 품목의 부모 종류를 검사하지 않으면 이 공백을 남겨두십시요.
 left=좌
+left-border-unit=왼쪽된 테두리 단위 (Automatic Translation)
+left-margin-unit=왼쪽된 여백 단위 (Automatic Translation)
+left-padding-unit=왼쪽된 안쪽 여백 단위 (Automatic Translation)
 legal-id=법적인 식별
 legal-name=법적인 이름
 legal-type=법적인 유형
@@ -3161,6 +3180,7 @@ lockout-duration-help=이것은 사용자 계정이 고정 되는 소요 시간 
 lockout-enabled=가능하게 하는 차단
 lockout-enabled-help=이것이 검사되면, 그들의 계정이 고정 될 전에 사용자는 정해진 수 시간을 접속한것을 시도할 수 있는다.
 log-levels=통나무는 수평하게 한다
+logger-name=로 거 이름 (Automatic Translation)
 login=로그인
 login-through-facebook=페이스 북을 통해 로그인 (Automatic Translation)
 login-url=로그인URL
@@ -3280,6 +3300,7 @@ maybe-attending=어쩌면 참석
 me=나
 media-files-must-be-one-of-the-following-formats=미디어 파일은 다음 형식 중 하나 여야 합니다. (Automatic Translation)
 medium=매체
+medium-file=중간 파일 (Automatic Translation)
 medium-image=중간 심상
 medium-image-url=중간 심상 URL
 medium-rectangle=중간 장방형
@@ -3296,6 +3317,8 @@ membership-type-private-help=사용자 멤버 자격을 요청 수 없습니다.
 membership-type-restricted-help=사용자가 구성원을 요청할 수 있습니다. 사이트 관리자의 승인을 요청 해야 합니다. (Automatic Translation)
 memberships=그룹 등록 (Automatic Translation)
 memory=기억
+memory-used-vs-max-memory=최대 메모리 대 사용 되는 메모리 (Automatic Translation)
+memory-used-vs-total-memory=총 메모리 대 사용 되는 메모리 (Automatic Translation)
 menu=메뉴 (Automatic Translation)
 merge=합치기
 merge-data=합치기 자료
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Merge {0} public pages (Automatic Copy)
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=메시지
 message-added-email=메시지는 전자 우편을 추가했다
+message-attachment=메시지 첨부 파일 (Automatic Translation)
 message-board-messages=전보국 메시지
 message-boards-home=전보국 화제
 message-boards-message-anonymous-help=이것이 검사되는 경우에, 이 메시지는 익명으로 올라올 것이다.
@@ -3543,6 +3567,7 @@ monday-abbreviation=M (Automatic Translation)
 monitoring=감시
 month=개월
 month-abbreviation=m (Automatic Translation)
+month-position=달 위치 (Automatic Translation)
 month-s=월 (Automatic Translation)
 monthly=매달
 monthly-payment=월부금
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=맨 아래에 행이 더 이상입니다. (Automatic Transla
 more-x-results=More {0} Results (Automatic Copy)
 move=움직임
 move-column=움직임 란
+move-down=아래로 이동 (Automatic Translation)
 move-files=파일을 제거하십시요
 move-page=움직임 페이지
 move-selected-item-in-x-one-position-down=Move selected item in {0} one position down. (Automatic Copy)
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Move selected items from {0} to {1}. (Automatic 
 move-thread=움직임 실
 move-to=움직임에
 move-to-the-recycle-bin=휴지통으로 이동 (Automatic Translation)
+move-up=위로 이동 (Automatic Translation)
 move-web-content=보행자 웹 내용
 move-x=Move {0} (Automatic Copy)
 movie=영화
@@ -3616,6 +3643,7 @@ never-review=결코 검토
 new=새로운
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=새 응용 프로그램 디스플레이 템플릿 (Automatic Translation)
+new-article-id=새로운 문서 ID (Automatic Translation)
 new-blog-entry=Blog입장을 추가하십시요
 new-bookmark=전망은 Bookmarks
 new-category=종류를 추가하십시요
@@ -4059,6 +4087,7 @@ pause=쉼
 payer-email-address=Payer Email.address
 payment-gross=심한 지불
 payment-settings=지불 조정
+paypal=페이팔 (Automatic Translation)
 paypal-email-address=PayPal Email.address
 paypal-order=PayPal 명령
 pending=미정
@@ -4389,6 +4418,7 @@ pop-up=별안간 나타나십시요
 port=항구
 portal=문맥
 portal-data=문맥 자료
+portal-ext=포털 내선 (Automatic Translation)
 portal-instance=문맥 경우
 portal-instance-help=현재 포털 인스턴스를 나타내는 개체입니다. (Automatic Translation)
 portal-instance-id=포털 인스턴스 식별자 (Automatic Translation)
@@ -4473,6 +4503,9 @@ principal=주요한
 print=인쇄
 print-x-x=Print <span class="{0}">{1}</span> (Automatic Copy)
 priority=우선권
+priority-image=우선 이미지 (Automatic Translation)
+priority-name=우선 순위 이름 (Automatic Translation)
+priority-value=우선 순위 값 (Automatic Translation)
 private=개인
 private-node=개인 마디
 private-nodes=개인 마디
@@ -4552,6 +4585,7 @@ purchase-order=구매 주문서 (Automatic Translation)
 px=px (Automatic Translation)
 quantity=양
 query=쿼리 (Automatic Translation)
+query-contains=쿼리 포함 (Automatic Translation)
 query-indexing-enabled-help=이것을 선택 하는 경우 임계값을 충족 하는 쿼리 인덱스 이며 관련된 쿼리 또는 자동 완성 제안의 일부로 사용자에 게 제안 했다. (Automatic Translation)
 query-indexing-threshold=쿼리 인덱싱 임계값 (Automatic Translation)
 query-indexing-threshold-help=검색 결과 수가이 임계값을 충족 하는 경우 쿼리 인덱스 이며 비슷한 쿼리를 사용 하 여 검색 하는 사용자에 게 제안 했다. (Automatic Translation)
@@ -4669,6 +4703,7 @@ remember-me=나에게를 생각하십시요
 reminder=신호
 reminder-queries=신호 질문
 reminder-query-and-answer-cannot-be-empty=신호 질문과 응답은 빌 수 없다.
+reminder-query-question=알림 쿼리 질문 (Automatic Translation)
 remote-host-ip=우원한 Host/IP
 remote-live=원격 라이브 (Automatic Translation)
 remote-live-connection-settings=원격 연결 설정 (Automatic Translation)
@@ -4714,6 +4749,7 @@ reply=대답
 reply-all=모두를 회답하십시요
 reply-as=답 글로... (Automatic Translation)
 reply-as-anonymous=익명것과 같이 회답하십시요
+reply-body=응답 본문 (Automatic Translation)
 reply-comments=대답은 논평한다
 reply-date=대답 날짜
 reply-membership-request-for-x=Reply Membership Request for {0} (Automatic Copy)
@@ -4816,6 +4852,9 @@ rich=부유한
 rich-text-format=부유한 원본 체재
 ridge=리지
 right=권리
+right-border-unit=오른쪽 테두리 단위 (Automatic Translation)
+right-margin-unit=오른쪽 여백 단위 (Automatic Translation)
+right-padding-unit=오른쪽 안쪽 여백 단위 (Automatic Translation)
 robots=로봇
 role=역할
 role-name=역할 이름
@@ -4886,12 +4925,14 @@ script-file=스크립트 파일 (Automatic Translation)
 search=수색
 search-all-organizations=수색 조직
 search-all-users=수색 사용자
+search-application=검색 응용 프로그램 (Automatic Translation)
 search-applications-searches-as-you-type=수색 신청 (수색 당신 유형).
 search-bookmarks=검색 북마크 (Automatic Translation)
 search-by-id-or-url=IDURL에의한 수색
 search-categories=수색 종류
 search-configuration=주요 윤곽
 search-configuration-help=이 필드는 JSON 문자열 형태로 고급 검색 구성 설정을 적용 하려면 사용 됩니다. (Automatic Translation)
+search-content=검색 내용 (Automatic Translation)
 search-coupons=수색 쿠폰
 search-custom-range-date-format=다음과 같은 형식으로 날짜를 입력 해 주시기 바랍니다: YYYY-MM-dd 형식 (Automatic Translation)
 search-custom-range-invalid-date-range=유효한 유형을 선정하십시요.
@@ -4918,6 +4959,7 @@ search-operator=수색 통신수
 search-orders=수색 순서
 search-organizations=수색 조직
 search-pages=수색 페이지
+search-panel=검색 패널 (Automatic Translation)
 search-password-policies=수색 암호 방침
 search-plugins=수색Plugins
 search-products=수색 제품
@@ -4966,6 +5008,7 @@ select-a-page=선정된 페이지
 select-a-site=선정된 페이지
 select-a-structure-to-filter-the-web-content-list-by-a-structure=구조에 의하여 웹 내용 명부를 거르기 위하여 구조를 선정하십시오.
 select-a-type=선정된 페이지
+select-all=모두 선택 (Automatic Translation)
 select-an-action-type=동작 유형 선택 (Automatic Translation)
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=기존 목록을 선택 하거나이 포틀릿에 표시할 목록을 추가 합니다. (Automatic Translation)
 select-and-copy=선정하고 베끼십시요
@@ -4997,6 +5040,7 @@ select-parent-site=상위 사이트 선택 (Automatic Translation)
 select-portlet=Portlet을 선정하십시요
 select-question=질문을 선택 (Automatic Translation)
 select-recipients=수령인을 선정하십시요
+select-search=검색 선택 (Automatic Translation)
 select-site=선정된 페이지
 select-tags=꼬리표를 선정하십시요
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Select the action that this role can perform on the <em>{0}</em> portlet. (Automatic Copy)
@@ -5078,6 +5122,7 @@ servers=서버
 service=서비스
 service-account=서비스 계정 (Automatic Translation)
 service-password=서비스 암호 (Automatic Translation)
+service-search=서비스 검색 (Automatic Translation)
 service-url=서비스URL
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=서비스
@@ -5287,15 +5332,19 @@ sku=SKU (Automatic Translation)
 skus=Sku (Automatic Translation)
 skype=스 카이 프 (Automatic Translation)
 skyscraper=마천루
+slide-show=슬라이드 쇼 (Automatic Translation)
 slovak=슬로바키아
 small=작은 (Automatic Translation)
+small-file=작은 파일 (Automatic Translation)
 small-image=작은 심상
+small-image-file=작은 이미지 파일 (Automatic Translation)
 small-image-url=작은 심상 URL
 small-rectangle=작은 장방형
 small-square=작은 사각
 smartphone=스마트폰 (Automatic Translation)
 sms=SMS (Automatic Translation)
 sms-messenger-id=SMS 메신저 식별
+sms-sn=SMS 화면 이름 (Automatic Translation)
 social-activity-limit-type-times=시간 (Automatic Translation)
 social-activity-limit-type-times-a-day=하루 시간 (Automatic Translation)
 social-activity-limit-type-times-per-period=기간 당 번 (Automatic Translation)
@@ -6196,8 +6245,11 @@ tomorrow=내일
 ton=톤
 tools=공구
 top=정상
+top-border-unit=위쪽 테두리 단위 (Automatic Translation)
 top-level=최상위 수준 (Automatic Translation)
 top-level-organizations=상위 레벨 조직 (Automatic Translation)
+top-margin-unit=위쪽 여백 단위 (Automatic Translation)
+top-padding-unit=상위 단위 패딩 (Automatic Translation)
 top-posters=최고 포스터
 top-users-out-of-x=Top users out of {0}. (Automatic Copy)
 topic=화제
@@ -6692,6 +6744,7 @@ with-scope=범위로
 withdraw-submission=제출 철회 (Automatic Translation)
 within=안에
 within-x=Within {0} (Automatic Copy)
+word=단어 (Automatic Translation)
 word-search=낱말 수색
 word-spacing=낱말 간격
 wordpress=워드 프레스 (Automatic Translation)
@@ -6821,6 +6874,7 @@ yahoo-cvs=Yahoo ! CSV:
 yard=야드
 year=년
 year-abbreviation=y (Automatic Translation)
+year-position=년 위치 (Automatic Translation)
 year-s=연도 (Automatic Translation)
 year-to-date=날짜에 년
 yearly=매년
