--- a/portal-impl/src/content/Language_nb.properties
+++ b/portal-impl/src/content/Language_nb.properties
@@ -888,6 +888,7 @@ always=Alltid
 always-use-my-user-id=Bruk alltid min brukerid.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Amerika
 amount=Sum
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=En konto med e-postadressen {0} eksisterer allerede i portalen. Ønsker du å assosiere denne aktiviteten med den eksisterende kontoen?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=En uventet innloggingsfeil har oppstått.
 an-unexpected-system-error-occurred=En uventet systemfeil har oppstått.
 analytics=Analytics
 and=Og
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=Og så ved
 and-x-more=og {0} flere.
 anniversary=Jubileum
@@ -1308,6 +1311,9 @@ border-styles=Kanttyper
 border-styling=Kantstiler
 border-width=Kantbredde
 bottom=Bunn
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Gren
 branches=Grener
 breadcrumb=Brødsmule
@@ -1372,6 +1378,7 @@ cas-server-name-help=Velg dette for å tillate dyplenking inn i portalen (for ek
 cas-server-url-help=Angi CAS-serverens domene-URL.
 cas-service-url-help=Velg denne for å deaktivere dyplenking inn i portalen (for eksempel http://localhost:8080/c/portal/login). Ikke velg denne dersom CAS-tjenernavn er satt.
 categories=Kategorier
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategorier og meldinger
 categories[message-board]=Kategorier
 categorization=Kategorisering
@@ -1383,6 +1390,8 @@ category-services=Kategoritjenester
 category-sets=Kategorisett
 category[message-board]=Kategori
 cc=CC
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Discover
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Kapittel
 chapters=Kapitler
 characters-maximum=Maksimalt antall tegn
 chart=Diagram
+chart-type=Chart Type (Automatic Copy)
 chart-width=Diagrambredde
 charts=Diagram
 chat=Chatte
@@ -1745,6 +1755,7 @@ custom-message=Tilpasset melding
 custom-portlet-xml=Tilpasset portlet.xml
 custom-question=Tilpasset spørsmål
 custom-range=Egendefinert utvalg
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Tilpassede brukerattributter
 custom-user-attributes-help=Når egendefinerte brukerattributter angis vil innhold med tilsvarende kategorisering hentes. Kategorier må være fra den globale konteksten.
 custom.field.boolean=Sant/usant
@@ -1986,6 +1997,7 @@ disk=Disk
 dismiss=Avvise
 display=Vis
 display-a-datepicker=Vis datovelger
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Vis flere aktivitetstellere
 display-as-tooltip=Vis som tooltip
 display-asset-categories-facet=Vis innholdskategorifasett
@@ -2480,7 +2492,9 @@ finished=Ferdig
 firm-name=Firmanavn
 firms=Firma
 first=Første
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Første melding
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Fornavn
 first-name-attribute=Fornavn atributt
 first-thread=Første tråd
@@ -2995,6 +3009,7 @@ language-to=Språk til
 language-type=Språktype
 languages=Språk
 large=Stor
+large-file=Large File (Automatic Copy)
 large-image=Stort bilde
 large-image-url=Stort bilde URL
 large-rectangle=Stort rektangel
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Uformingsmaltilegg
 layout-template-plugins=Utformingsmalprogramtilegg
 layout-templates=Utformingsmaler
@@ -3087,6 +3103,9 @@ leave-site=Forlate organisasjonen
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=La dette feltet være blankt om kupongen ikke motsvarer varens SKU.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=La dette feltet være blankt om kupongen ikke motsvarer varens øvrige kategorier.
 left=Venstre
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Juridisk ID
 legal-name=Juridisk navn
 legal-type=Juridisk type
@@ -3161,6 +3180,7 @@ lockout-duration-help=Dette angir hvor lenge en bruker skal utestenges.
 lockout-enabled=Utelåsing aktivert
 lockout-enabled-help=Dersom denne er valgt kan en bruker forsøke å logge på et gitt antall ganger før kontoen deres blokkeres.
 log-levels=Loggnivå
+logger-name=Logger Name (Automatic Copy)
 login=Brukernavn
 login-through-facebook=Logg inn med Facebook
 login-url=Innlogggings URL
@@ -3280,6 +3300,7 @@ maybe-attending=Deltar kanskje
 me=Meg
 media-files-must-be-one-of-the-following-formats=Mediafiler må være i en av følgende format:
 medium=Mellomstort
+medium-file=Medium File (Automatic Copy)
 medium-image=Mellomstort bilde
 medium-image-url=Mellomstort bilde URL
 medium-rectangle=Mellomstort rektangel
@@ -3296,6 +3317,8 @@ membership-type-private-help=Brukere kan ikke be om medlemskap. Bare nettstedsad
 membership-type-restricted-help=Brukere kan be om medlemskap. Forespørselen må godtas av en av nettstedsadministratorene.
 memberships=Medlemskap
 memory=Minne
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Meny
 merge=Flett
 merge-data=Flett data
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Flett {0} offentlige sider
 merged-from-x-x=(Flettet fra {0}, {1})
 message=Melding
 message-added-email=E-post om ny melding
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Foruminnlegg
 message-boards-home=Diskusjonsforum hovedside
 message-boards-message-anonymous-help=Dersom denne er valgt vil meldingen bli postet anonymt.
@@ -3543,6 +3567,7 @@ monday-abbreviation=M
 monitoring=Overvåking
 month=Måned
 month-abbreviation=m
+month-position=Month Position (Automatic Copy)
 month-s=måned(er)
 monthly=Månedlig
 monthly-payment=Månedlig betaling
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Flere rader ved bunnen.
 more-x-results=Flere {0} resultater
 move=Flytt
 move-column=Flytt kolonne
+move-down=Move Down (Automatic Copy)
 move-files=Flytt filer
 move-page=Flytt side
 move-selected-item-in-x-one-position-down=Flytt valgte element i {0} en posisjon ned.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Flytt valgte elementer fra {0} til {1}.
 move-thread=Flytt tråd
 move-to=Flytte til
 move-to-the-recycle-bin=Flytt til søppelkassen
+move-up=Move Up (Automatic Copy)
 move-web-content=Flytt web-innhold
 move-x=Flytt {0}
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Aldri revider
 new=Ny
 new-action-for-x=Ny handling for {0}
 new-application-display-template=Ny applikasjonsvisningsmal
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Nytt blogginnlegg
 new-bookmark=Nytt bokmerke
 new-category=Ny kategori
@@ -4059,6 +4087,7 @@ pause=Pause
 payer-email-address=Betalerens e-post adresse
 payment-gross=Brutto betaling
 payment-settings=Betalingsinnstillinger
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal e-postadresse
 paypal-order=PayPal bestilling
 pending=Venter
@@ -4389,6 +4418,7 @@ pop-up=Pop-up vindu
 port=Port
 portal=Portal
 portal-data=Portaldata
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Portalinstans
 portal-instance-help=Objekt som representerer den gjeldende portalinstansen.
 portal-instance-id=Portalinstansidentifikator
@@ -4473,6 +4503,9 @@ principal=Systembruker
 print=Skriv ut
 print-x-x=Skriv ut <span class="{0}">{1}</span>
 priority=Prioritet
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privat
 private-node=Privat node
 private-nodes=Private noder
@@ -4552,6 +4585,7 @@ purchase-order=Innkjøpsordre
 px=px
 quantity=Kvantitet
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=Dersom dette velges vil spørringer som når terskelverdien bli indeksert og foreslått til brukere som relaterte spørringer eller som en del av autofullførforslag.
 query-indexing-threshold=Spørringindekseringsterskelverdi
 query-indexing-threshold-help=Dersom antall søkeresultat når terskelverdien vil spørringen indekseres og foreslås til brukere som søker etter lignende spørringer.
@@ -4669,6 +4703,7 @@ remember-me=Husk meg
 reminder=Påminnelse
 reminder-queries=Påminnelsesspørmål
 reminder-query-and-answer-cannot-be-empty=Påminnelsesspørsmål og svar kan ikke være tomt.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Fjernstyrt vert/IP
 remote-live=Fjerntjenerproduksjonsmiljø
 remote-live-connection-settings=Fjerntjenerproduksjonsmiljøinnstillinger
@@ -4714,6 +4749,7 @@ reply=Svar
 reply-all=Svar alle
 reply-as=Svar som...
 reply-as-anonymous=Svar som anonym
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Svarkommentarer
 reply-date=Svardato
 reply-membership-request-for-x=Svar på forespørsel om medlemskap for {0}
@@ -4816,6 +4852,9 @@ rich=Rik
 rich-text-format=Rik Tekst Format
 ridge=Tak
 right=Høyre
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Roboter
 role=Rolle
 role-name=Rollenavn
@@ -4886,12 +4925,14 @@ script-file=Skript-fil
 search=Søk
 search-all-organizations=Søk alle organisasjoner
 search-all-users=Søk alle brukere
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Søk (søker mens du skriver).
 search-bookmarks=Søk i bokmerker
 search-by-id-or-url=Søk med ID eller URL
 search-categories=Søk kategorier
 search-configuration=Søkkonfigurasjon
 search-configuration-help=Dette feltet brukes til å angi avansert søkkonfigurasjonsinnstillinger i form av en JSON-streng.
+search-content=Search Content (Automatic Copy)
 search-coupons=Søk kuponger
 search-custom-range-date-format=Vennligst angi en dato i formatet: ÅÅÅÅ-MM-DD
 search-custom-range-invalid-date-range=Vennligst angi et gyldig datointervall.
@@ -4918,6 +4959,7 @@ search-operator=Søkeoperatør
 search-orders=Søk ordre
 search-organizations=Søk organisasjoner
 search-pages=Søk sider
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Søk passordprinsipp
 search-plugins=Søk tilleggsmoduler
 search-products=Søk produkter
@@ -4966,6 +5008,7 @@ select-a-page=Velg en side
 select-a-site=Velg et nettsted
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Velg en struktur for å filtrere webinnhold etter strukturen.
 select-a-type=Velg en type
+select-all=Select All (Automatic Copy)
 select-an-action-type=Velg en handlingstype
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Velg en eksisterende list eller legg til en ny liste som skal vises i dette portletet.
 select-and-copy=Velg og kopier
@@ -4997,6 +5040,7 @@ select-parent-site=Velg overliggende nettsted
 select-portlet=Velg portlet
 select-question=Velg spørsmål
 select-recipients=Velg mottakere
+select-search=Select Search (Automatic Copy)
 select-site=Velg nettsted
 select-tags=Velg tagger
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Velg handlingen denne rollen kan bruke på <em>{0}</em> portletet.
@@ -5078,6 +5122,7 @@ servers=Tjenere
 service=Tjeneste
 service-account=Tjenestekonto
 service-password=Tjenestepassord
+service-search=Service Search (Automatic Copy)
 service-url=Tjeneste-URL
 service-url-for-opensso-help=Denne URL-en er der hvor OpenSSO eksponerer autentiserings-web-tjenester. Dersom du bruker OpenSSO Express 8 eller senere, må tjeneren kjøre Java 6.
 services=Tjenester
@@ -5287,15 +5332,19 @@ sku=Artikelnummer
 skus=Artikelnummer
 skype=Skype
 skyscraper=Skyskraper
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovakisk
 small=Liten
+small-file=Small File (Automatic Copy)
 small-image=Lite bilde
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL for lite bilde
 small-rectangle=Lite rektangel
 small-square=Liten kvadrat
 smartphone=Smarttelefon
 sms=SMS
 sms-messenger-id=SMS Messenger-ID
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=ganger
 social-activity-limit-type-times-a-day=ganger om dagen
 social-activity-limit-type-times-per-period=ganger pr periode
@@ -6197,8 +6246,11 @@ tomorrow=I morgen
 ton=Tonn
 tools=Verktøy
 top=Topp
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Toppnivå
 top-level-organizations=Toppnivåorganisasjoner
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Flest innlegg av
 top-users-out-of-x=Hyppigste brukere ut av {0}.
 topic=Tema
@@ -6693,6 +6745,7 @@ with-scope=med rekkevidde
 withdraw-submission=Trekk tilbake innsendelse
 within=Innen
 within-x=Innen {0}
+word=Word (Automatic Copy)
 word-search=Søk ord
 word-spacing=Ord mellomrom
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV:
 yard=Engelsk yard
 year=År
 year-abbreviation=y
+year-position=Year Position (Automatic Copy)
 year-s=år
 year-to-date=År til dato
 yearly=Årlig
