--- a/portal-impl/src/content/Language_sk.properties
+++ b/portal-impl/src/content/Language_sk.properties
@@ -888,6 +888,7 @@ always=Vždy
 always-use-my-user-id=Vždy použiť moje používatľské ID.
 am=dop.
 am-pm=dop./pop.
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Ameriky
 amount=Množstvo
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Účet s e-mailovou adresou {0} už na portáli existuje. Chcete spojiť túto aktivitu so zmieňovaným účtom?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Nastala neočakávaná chyba počas prihlas
 an-unexpected-system-error-occurred=Nastala neočakávaná systémová chyba.
 analytics=Analytika
 and=A
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=A potom podľa
 and-x-more=a {0} naviac.
 anniversary=Výročie
@@ -1308,6 +1311,9 @@ border-styles=Štýly okrajov
 border-styling=Štýlovanie okraja
 border-width=Šírka okraja
 bottom=Dno
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Vetva
 branches=Vetvy
 breadcrumb=Omrvinková navigácia
@@ -1372,6 +1378,7 @@ cas-server-name-help=Nastavte v prípade, že chcete aktivovať hlboké prepojen
 cas-server-url-help=Zadajte URL adresu <abbr title="Centrálna Autentizačná Služba">CAS</abbr> servera.
 cas-service-url-help=Nastavte v prípade, že chcete deaktivovať hlboké prepojenie do portálu (napr. http://localhost:8080/c/portal/login). Nenastavujte ak je nastavená URL adresa CAS servera.
 categories=Kategórie
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategórie a spŕavy
 categories[message-board]=Kategórie
 categorization=Kategorizácia
@@ -1383,6 +1390,8 @@ category-services=Služba kategórií
 category-sets=Sady kategórií
 category[message-board]=Kategória
 cc=Kópia
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Rozpoznať
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Kapitola
 chapters=Kapitoly
 characters-maximum=Maximum znakov
 chart=Graf
+chart-type=Chart Type (Automatic Copy)
 chart-width=Šírka grafu
 charts=Grafy
 chat=Čet
@@ -1745,6 +1755,7 @@ custom-message=Vlastná správa
 custom-portlet-xml=Vlastný portlet.xml
 custom-question=Vlastná otázka
 custom-range=Vlastný rozsah
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Vlastné atribúty používateľa
 custom-user-attributes-help=Špecifikovaním vlastných atribútov používateľa, získate príspevky, ktoré majú zodpovedajúci kategorizáciu. Kategórie musia byť z globálneho kontextu.
 custom.field.boolean=Logická hodnota
@@ -1986,6 +1997,7 @@ disk=Disk
 dismiss=Odmietnuť
 display=Zobraziť
 display-a-datepicker=Zobraz vyberač dátumu
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Zobraz ďalšie počítadlá aktivít
 display-as-tooltip=Zobraz ako pomôcku
 display-asset-categories-facet=Zobraz fazetu kategórií príspevkov
@@ -2480,7 +2492,9 @@ finished=Ukončené
 firm-name=Názov firmy
 firms=Firmy
 first=Prvý
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Prvá správa
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Meno
 first-name-attribute=Atribút krstného mena
 first-thread=Prvá diskusia
@@ -2995,6 +3009,7 @@ language-to=Jazyk do
 language-type=Typ jazyka
 languages=Jazyky
 large=Veľký
+large-file=Large File (Automatic Copy)
 large-image=Veľký obrázok
 large-image-url=URL pre veľký obrázok
 large-rectangle=Veľký obdĺžnik
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Zásuvný modul šablóny rozmiestnenia
 layout-template-plugins=Zásuvné moduly šablóny
 layout-templates=Šablóny rozmiestnenia
@@ -3087,6 +3103,9 @@ leave-site=Opustiť sídlo
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Nechajte toto políčko prázdne, ak kupón nekontroluje SKU položky.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Nechajte toto políčko prázdne, ak kupón nekontroluje rodičovské kategórie položky.
 left=Vľavo
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=IČO
 legal-name=Oficiálny názov
 legal-type=Právna forma
@@ -3161,6 +3180,7 @@ lockout-duration-help=Táto hodnota určuje dobu, počas ktorej je používateľ
 lockout-enabled=Uzamknutie povolené
 lockout-enabled-help=Ak je toto políčko zaškrtnuté, používateľ sa môže pokúsiť o prihlásenie určitý počet-krát predtým, ako sa jeho účet uzamkne.
 log-levels=Úrovne logovania
+logger-name=Logger Name (Automatic Copy)
 login=Prihlásenie sa
 login-through-facebook=Prihlásenie cez Facebook
 login-url=URL pre prihlásenie sa
@@ -3280,6 +3300,7 @@ maybe-attending=Možno sa zúćastní
 me=Ja
 media-files-must-be-one-of-the-following-formats=Súbory médií musia mať jeden z nasledovných formátov:
 medium=Stredný
+medium-file=Medium File (Automatic Copy)
 medium-image=Obrázok v strednej veľkosti
 medium-image-url=URL na obrázok v strednej veľkosti
 medium-rectangle=Stredne veľký obdĺžnik
@@ -3296,6 +3317,8 @@ membership-type-private-help=Používatelia si nemôžu zažiadať o členstvo. 
 membership-type-restricted-help=Používatelia si môžu zažiadať o členstvo. Správca sídla musí schváliť požiadavku.
 memberships=Členstvá
 memory=Pamäť
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Ponuka
 merge=Zlúčiť
 merge-data=Zlúčiť dáta
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Zlúčiť {0} verejných stránok
 merged-from-x-x=(Zlúčené z {0}, {1})
 message=Správa
 message-added-email=E-mail o pridaní správy
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Správy diskusného fóra
 message-boards-home=Úvodná stránka diskusného fóra
 message-boards-message-anonymous-help=Ak je zaškrtnuté toto políčko, táto správa bude zverejnená anonymne.
@@ -3543,6 +3567,7 @@ monday-abbreviation=Po
 monitoring=Monitorovanie
 month=Mesiac
 month-abbreviation=m
+month-position=Month Position (Automatic Copy)
 month-s=mesiac(ov)
 monthly=Mesačne
 monthly-payment=Mesačná platba
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Viac riadkov na spodku.
 more-x-results=Ďalších {0} výsledkov
 move=Presunúť
 move-column=Presunúť stĺpec
+move-down=Move Down (Automatic Copy)
 move-files=Presunúť súbory
 move-page=Presunúť stránku
 move-selected-item-in-x-one-position-down=Presunúť vybranú položku v {0} o jednu pozíciu nižšie.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Presunúť vybrané položky z {0} do {1}.
 move-thread=Presunúť diskusiu
 move-to=Presunúť na
 move-to-the-recycle-bin=Presunúť do odpadkového koša
+move-up=Move Up (Automatic Copy)
 move-web-content=Presunúť webový obsah
 move-x=Presunúť {0}
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Nikdy nerecenzovať
 new=Nový
 new-action-for-x=Nová akcia pre {0}
 new-application-display-template=Nová šablóna zobrazenia aplikácie
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Nový príspevok na blog
 new-bookmark=Nová záložka
 new-category=Nová kategória
@@ -4059,6 +4087,7 @@ pause=Pauza
 payer-email-address=E-mailová adresa platiteľa
 payment-gross=Platba brutto
 payment-settings=Nastavenie platenia
+paypal=PayPal (Automatic Copy)
 paypal-email-address=E-mailová adresa PayPal
 paypal-order=PayPal objednávka
 pending=Nevyriadené
@@ -4389,6 +4418,7 @@ pop-up=Vyskakovacie
 port=Príspevok
 portal=Portál
 portal-data=Portálové dáta
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Inštancia portálu
 portal-instance-help=Objekt, ktorý reprezentuje aktuálnu inštanciu portálu.
 portal-instance-id=Identifikátor inštancie portálu
@@ -4473,6 +4503,9 @@ principal=Hlavná rola
 print=Tlač
 print-x-x=Tlačiť <span class="{0}">{1}</span>
 priority=Priorita
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privátny
 private-node=Privátny uzol
 private-nodes=Privátne uzly
@@ -4552,6 +4585,7 @@ purchase-order=Objednávka
 px=px
 quantity=Množstvo
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=Ak je toto zaškrtnuté, dopyty, ktoré dosahujú prahovú hodnutu sú indexované a odporúčané používateľom ako súvisiace dopyty alebo ako časť návrhov automatického dopĺňania.
 query-indexing-threshold=Prahová hodnota pre indexovanie dopytov
 query-indexing-threshold-help=Ak počet výsledkov vyhľadávania dosahuje prahovú hodnotu, dopyt je indexovaný a odporúčaný používateľom, ktorí vyhľadavájú podobné dopyty.
@@ -4669,6 +4703,7 @@ remember-me=Zapamätaj si ma
 reminder=Pripomienka
 reminder-queries=Overovacie otázky
 reminder-query-and-answer-cannot-be-empty=Overovacia otázka a odpoveď nemôžu byť prázdne.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Vzdialený hostiteľ/IP
 remote-live=Vzdialené produkčné prostredie
 remote-live-connection-settings=Nastavenia vzdialeného produkčného prostredia
@@ -4714,6 +4749,7 @@ reply=Reagovať
 reply-all=Odpovedať všetkým
 reply-as=Odpovedať ako...
 reply-as-anonymous=Odpovedať ako anonym
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Pripomienky
 reply-date=Dátum reakcie
 reply-membership-request-for-x=Odpovedať na žiadosť o členstvo pre {0}
@@ -4816,6 +4852,9 @@ rich=Bohatý
 rich-text-format=Rich Text formát
 ridge=Chrbát
 right=Vpravo
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Roboty
 role=Rola
 role-name=Názov roly
@@ -4886,12 +4925,14 @@ script-file=Skriptový súbor
 search=Vyhľadávať
 search-all-organizations=Vyhľadávať vo všetkých organizáciách
 search-all-users=Vyhľadávať vo všetkých používateľoch
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Vyhľadať aplikáciu (hľadá už pri písaní)
 search-bookmarks=Vyhľadať v záložkách
 search-by-id-or-url=Vyhľadávať podľa ID alebo URL
 search-categories=Vyhľadávať v kategóriách
 search-configuration=Konfigurácia vyhľadávania
 search-configuration-help=Toto pole sa používa na aplikovanie pokročilého nastavenia vyhľadávania v tvare JSON reťazca.
+search-content=Search Content (Automatic Copy)
 search-coupons=Vyhľadávať v kupónoch
 search-custom-range-date-format=Zadajte, prosím, dátum vo formáte: YYYY-MM-DD
 search-custom-range-invalid-date-range=Vyberte, prosím, platný rozsah dátumov.
@@ -4918,6 +4959,7 @@ search-operator=Operátor pre vyhľadávanie
 search-orders=Vyhľadávať v objednávkach
 search-organizations=Vyhľadávať v organizáciách
 search-pages=Vyhľadávať v stránkach
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Vyhľadávať v pravidlách pre heslá
 search-plugins=Vyhľadávať v zásuvných moduloch
 search-products=Vyhľadávať v produktoch
@@ -4966,6 +5008,7 @@ select-a-page=Vybrať stránku
 select-a-site=Vybrať sídlo
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Vybrať štruktúru podľa ktorej sa bude filtrovať zoznam webového obsahu.
 select-a-type=Vybrať typ
+select-all=Select All (Automatic Copy)
 select-an-action-type=Vybrať typ akcie
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Vyberte existujúci zoznam alebo pridajte zoznam, ktorý sa zobrazí v tomto portlete.
 select-and-copy=Vybrať a skopírovať
@@ -4997,6 +5040,7 @@ select-parent-site=Vybrať rodičovské sídlo
 select-portlet=Vybrať portlet
 select-question=Vybrať otázku
 select-recipients=Vybrať adresátov
+select-search=Select Search (Automatic Copy)
 select-site=Vybrať sídlo
 select-tags=Vybrať značky
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Vyberte akciu, ktorú môže táto rola vykonať na portlete <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Servery
 service=Služba
 service-account=Účet služby
 service-password=Heslo služby
+service-search=Service Search (Automatic Copy)
 service-url=URL služby
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Služby
@@ -5287,15 +5332,19 @@ sku=SKU
 skus=SKU
 skype=Skype
 skyscraper=Mrakodrap
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovenčina
 small=Malý
+small-file=Small File (Automatic Copy)
 small-image=Malý obrázok
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL malého obrázku
 small-rectangle=Malý obdĺžnik
 small-square=Malý štvorec
 smartphone=Smartfón
 sms=SMS
 sms-messenger-id=ID SMS messengera
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=krát
 social-activity-limit-type-times-a-day=krát denne
 social-activity-limit-type-times-per-period=krát za obdobie
@@ -6197,8 +6246,11 @@ tomorrow=Zajtra
 ton=Tona
 tools=Nástroje
 top=Vrch
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Najvyššia úroveň
 top-level-organizations=Organizácie najvyššej úrovne
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Top prispievatelia
 top-users-out-of-x=Top používatelia z {0}.
 topic=Téma
@@ -6693,6 +6745,7 @@ with-scope=s oblasťou
 withdraw-submission=Stiahnuť podanie
 within=V
 within-x=V {0}
+word=Word (Automatic Copy)
 word-search=Vyhladávanie slov
 word-spacing=Rozloženie slova
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV:
 yard=jard
 year=Rok
 year-abbreviation=r
+year-position=Year Position (Automatic Copy)
 year-s=rok(y)
 year-to-date=Od začiatku roka do dnes
 yearly=Ročne
