--- a/portal-impl/src/content/Language_sl.properties
+++ b/portal-impl/src/content/Language_sl.properties
@@ -888,6 +888,7 @@ always=Vedno
 always-use-my-user-id=Vedno uporabi moj ID (uporabnika).
 am=AM (Automatic Copy)
 am-pm=AM/PM (Automatic Copy)
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Ameriki
 amount=Količina
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=An account with {0} as the email address already exists in the portal. Do you want to associate this activity with that account? (Automatic Copy)
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Prišlo je do nepričakovanega znaka v napa
 an-unexpected-system-error-occurred=Prišlo je do nepričavone sistemske napake.
 analytics=Analytics (Automatic Copy)
 and=In
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=And Then By (Automatic Copy)
 and-x-more=and {0} more. (Automatic Copy)
 anniversary=Obletnica
@@ -1308,6 +1311,9 @@ border-styles=Stili roba
 border-styling=Oblikovanje roba
 border-width=Debelina roba
 bottom=Spodaj
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Branch (Automatic Copy)
 branches=Branches (Automatic Copy)
 breadcrumb=Pot
@@ -1372,6 +1378,7 @@ cas-server-name-help=Set this to enable deep linking into the portal (e.g. http:
 cas-server-url-help=Set the CAS server domain URL. (Automatic Copy)
 cas-service-url-help=Set this to disable deep linking into the portal (e.g. http://localhost:8080/c/portal/login). Do not set this if the CAS server name is set. (Automatic Copy)
 categories=Kategorije
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategorije in sporočila
 categories[message-board]=Kategorije
 categorization=Kategorizacija
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Nizi kategorije
 category[message-board]=Kategorija
 cc=CC (Automatic Copy)
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express (Automatic Copy)
 cc_discover=Discover (Automatic Copy)
 cc_mastercard=MasterCard (Automatic Copy)
@@ -1428,6 +1437,7 @@ chapter=Poglavje
 chapters=Poglavja
 characters-maximum=Največ znakov
 chart=Graf
+chart-type=Chart Type (Automatic Copy)
 chart-width=Chart Width (Automatic Copy)
 charts=Grafov
 chat=Graf
@@ -1745,6 +1755,7 @@ custom-message=Prilagojeno sporočilo
 custom-portlet-xml=Prilagojen portlet.xml
 custom-question=Custom Question (Automatic Copy)
 custom-range=Custom Range (Automatic Copy)
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Prilagojene lastnosti
 custom-user-attributes-help=Specifying the custom user attributes will retrieve assets that have matching categorization. Categories must be from the global context. (Automatic Copy)
 custom.field.boolean=True/False (Automatic Copy)
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Dismiss (Automatic Copy)
 display=Prikaži
 display-a-datepicker=Display a Datepicker (Automatic Copy)
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Display Additional Activity Counters (Automatic Copy)
 display-as-tooltip=Display as Tooltip (Automatic Copy)
 display-asset-categories-facet=Display Asset Categories Facet (Automatic Copy)
@@ -2480,7 +2492,9 @@ finished=Končano
 firm-name=Ime podjatja
 firms=Podjetja
 first=Prvi
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Prvo sporočilo
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Ime
 first-name-attribute=Lastnost imena
 first-thread=Prva debata
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=Tip jezika
 languages=Jeziki
 large=Večji
+large-file=Large File (Automatic Copy)
 large-image=Velika slika
 large-image-url=URL velike slike
 large-rectangle=Velik pravokotnik
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Vtičnik predlog izgleda
 layout-template-plugins=Vtičniki predlog izgleda
 layout-templates=Predloge izgleda
@@ -3087,6 +3103,9 @@ leave-site=Leave Site (Automatic Copy)
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Pustite to prazno, če kupon ne velja za enoto skladiščenja.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Pustite to prazno, če kupon ne velja za nadrejene kategorije.
 left=Levo
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Uraden ID
 legal-name=Uraden naziv
 legal-type=Uraden tip
@@ -3161,6 +3180,7 @@ lockout-duration-help=To določa, koliko časa je uporabnikov račun zaklenjen.
 lockout-enabled=Zaklep omogočen
 lockout-enabled-help=Če je to obkljukano, potem ima uporabnik na voljo le določeno število poskusov prijave, preden se mu račun zaklene.
 log-levels=Nivoji dnevnikov
+logger-name=Logger Name (Automatic Copy)
 login=Prijava
 login-through-facebook=Login through Facebook (Automatic Copy)
 login-url=URL za prijavo
@@ -3280,6 +3300,7 @@ maybe-attending=Možna udeležba
 me=Mene
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats: (Automatic Copy)
 medium=Srednje
+medium-file=Medium File (Automatic Copy)
 medium-image=SLika srednje velikosti
 medium-image-url=URL srednje slike
 medium-rectangle=Pravokotnik srednje velikosti
@@ -3296,6 +3317,8 @@ membership-type-private-help=Users are not allowed to request membership. Only s
 membership-type-restricted-help=Users are allowed to request membership. The request will need to be approved by the site administrators. (Automatic Copy)
 memberships=Memberships (Automatic Copy)
 memory=Spomin
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Merge (Automatic Copy)
 merge-data=Združi podatke
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Merge {0} public pages (Automatic Copy)
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=Sporočilo
 message-added-email=Sporočilo z dodano e-pošto
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Sporočilo na tabli sporočil
 message-boards-home=Naslov na tabli sporočil
 message-boards-message-anonymous-help=Če je to obkljukano, potem bo sporočilo oddano anonimno.
@@ -3543,6 +3567,7 @@ monday-abbreviation=P
 monitoring=Nadzor
 month=Mesec
 month-abbreviation=m (Automatic Copy)
+month-position=Month Position (Automatic Copy)
 month-s=mesec(ev)
 monthly=Monthly (Automatic Copy)
 monthly-payment=Mesečno plačilo
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=More rows at bottom. (Automatic Copy)
 more-x-results=More {0} Results (Automatic Copy)
 move=Premakni
 move-column=Premakni stolpec
+move-down=Move Down (Automatic Copy)
 move-files=Odstrani datoteke
 move-page=Premakni stran
 move-selected-item-in-x-one-position-down=Move selected item in {0} one position down. (Automatic Copy)
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Move selected items from {0} to {1}. (Automatic 
 move-thread=Premakni debato
 move-to=Premakni na
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Spletna vsebina na dnu
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Nikoli pregledano
 new=Novo
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=New Application Display Template (Automatic Copy)
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Dodaj zapis v blog
 new-bookmark=Poglej zaznamke.
 new-category=Dodaj kategorijo
@@ -4059,6 +4087,7 @@ pause=Začasno prekini
 payer-email-address=Plačnikova e-pošta
 payment-gross=Plačilo bruto
 payment-settings=Nastavitve plačil
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal e-pošta
 paypal-order=PayPal naročilo
 pending=Čakajoč
@@ -4389,6 +4418,7 @@ pop-up=Pop Up (Automatic Copy)
 port=Vrata
 portal=Portal (Automatic Copy)
 portal-data=Podatki o portalu
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Instance portala
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Glavni
 print=Natisni
 print-x-x=Print <span class="{0}">{1}</span> (Automatic Copy)
 priority=Prioriteta
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Zasebno
 private-node=Zasebno kolence
 private-nodes=Zasebna kolenca
@@ -4552,6 +4585,7 @@ purchase-order=Purchase Order (Automatic Copy)
 px=px (Automatic Copy)
 quantity=Količina
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Zapomni si me
 reminder=Opomnik
 reminder-queries=Poizvedbe za opomnike
 reminder-query-and-answer-cannot-be-empty=Poizvedba in odgovor za opomnike ne moreta biti prazna.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Oddaljeni gostitelj/IP
 remote-live=Remote Live (Automatic Copy)
 remote-live-connection-settings=Remote Live Connection Settings (Automatic Copy)
@@ -4714,6 +4749,7 @@ reply=Odgovori
 reply-all=Odgovori vsem
 reply-as=Reply as... (Automatic Copy)
 reply-as-anonymous=Odgovori kot Neznanec
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Odgovori s komentarjem
 reply-date=Datum odgovora
 reply-membership-request-for-x=Reply Membership Request for {0} (Automatic Copy)
@@ -4816,6 +4852,9 @@ rich=Bogato
 rich-text-format=Rich Text Format (Automatic Copy)
 ridge=Ridge (Automatic Copy)
 right=Desno
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Roboti
 role=Vloga
 role-name=Ime vloge
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Iskanje
 search-all-organizations=Išči organizacije
 search-all-users=Išči uporabnike
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Poišči aplikacijo (išče samodejno med vašim tipkanjem).
 search-bookmarks=Search Bookmarks (Automatic Copy)
 search-by-id-or-url=Iskanje po ID ali URL
 search-categories=Išči kategorije
 search-configuration=Glavne nastavitve
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string. (Automatic Copy)
+search-content=Search Content (Automatic Copy)
 search-coupons=Išči kupone
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Izberite pravilen tip.
@@ -4918,6 +4959,7 @@ search-operator=Iskalni operator
 search-orders=Vrstni red iskanja
 search-organizations=Išči organizacije
 search-pages=Išči strani
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Išči pravila za gesla
 search-plugins=Išči vtičnike
 search-products=Išči izdelke
@@ -4966,6 +5008,7 @@ select-a-page=Izbrana stran
 select-a-site=Izbrana stran
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Izberite strukturo, če želite filtrirati spletne vsebine po strukturi.
 select-a-type=Izbrana stran
+select-all=Select All (Automatic Copy)
 select-an-action-type=Select an Action Type (Automatic Copy)
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Select an existing list or add a list to be displayed in this portlet. (Automatic Copy)
 select-and-copy=Izberi in kopiraj
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Izberi portlet
 select-question=Select Question (Automatic Copy)
 select-recipients=Izberi prejemnike
+select-search=Select Search (Automatic Copy)
 select-site=Izbrana stran
 select-tags=Izberi oznake
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Izberite akcijo, ki jo lahko ta vloga izveda na portletu <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Strežnik
 service=Storitev
 service-account=Service Account (Automatic Copy)
 service-password=Service Password (Automatic Copy)
+service-search=Service Search (Automatic Copy)
 service-url=URL storitve
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Storitve
@@ -5287,15 +5332,19 @@ sku=Enota skladiščenja
 skus=Enote skladiščenja
 skype=Skype (Automatic Copy)
 skyscraper=Nebotičnik
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovaško
 small=Small (Automatic Copy)
+small-file=Small File (Automatic Copy)
 small-image=Mala slika
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL male slike
 small-rectangle=Mali pravokotnik
 small-square=Mali kvadrat
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=ID SMS pošiljatelja
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=Jutri.
 ton=Ton (Automatic Copy)
 tools=Orodja.
 top=Vrh.
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level Organizations (Automatic Copy)
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Najbolj aktivni dopisovalci.
 top-users-out-of-x=Top users out of {0}. (Automatic Copy)
 topic=Debata.
@@ -6693,6 +6745,7 @@ with-scope=s poudarkom
 withdraw-submission=Withdraw Submission (Automatic Copy)
 within=Znotraj
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Iskanje besed.
 word-spacing=Presledki med besedami.
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV: (Automatic Copy)
 yard=Jard
 year=Leto.
 year-abbreviation=l
+year-position=Year Position (Automatic Copy)
 year-s=Leto(a)
 year-to-date=Leto do datuma
 yearly=Letno.
