--- a/portal-impl/src/content/Language_zh_CN.properties
+++ b/portal-impl/src/content/Language_zh_CN.properties
@@ -888,6 +888,7 @@ always=总是
 always-use-my-user-id=总是使用我的用户账号。
 am=上午
 am-pm=上午/下午
+amazon-rankings=亚马逊排名 (Automatic Translation)
 americas=美洲
 amount=金额
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=portal中已存在一个用{0}此邮箱注册的账户。您想把此活动关联到那个账户上吗？
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=登录时发生异常错误。
 an-unexpected-system-error-occurred=发生系统异常错误。
 analytics=分析
 and=并且
+and-operator=和运算符 (Automatic Translation)
+and-or-operator=和/或操作员 (Automatic Translation)
 and-then-by=然后通过
 and-x-more=还有另外{0}个。
 anniversary=周年纪念
@@ -1308,6 +1311,9 @@ border-styles=边框样式
 border-styling=边框样式
 border-width=边框宽度
 bottom=底部
+bottom-border-unit=底部边界单元 (Automatic Translation)
+bottom-margin-unit=底部边距单位 (Automatic Translation)
+bottom-padding-unit=底部边距单位 (Automatic Translation)
 branch=分支
 branches=分支
 breadcrumb=路径导航
@@ -1372,6 +1378,7 @@ cas-server-name-help=设置此项允许深度链接进入portal（例如， http
 cas-server-url-help=设置CAS服务器域名URL。
 cas-service-url-help=设置此项禁用深度链接进入portal（例如，http://localhost:8080/c/portal/login）。如果CAS服务器名字已经设置了就不要设置此项。
 categories=类别
+categories-admin-select-search=管理员选择搜索类别 (Automatic Translation)
 categories-and-messages=类别和消息
 categories[message-board]=类别
 categorization=分类
@@ -1383,6 +1390,8 @@ category-services=类别服务
 category-sets=类别集合
 category[message-board]=类别
 cc=抄送
+cc-exp-month=抄送到期月份 (Automatic Translation)
+cc-exp-year=抄送到期年份 (Automatic Translation)
 cc_amex=美国运通
 cc_discover=Discover
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=章节
 chapters=章节
 characters-maximum=最多字符
 chart=图表
+chart-type=图表类型 (Automatic Translation)
 chart-width=图表宽度
 charts=图表
 chat=聊天
@@ -1745,6 +1755,7 @@ custom-message=自定义消息
 custom-portlet-xml=自定义portlet.xml
 custom-question=自定义问题
 custom-range=自定义范围
+custom-title=自定义标题 (Automatic Translation)
 custom-user-attributes=自定义用户属性
 custom-user-attributes-help=指定自定义用户属性将重新获得有匹配类别的asset。类别必须来自全局上下文。
 custom.field.boolean=正确/错误
@@ -1986,6 +1997,7 @@ disk=磁盘
 dismiss=解除
 display=显示
 display-a-datepicker=显示日期选择器
+display-activity-counter-name=显示活动计数器名称 (Automatic Translation)
 display-additional-activity-counters=显示附件活动计数器
 display-as-tooltip=作为提示框显示
 display-asset-categories-facet=显示资源类别
@@ -2480,7 +2492,9 @@ finished=已完成
 firm-name=企业名称
 firms=企业
 first=第一
+first-day-of-week=周第一天 (Automatic Translation)
 first-message=第一则消息
+first-month-of-year=年第一个月 (Automatic Translation)
 first-name=名字
 first-name-attribute=名字属性
 first-thread=第一个Thread
@@ -2995,6 +3009,7 @@ language-to=语言转向
 language-type=语言类型
 languages=语言
 large=大
+large-file=大文件 (Automatic Translation)
 large-image=大图像
 large-image-url=大图像URL
 large-rectangle=大矩形
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 列 (70/30) (Automatic Translation)
 layout-template-3-2-3-columns=3-2-3 列 (Automatic Translation)
 layout-template-3-columns=3 列 (Automatic Translation)
 layout-template-freeform=任意多边形 (Automatic Translation)
+layout-template-id=布局模板 ID (Automatic Translation)
 layout-template-plugin=页面模板插件
 layout-template-plugins=页面模板插件
 layout-templates=页面模板
@@ -3087,6 +3103,9 @@ leave-site=离开站点
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=如果SKU优惠券没有被选中，则此处保持空白。
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=如果某条目的上级类别没有选中优惠券，则此处保持空白。
 left=左边
+left-border-unit=左边的框单元 (Automatic Translation)
+left-margin-unit=左边的距单位 (Automatic Translation)
+left-padding-unit=左边的距单位 (Automatic Translation)
 legal-id=合法ID
 legal-name=合法名称
 legal-type=合法类型
@@ -3161,6 +3180,7 @@ lockout-duration-help=这决定用户账号被锁定的时间。
 lockout-enabled=启用锁定
 lockout-enabled-help=如果选中此项，用户在被锁定之前可以尝试登录一定的次数。
 log-levels=日志级别
+logger-name=记录器名称 (Automatic Translation)
 login=登录
 login-through-facebook=通过Facebook登录
 login-url=登录URL
@@ -3280,6 +3300,7 @@ maybe-attending=可能参加
 me=我
 media-files-must-be-one-of-the-following-formats=媒体文件必须为以下格式之一：
 medium=中等
+medium-file=介质的文件 (Automatic Translation)
 medium-image=中图
 medium-image-url=中图URL
 medium-rectangle=中等矩形
@@ -3296,6 +3317,8 @@ membership-type-private-help=用户不能申请会员资格。只有站点管理
 membership-type-restricted-help=用户能够申请会员资格。申请需要获得站点管理员批准。
 memberships=会员资格
 memory=内存
+memory-used-vs-max-memory=与最大内存使用的内存 (Automatic Translation)
+memory-used-vs-total-memory=使用与总内存内存 (Automatic Translation)
 menu=菜单
 merge=合并
 merge-data=合并数据
@@ -3312,6 +3335,7 @@ merge-x-public-pages=合并{0}公共页面
 merged-from-x-x=（从{0}，{1}合并而来）
 message=消息
 message-added-email=添加消息的通知邮件
+message-attachment=邮件附件 (Automatic Translation)
 message-board-messages=留言板留言
 message-boards-home=留言板主页
 message-boards-message-anonymous-help=如果选中此选项，则此消息将匿名发布。
@@ -3543,6 +3567,7 @@ monday-abbreviation=月
 monitoring=正在监控
 month=月
 month-abbreviation=月
+month-position=月位置 (Automatic Translation)
 month-s=月
 monthly=每月
 monthly-payment=月付款数
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=在底部更多行。
 more-x-results=更多{0}结果
 move=移动
 move-column=移动列
+move-down=向下移动 (Automatic Translation)
 move-files=移动文件
 move-page=移动页面
 move-selected-item-in-x-one-position-down=将{0}中选定的元素下移一个位置。
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=将选定的元素从位置{0}移动到位置{1}
 move-thread=移动话题
 move-to=移动
 move-to-the-recycle-bin=移入回收站
+move-up=向上移动 (Automatic Translation)
 move-web-content=移动网页内容
 move-x=移动{0}
 movie=电影
@@ -3616,6 +3643,7 @@ never-review=从不审核
 new=新的
 new-action-for-x=对{0}的新操作
 new-application-display-template=新应用程序展示模板
+new-article-id=新文章 ID (Automatic Translation)
 new-blog-entry=新的博文
 new-bookmark=新的书签
 new-category=新的类别
@@ -4059,6 +4087,7 @@ pause=暂停
 payer-email-address=付款人电子邮件
 payment-gross=付款总数
 payment-settings=付款设置
+paypal=贝宝 (Automatic Translation)
 paypal-email-address=PayPal邮箱地址
 paypal-order=PayPal订单
 pending=待处理的
@@ -4389,6 +4418,7 @@ pop-up=弹出
 port=端口
 portal=Portal
 portal-data=Portal 数据
+portal-ext=门户分机 (Automatic Translation)
 portal-instance=Portal实例
 portal-instance-help=代表当前portal实例的对象。
 portal-instance-id=Portal实例标识符
@@ -4473,6 +4503,9 @@ principal=主要的
 print=打印
 print-x-x=打印<span class="{0}">{1}</span>
 priority=优先级
+priority-image=优先级映像 (Automatic Translation)
+priority-name=优先级名称 (Automatic Translation)
+priority-value=优先级值 (Automatic Translation)
 private=私有的
 private-node=私有节点
 private-nodes=私有节点
@@ -4552,6 +4585,7 @@ purchase-order=购买订单
 px=px
 quantity=数量
 query=查询 (Automatic Translation)
+query-contains=查询包含 (Automatic Translation)
 query-indexing-enabled-help=如果勾选此项，符合临界值的查询将作为相关查询结果或部分自动完成的建议，而被索引或建议给用户。
 query-indexing-threshold=查询索引临界值
 query-indexing-threshold-help=如果搜索结果数量达到临界值，查询结果会被索引或建议给搜索类似查询的用户。
@@ -4669,6 +4703,7 @@ remember-me=记住我
 reminder=提示
 reminder-queries=提示问题
 reminder-query-and-answer-cannot-be-empty=提示问题和答案不能为空。
+reminder-query-question=提醒查询问题 (Automatic Translation)
 remote-host-ip=远程主机/IP
 remote-live=远程在线
 remote-live-connection-settings=远程在线连接设置
@@ -4714,6 +4749,7 @@ reply=回复
 reply-all=回复全部
 reply-as=以……回复
 reply-as-anonymous=匿名回复
+reply-body=答复正文 (Automatic Translation)
 reply-comments=回复评论
 reply-date=回复日期
 reply-membership-request-for-x=为{0}回复会员资格请求
@@ -4816,6 +4852,9 @@ rich=丰富的
 rich-text-format=富文本格式
 ridge=Ridge
 right=右边
+right-border-unit=右边框单位 (Automatic Translation)
+right-margin-unit=右边距单位 (Automatic Translation)
+right-padding-unit=右边距单位 (Automatic Translation)
 robots=Robot
 role=角色
 role-name=角色名称
@@ -4886,12 +4925,14 @@ script-file=脚本文件
 search=搜索
 search-all-organizations=搜索所有组织
 search-all-users=搜索所有用户
+search-application=搜索应用程序 (Automatic Translation)
 search-applications-searches-as-you-type=搜索应用程序（搜索您所输入的）。
 search-bookmarks=搜索书签
 search-by-id-or-url=用ID或URL搜索
 search-categories=搜索类别
 search-configuration=搜索配置
 search-configuration-help=此字段以JSON字符串的形式被用来应用高级搜索配置的设置。
+search-content=搜索内容 (Automatic Translation)
 search-coupons=搜索优惠券
 search-custom-range-date-format=请按以下格式输入日期：年-月-日
 search-custom-range-invalid-date-range=请选择有效的日期范围。
@@ -4918,6 +4959,7 @@ search-operator=搜索运算符
 search-orders=搜索订单
 search-organizations=搜索组织
 search-pages=搜索页面
+search-panel=搜索面板 (Automatic Translation)
 search-password-policies=搜索密码政策
 search-plugins=搜索Plugin
 search-products=搜索产品
@@ -4966,6 +5008,7 @@ select-a-page=选择页面
 select-a-site=选择站点
 select-a-structure-to-filter-the-web-content-list-by-a-structure=选择一个结构，以结构过滤网页内容。
 select-a-type=选择类型
+select-all=选择所有 (Automatic Translation)
 select-an-action-type=选择操作类型
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=选择一个现有的列表或添加一个即将显示于这一portlet的列表。
 select-and-copy=选择并复制
@@ -4997,6 +5040,7 @@ select-parent-site=选择上级站点
 select-portlet=选择Portlet
 select-question=选择问题
 select-recipients=选择收件人
+select-search=选择搜索 (Automatic Translation)
 select-site=选择站点
 select-tags=选择标签
 select-the-action-that-this-role-can-perform-on-the-x-portlet=选择这个角色在portlet<strong>{0}</strong>上可以执行的操作。
@@ -5078,6 +5122,7 @@ servers=服务器
 service=服务
 service-account=服务账户
 service-password=服务密码
+service-search=服务搜索 (Automatic Translation)
 service-url=服务URL
 service-url-for-opensso-help=从这一URL使OpenSSO被访问用来认证网络服务。如果您正在使用OpenSSO Express 8或者更高版本，您需要具备运行Java 6的服务器。
 services=服务
@@ -5287,15 +5332,19 @@ sku=SKU
 skus=SKU
 skype=Skype
 skyscraper=Skyscraper
+slide-show=幻灯片放映 (Automatic Translation)
 slovak=斯洛伐克语
 small=小
+small-file=小文件 (Automatic Translation)
 small-image=小的图像
+small-image-file=小图像文件 (Automatic Translation)
 small-image-url=小的图像URL
 small-rectangle=小长方形
 small-square=小正方形
 smartphone=智能手机
 sms=短信
 sms-messenger-id=短信发送ID
+sms-sn=SMS 屏幕名称 (Automatic Translation)
 social-activity-limit-type-times=次数
 social-activity-limit-type-times-a-day=每天次数
 social-activity-limit-type-times-per-period=每段时期次数
@@ -6197,8 +6246,11 @@ tomorrow=明天
 ton=吨
 tools=工具
 top=顶部
+top-border-unit=顶部边框单位 (Automatic Translation)
 top-level=最高级别
 top-level-organizations=顶级组织
+top-margin-unit=上边距单位 (Automatic Translation)
+top-padding-unit=上边距单位 (Automatic Translation)
 top-posters=发帖最多者
 top-users-out-of-x={0}中顶级用户。
 topic=主题
@@ -6693,6 +6745,7 @@ with-scope=范围
 withdraw-submission=撤回提交
 within=之内
 within-x={0}之内
+word=词 (Automatic Translation)
 word-search=字搜索
 word-spacing=字间距
 wordpress=博客系统
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV：
 yard=码
 year=年
 year-abbreviation=年
+year-position=年位置 (Automatic Translation)
 year-s=年
 year-to-date=年份到日期
 yearly=每年
