--- a/portal-impl/src/content/Language_zh_TW.properties
+++ b/portal-impl/src/content/Language_zh_TW.properties
@@ -888,6 +888,7 @@ always=總是
 always-use-my-user-id=總是使用我的使用者ID。
 am=上午
 am-pm=上午/下午
+amazon-rankings=亞馬遜排名 (Automatic Translation)
 americas=美洲
 amount=總計
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=一個以 {0} 作為電子郵件位址的帳戶已經存在這入口網。您確定要以這個帳戶關聯這個活動？
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=登入時一個預期外的錯誤發生。
 an-unexpected-system-error-occurred=一個預期外的系統錯誤發生。
 analytics=分析
 and=並且
+and-operator=和運算子 (Automatic Translation)
+and-or-operator=和/或操作員 (Automatic Translation)
 and-then-by=然後
 and-x-more=與更多{0}。
 anniversary=週年紀念
@@ -1308,6 +1311,9 @@ border-styles=邊界樣式
 border-styling=邊界樣式
 border-width=邊界寬度
 bottom=底部
+bottom-border-unit=底部邊界單元 (Automatic Translation)
+bottom-margin-unit=底部邊距單位 (Automatic Translation)
+bottom-padding-unit=底部邊距單位 (Automatic Translation)
 branch=分支
 branches=分支
 breadcrumb=導覽路徑
@@ -1372,6 +1378,7 @@ cas-server-name-help=設定這個去啟用深度連結到入口網(例如http://
 cas-server-url-help=設定CAS伺服器網域網址。
 cas-service-url-help=設定這個去停用深度連結到入口網(例如http://localhost:8080/c/portal/login)。如果CAS伺服器名稱被設定，請不要設定這個。
 categories=類別
+categories-admin-select-search=管理員選擇搜索類別 (Automatic Translation)
 categories-and-messages=類別和訊息
 categories[message-board]=類別
 categorization=類別
@@ -1383,6 +1390,8 @@ category-services=類別服務
 category-sets=類別組
 category[message-board]=類別
 cc=CC
+cc-exp-month=抄送到期月份 (Automatic Translation)
+cc-exp-year=抄送到期年份 (Automatic Translation)
 cc_amex=美國運通卡
 cc_discover=發現
 cc_mastercard=萬事達卡
@@ -1428,6 +1437,7 @@ chapter=章節
 chapters=章節
 characters-maximum=最大字元
 chart=圖
+chart-type=圖表類型 (Automatic Translation)
 chart-width=圖表寬度
 charts=圖表
 chat=聊天
@@ -1745,6 +1755,7 @@ custom-message=客製訊息
 custom-portlet-xml=客製portlet.xml
 custom-question=客製問題
 custom-range=客製範圍
+custom-title=自訂標題 (Automatic Translation)
 custom-user-attributes=客製使用者屬性
 custom-user-attributes-help=指定客製使用者屬性將會取得已經對映類別的資產。類別必須來自全域文字。
 custom.field.boolean=真偽
@@ -1986,6 +1997,7 @@ disk=磁碟
 dismiss=卸載
 display=顯示
 display-a-datepicker=顯示日期挑選器
+display-activity-counter-name=顯示活動計數器名稱 (Automatic Translation)
 display-additional-activity-counters=顯示額外活動計數器
 display-as-tooltip=顯示工作提示
 display-asset-categories-facet=顯示資產類別Facet
@@ -2480,7 +2492,9 @@ finished=完成
 firm-name=企業名稱
 firms=企業
 first=首先
+first-day-of-week=周第一天 (Automatic Translation)
 first-message=第一則訊息
+first-month-of-year=年第一個月 (Automatic Translation)
 first-name=名字
 first-name-attribute=名字屬性
 first-thread=第一個主題
@@ -2995,6 +3009,7 @@ language-to=語系到
 language-type=語系類型
 languages=語系
 large=大
+large-file=大檔 (Automatic Translation)
 large-image=大圖像
 large-image-url=大圖像網址
 large-rectangle=大長方形
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 列 (70/30) (Automatic Translation)
 layout-template-3-2-3-columns=3-2-3 列 (Automatic Translation)
 layout-template-3-columns=3 列 (Automatic Translation)
 layout-template-freeform=任意多邊形 (Automatic Translation)
+layout-template-id=佈局範本 ID (Automatic Translation)
 layout-template-plugin=佈局版型插件
 layout-template-plugins=佈局版型插件
 layout-templates=佈局版型
@@ -3087,6 +3103,9 @@ leave-site=離開站台
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=留下這空白如果優惠券不檢查項目SKU。
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=留下這空白如果優惠券不檢查項目的父母類別。
 left=左
+left-border-unit=左邊的框單元 (Automatic Translation)
+left-margin-unit=左邊的距單位 (Automatic Translation)
+left-padding-unit=左邊的距單位 (Automatic Translation)
 legal-id=法律ID
 legal-name=法律名字
 legal-type=法律類型
@@ -3161,6 +3180,7 @@ lockout-duration-help=這決定使用者帳戶被鎖定的時間量。
 lockout-enabled=啟用鎖定
 lockout-enabled-help=如果這被核選，在帳戶被鎖定前使用者能嘗試登入的特定次數。
 log-levels=記錄層級
+logger-name=記錄器名稱 (Automatic Translation)
 login=登入
 login-through-facebook=經由Facebook登入
 login-url=登入網址
@@ -3280,6 +3300,7 @@ maybe-attending=可能出席
 me=我
 media-files-must-be-one-of-the-following-formats=媒體檔案必須是下列格式之一：
 medium=媒介
+medium-file=介質的檔 (Automatic Translation)
 medium-image=中等圖像
 medium-image-url=中等圖像網址
 medium-rectangle=中等長方形
@@ -3296,6 +3317,8 @@ membership-type-private-help=使用者不允許請求會員資格。只有站台
 membership-type-restricted-help=使用者允許請求會員資格。這請求將會需要站台管理員核准。
 memberships=會員資格
 memory=記憶體
+memory-used-vs-max-memory=與最大記憶體使用的記憶體 (Automatic Translation)
+memory-used-vs-total-memory=使用與總記憶體記憶體 (Automatic Translation)
 menu=選單
 merge=合併
 merge-data=合併資料
@@ -3312,6 +3335,7 @@ merge-x-public-pages=合併 {0} 公開頁面
 merged-from-x-x=(從{0}, {1}合併)
 message=訊息
 message-added-email=訊息加入電子郵件
+message-attachment=郵件附件 (Automatic Translation)
 message-board-messages=討論板訊息
 message-boards-home=討論板首頁
 message-boards-message-anonymous-help=如果這被核選，則這個訊息將會以匿名貼出。
@@ -3543,6 +3567,7 @@ monday-abbreviation=一
 monitoring=監視
 month=月
 month-abbreviation=月
+month-position=月位置 (Automatic Translation)
 month-s=月
 monthly=每月
 monthly-payment=月付款
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=在底層更多行。
 more-x-results=更多 {0} 結果。
 move=搬移
 move-column=搬移專欄
+move-down=向下移動 (Automatic Translation)
 move-files=搬移檔案
 move-page=搬移頁面
 move-selected-item-in-x-one-position-down=搬移在{0}一個位置下被選取項目。
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=搬移從{0}到{1}被選取項目。
 move-thread=搬移主題
 move-to=搬移到
 move-to-the-recycle-bin=搬移到垃圾桶
+move-up=向上移動 (Automatic Translation)
 move-web-content=搬移網站內容
 move-x=搬移 {0}
 movie=電影
@@ -3616,6 +3643,7 @@ never-review=絕不審查
 new=新
 new-action-for-x=為 {0} 新增動作
 new-application-display-template=新增應用程式顯示版型
+new-article-id=新文章 ID (Automatic Translation)
 new-blog-entry=新增部落格條目
 new-bookmark=新增書籤
 new-category=新增類別
@@ -4059,6 +4087,7 @@ pause=暫停
 payer-email-address=付款人電子郵件
 payment-gross=付款總額
 payment-settings=付款設置
+paypal=貝寶 (Automatic Translation)
 paypal-email-address=PayPal 電子郵件
 paypal-order=PayPal 訂單
 pending=待決的
@@ -4389,6 +4418,7 @@ pop-up=跳出
 port=Port
 portal=入口網
 portal-data=入口網資料
+portal-ext=門戶分機 (Automatic Translation)
 portal-instance=入口網實體
 portal-instance-help=物件代表現在入口網實體。
 portal-instance-id=入口網實體識別
@@ -4473,6 +4503,9 @@ principal=主要
 print=印刷品
 print-x-x=列印<span class="{0}">{1}</span>
 priority=優先權
+priority-image=優先順序映射 (Automatic Translation)
+priority-name=優先順序名稱 (Automatic Translation)
+priority-value=優先順序值 (Automatic Translation)
 private=私人
 private-node=私人節點
 private-nodes=私人節點
@@ -4552,6 +4585,7 @@ purchase-order=購買訂單
 px=px
 quantity=數量
 query=查詢 (Automatic Translation)
+query-contains=查詢包含 (Automatic Translation)
 query-indexing-enabled-help=如果這被核選，符合門檻的查詢會進索引且作為相關查詢推薦給使用者或作為自動完成建議的一部分。
 query-indexing-threshold=查詢索引門檻
 query-indexing-threshold-help=如果搜尋結果數目符合門檻，查詢會進索引且以類似查詢推薦給使用者。
@@ -4669,6 +4703,7 @@ remember-me=記住我
 reminder=提示
 reminder-queries=提示詢問
 reminder-query-and-answer-cannot-be-empty=提示詢問和答復不可能是空的。
+reminder-query-question=提醒查詢問題 (Automatic Translation)
 remote-host-ip=遠端主機/IP
 remote-live=遠端Live
 remote-live-connection-settings=遠端Live連結設定
@@ -4714,6 +4749,7 @@ reply=回覆
 reply-all=回覆所有
 reply-as=回覆以...
 reply-as-anonymous=以匿名回覆
+reply-body=答覆正文 (Automatic Translation)
 reply-comments=回覆評論
 reply-date=回覆日期
 reply-membership-request-for-x=對 {0} 回覆會員資格請求
@@ -4816,6 +4852,9 @@ rich=富有
 rich-text-format=多文本格式
 ridge=里奇
 right=權利
+right-border-unit=右邊框單位 (Automatic Translation)
+right-margin-unit=右邊距單位 (Automatic Translation)
+right-padding-unit=右邊距單位 (Automatic Translation)
 robots=機器人
 role=角色
 role-name=角色名稱
@@ -4886,12 +4925,14 @@ script-file=Script 檔案
 search=搜尋
 search-all-organizations=搜尋所有組織
 search-all-users=搜尋所有用戶
+search-application=搜索應用程式 (Automatic Translation)
 search-applications-searches-as-you-type=搜尋應用程式(以您輸入搜尋)。
 search-bookmarks=搜尋書籤
 search-by-id-or-url=以ID或網址搜尋書籤
 search-categories=搜尋類別
 search-configuration=搜尋配置
 search-configuration-help=這欄位被用來以套用於進階搜尋配置在JSON字串的格式中。
+search-content=搜索內容 (Automatic Translation)
 search-coupons=搜尋優惠券
 search-custom-range-date-format=請輸入一個日期符合下列格式：YYYY-MM-DD
 search-custom-range-invalid-date-range=請選擇一個正確日期範圍。
@@ -4918,6 +4959,7 @@ search-operator=搜尋運算子
 search-orders=搜尋訂單
 search-organizations=搜尋組織
 search-pages=搜尋頁面
+search-panel=搜索面板 (Automatic Translation)
 search-password-policies=搜尋密碼政策
 search-plugins=搜尋插件
 search-products=搜尋產品
@@ -4966,6 +5008,7 @@ select-a-page=選擇一個頁面
 select-a-site=選擇一個站台
 select-a-structure-to-filter-the-web-content-list-by-a-structure=選擇一個結構以依結構過濾網站內容名單。
 select-a-type=選擇一個類型
+select-all=選擇所有 (Automatic Translation)
 select-an-action-type=選擇一個動作類型
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=選擇一個已存在列表或加入一個列表以在Portlet顯示。
 select-and-copy=選擇並複製
@@ -4997,6 +5040,7 @@ select-parent-site=選擇父站台
 select-portlet=選擇Portlet
 select-question=選擇問題
 select-recipients=選擇收信人
+select-search=選擇搜索 (Automatic Translation)
 select-site=選擇站台
 select-tags=選擇標籤
 select-the-action-that-this-role-can-perform-on-the-x-portlet=選擇角色能在<em>{0}</em> Portlet執行的動作。
@@ -5078,6 +5122,7 @@ servers=伺服器
 service=服務
 service-account=服務帳戶
 service-password=服務密碼
+service-search=服務搜索 (Automatic Translation)
 service-url=服務網址
 service-url-for-opensso-help=這網址是OpenSSO被存取以使用認證網路服務的地方。如果您正在使用OpenSSO Express 8或更高，您需要伺服器執行在Java 6。
 services=服務
@@ -5287,15 +5332,19 @@ sku=SKU
 skus=SKUs
 skype=Skype
 skyscraper=摩天大樓
+slide-show=投影片放映 (Automatic Translation)
 slovak=斯洛伐克語
 small=小
+small-file=小檔 (Automatic Translation)
 small-image=小圖片
+small-image-file=小影像檔 (Automatic Translation)
 small-image-url=小圖片網址
 small-rectangle=小長方形
 small-square=小正方形
 smartphone=智慧手機
 sms=簡訊
 sms-messenger-id=簡訊即時通ID
+sms-sn=SMS 螢幕名稱 (Automatic Translation)
 social-activity-limit-type-times=次
 social-activity-limit-type-times-a-day=次一天
 social-activity-limit-type-times-per-period=次每期間
@@ -6197,8 +6246,11 @@ tomorrow=明天
 ton=噸
 tools=工具
 top=上面
+top-border-unit=頂部邊框單位 (Automatic Translation)
 top-level=最高等級
 top-level-organizations=最高等級組織
+top-margin-unit=上邊距單位 (Automatic Translation)
+top-padding-unit=上邊距單位 (Automatic Translation)
 top-posters=頂面海報
 top-users-out-of-x={0} 外的頂級使用者。
 topic=主題
@@ -6693,6 +6745,7 @@ with-scope=範圍
 withdraw-submission=撤回送出
 within=在之內
 within-x=介於 {0}
+word=詞 (Automatic Translation)
 word-search=詞語搜尋
 word-spacing=詞間距
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV：
 yard=碼
 year=年
 year-abbreviation=是
+year-position=年位置 (Automatic Translation)
 year-s=年
 year-to-date=年迄今
 yearly=逐年
