--- a/portal-impl/src/content/Language_eu.properties
+++ b/portal-impl/src/content/Language_eu.properties
@@ -888,6 +888,7 @@ always=Beti
 always-use-my-user-id=Erabili beti nire erabiltzaile IDa.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Amerikak
 amount=Kopurua
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account={0} helbide elektronikoa duen kontua jadanik existitzen da portalean. Gertaera hau kontu honekin lotu nahi duzu?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Ustekabeko errorea gertatu da izena emateko
 an-unexpected-system-error-occurred=Ustegabeko sistema errorea gertatu da.
 analytics=Estatistikak
 and=eta
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=eta gero honela
 and-x-more=eta {0} gehiago.
 anniversary=Urteurrena
@@ -1308,6 +1311,9 @@ border-styles=Ertz estiloak
 border-styling=Ertzei estiloak jartzea
 border-width=Ertz zabalera
 bottom=Behean
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Adarra
 branches=Adarrak
 breadcrumb=Ogi-apurra
@@ -1372,6 +1378,7 @@ cas-server-name-help=Ezarri hau portalean lotura sakonak gaitzeko (adibidez: htt
 cas-server-url-help=Ezarri CAS zerbitzariaren domeinuaren URLa.
 cas-service-url-help=Ezarri hau portalean lotura sakonak desgaitzeko (adibidez: http://localhost:8080/c/portal/login). Ez da ezarri behar CAS zerbitzariaren izena ezarrita dagoenean.
 categories=Kategoriak
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategoriak eta mezuak
 categories[message-board]=Kategoriak
 categorization=Kategorizazioa
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Kategori ezarpenak
 category[message-board]=Kategoria
 cc=CC
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Discover
 cc_mastercard=Mastercard
@@ -1428,6 +1437,7 @@ chapter=Atala
 chapters=Atalak
 characters-maximum=Gehienezko karaktereak
 chart=Grafikoa
+chart-type=Chart Type (Automatic Copy)
 chart-width=Grafikoaren Zabalera
 charts=Grafikoak
 chat=Txat
@@ -1745,6 +1755,7 @@ custom-message=Mezu pertsonalizatua
 custom-portlet-xml=Portlet xml pertsonalizatua
 custom-question=Galdera pertsonalizatua
 custom-range=Bitarte Pertsonalizatua
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Erabiltzaile Atributu Pertsonalizatuak
 custom-user-attributes-help=Erabiltzailearen atributu pertsonalizatuak zehaztuz kategorizazio betetzen duten aktiboak berreskuratu daitezke. Kategoriak testuinguru orokorretik izan behar dira.
 custom.field.boolean=Egia/Gezurra
@@ -1986,6 +1997,7 @@ disk=Diskoa
 dismiss=Gaitzetsi
 display=Bistarazi
 display-a-datepicker=Datepicker-a bistaratu
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Jarduera Gehigarrien Zenbatzaileak Bistaratu
 display-as-tooltip=Tooltip moduan bistaratu
 display-asset-categories-facet=Eduki Kategorien Ikuspegia Bistaratu
@@ -2480,7 +2492,9 @@ finished=Amaitua
 firm-name=Enpresaren izena
 firms=Enpresak
 first=Lehenengoa
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Lehenengo mezua
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Lehenengo izena
 first-name-attribute=Izena atributua
 first-thread=Lehenengo haria
@@ -2995,6 +3009,7 @@ language-to=Hona hizkuntza
 language-type=Hizkuntza mota
 languages=Hizkuntzak
 large=Handia
+large-file=Large File (Automatic Copy)
 large-image=Irudi handia
 large-image-url=Irudi handiaren URLa
 large-rectangle=Laukizuzuen handia
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Diseinu txantiloiaren plugina
 layout-template-plugins=Diseinu txantiloiaren pluginak
 layout-templates=Diseinu txantiloiak
@@ -3087,6 +3103,9 @@ leave-site=Utzi Gunea
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Utzi hau bete gabe kupoia artikuluaren SKU-arekin bat ez badator.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Utzi hau bete gabe kupoia artikulu baten kategoria gurasoren batekin bat ez badator.
 left=Ezkerra
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Legezko identifikatzailea
 legal-name=Legezko izena
 legal-type=Lege mota
@@ -3161,6 +3180,7 @@ lockout-duration-help=Erabiltzaile baten kontua zenbat denbora blokeatzen den ze
 lockout-enabled=Blokeoa aktibatua
 lockout-enabled-help=Aukera hau eginez gero, erabiltzaile batek saioa hasteko saiakera kopuru jakin bat egin dezake erabiltzaile kontua blokeatu aurretik.
 log-levels=Log mailak
+logger-name=Logger Name (Automatic Copy)
 login=Sarbidea
 login-through-facebook=Facebook bidezko sarrera
 login-url=Saio hasierako URLa
@@ -3280,6 +3300,7 @@ maybe-attending=Beharbada erantzungo dute
 me=Ni
 media-files-must-be-one-of-the-following-formats=Media ftxategiek ondorengoko formatuetariko bat eduki behar dute:
 medium=Ertaina
+medium-file=Medium File (Automatic Copy)
 medium-image=Irudi ertaina
 medium-image-url=Irudi ertainaren URLa
 medium-rectangle=Laukizuzen ertaina
@@ -3296,6 +3317,8 @@ membership-type-private-help=Erabiltzaileak ezin dute kidetza eskaria egin. Gune
 membership-type-restricted-help=Erabiltzaileak ezin dute kidetza eskaria egin. Eskaera guneko administratzaileek onartu behar dute.
 memberships=Kidea
 memory=Memoria
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Bateratu
 merge-data=Bateratu datuak
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Bateratu {0} orrialde publikoak
 merged-from-x-x=(Bateratuta {0}-tik, {1})
 message=Mezua
 message-added-email=Gehitutako mezuaren jakinarazpen email-a
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Iragarki Taularen Mezua
 message-boards-home=Mezu Oholen Etxea
 message-boards-message-anonymous-help=Aukera hau eginez gero, mezua anonimoki bidaliko da.
@@ -3543,6 +3567,7 @@ monday-abbreviation=A
 monitoring=Ikuskapena
 month=Hilabetea
 month-abbreviation=h
+month-position=Month Position (Automatic Copy)
 month-s=hilabetea(k)
 monthly=Hilerokoa
 monthly-payment=Hileroko ordainketa
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Errenkada gehiago behean.
 more-x-results={0} emaitz gehiago
 move=Mugitu
 move-column=Mugitu zutabea
+move-down=Move Down (Automatic Copy)
 move-files=Fitxategiak Lekuz Aldatu
 move-page=Mugitu orrialdea
 move-selected-item-in-x-one-position-down=Mugitu aukeratutako elementua {0}-naka posizio bat behera.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Mugitu aukeratutako elementuak {0}-tik {1}-ra.
 move-thread=Mugitu eztabaida haria
 move-to=Mugitu hona
 move-to-the-recycle-bin=Mugitu Zakarrontzira
+move-up=Move Up (Automatic Copy)
 move-web-content=Web edukiaren orri-oina
 move-x=Move {0} (Automatic Copy)
 movie=Filma
@@ -3616,6 +3643,7 @@ never-review=Inoiz ez berrikusi
 new=Berria
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=Aplikazio Bistaratze Txantiloi Berria
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Blog sarrera berria
 new-bookmark=Liburu-marka berria
 new-category=Kategoria berria
@@ -4059,6 +4087,7 @@ pause=Pausa
 payer-email-address=Ordaintzailearen posta elektronikoa
 payment-gross=Zenbateko gordina
 payment-settings=Ordainketaren konfigurazioa
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal-eko posta elektronikoa
 paypal-order=PayPal eskakizuna
 pending=Burutu gabe
@@ -4389,6 +4418,7 @@ pop-up=Leihoa
 port=Portua
 portal=Ataria
 portal-data=Atariko datuak
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Atari instantziak
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Nagusia
 print=Inprimatu
 print-x-x=Inprimatu <span class="{0}">{1}</span>
 priority=Lehentasuna
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Pribatua
 private-node=Nodo pribatua
 private-nodes=Nodo pribatuak
@@ -4552,6 +4585,7 @@ purchase-order=Erosketa eskaera
 px=px (Automatic Copy)
 quantity=Kantitatea
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Gogorarazi niri
 reminder=Gogoan izan
 reminder-queries=Gogoratzen diren kontsultak
 reminder-query-and-answer-cannot-be-empty=Segurtasunezko galdera eta erantzuna ezin dira hutsik egon.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Urrutiko zerbitzaria/IP
 remote-live=Urruneko Live ingurunea
 remote-live-connection-settings=Urruneko Live ingununearekin konfigurazio conexioa
@@ -4714,6 +4749,7 @@ reply=Erantzun
 reply-all=Erantzun guztiei
 reply-as=Erantzun hau gisa...
 reply-as-anonymous=Erantzun ezezagun gisa
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Erantzunaren iruzkinak
 reply-date=Erantzunaren data
 reply-membership-request-for-x=Erantzun bazkidetza eskaerari {0}-rekin
@@ -4816,6 +4852,9 @@ rich=Aberastua
 rich-text-format=Testu aberastuko formatua
 ridge=Ertz irtendua duen 3D efektua (ridge)
 right=Eskuina
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robotak
 role=Rola
 role-name=Rol izena
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Bilatu
 search-all-organizations=Bilatu Erakunde Guztiak
 search-all-users=Bilatu Erabiltzaile Guztiak
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Bilatzeko aplikazioa (idazten duzun arabera bilatzen du).
 search-bookmarks=Bilatu liburu-markak
 search-by-id-or-url=Bilatu IDka edo URLka
 search-categories=Bilatu kategoriak
 search-configuration=Bilaketaren Konfigurazioa
 search-configuration-help=Eremu hau bilaketaren ezarpen aurreratuak aplikatzeko erabiltzen da JSON kate moduan.
+search-content=Search Content (Automatic Copy)
 search-coupons=Bilatu kupoiak
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Mesedez, aukeratu mota egoki bat.
@@ -4918,6 +4959,7 @@ search-operator=Bilatu eragilea
 search-orders=Bilatu eskaerak
 search-organizations=Bilatu erakundeak
 search-pages=Bilatu orrialdeak
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Bilatu pasahitz politikak
 search-plugins=Bilatu plugin-ak
 search-products=Bilatu produktuak
@@ -4966,6 +5008,7 @@ select-a-page=Aukeratu Orria
 select-a-site=Aukeratu Gunea
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Aukeratu egitura bat web eduki zerrenda egituraz iragazteko.
 select-a-type=Aukeratu Mota
+select-all=Select All (Automatic Copy)
 select-an-action-type=Aukeratu Akzio Mota
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Hautatu existitzen den zerrenda bat edo gehitu zerrenda bat, portletean bistaratzeko.
 select-and-copy=Hautatu eta kopiatu
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Aukeratu Portlet-a
 select-question=Aukeratu Galdera
 select-recipients=Aukeratu hartzaileak
+select-search=Select Search (Automatic Copy)
 select-site=Aukeratu Gunea
 select-tags=Aukeratu etiketak
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Aukeratu rol honek <em>{0}</em> portletean egin dezakeen ekintza.
@@ -5078,6 +5122,7 @@ servers=Zerbitzariak
 service=Zerbitzua
 service-account=Zerbitzuaren kontua
 service-password=Zerbitzuaren pasahitza
+service-search=Service Search (Automatic Copy)
 service-url=Zerbitzuaren URLa
 service-url-for-opensso-help=URL hau da OpenSSO-k erabiliko duena web zerbitzuak autentifikatzeko. OpenSSO 8 edo handiagoa erabiltzen ari bazara, zerbitzarian Java 6 eduki behar duzu martxan.
 services=Zerbitzuak
@@ -5287,15 +5332,19 @@ sku=SKUak
 skus=SKUak
 skype=Skype
 skyscraper=Etxeorratza
+slide-show=Slide Show (Automatic Copy)
 slovak=Eslovakiera
 small=Txikia
+small-file=Small File (Automatic Copy)
 small-image=Irudi txikia
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL irudi txikia
 small-rectangle=Laukizuzen txikia
 small-square=Lauki txikia
 smartphone=Smartphone (Automatic Copy)
 sms=SMS
 sms-messenger-id=SMS Messenger IDa
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=aldiz
 social-activity-limit-type-times-a-day=aldiz eguneko
 social-activity-limit-type-times-per-period=aldiz denboraldiko
@@ -6197,8 +6246,11 @@ tomorrow=Bihar
 ton=Tona
 tools=Tresnak
 top=Igo
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Goi Mailako Erakundeek
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Erabiltzailerik aktiboenak
 top-users-out-of-x={0-ko} erabiltzaile aktibo gehienak.
 topic=Gaia
@@ -6693,6 +6745,7 @@ with-scope=Esparruakin
 withdraw-submission=Eskaera kendu
 within=Barruan
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Bilatu hitzen arabera
 word-spacing=Hitz tartea
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahooko CSVa:
 yard=Yarda
 year=Urtea
 year-abbreviation=u
+year-position=Year Position (Automatic Copy)
 year-s=urtea(k)
 year-to-date=Urteak gaur arte
 yearly=Urtero
