--- a/portal-impl/src/content/Language_gl.properties
+++ b/portal-impl/src/content/Language_gl.properties
@@ -888,6 +888,7 @@ always=Sempre
 always-use-my-user-id=Usar sempre o meu identificador de usuario.
 am=AM (Automatic Copy)
 am-pm=AM/PM (Automatic Copy)
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Américas
 amount=Cantidade
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Unha conta con {0} como enderezo de email xa existe no portal. ¿Queres asociar esta actividade con esa conta?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Produciuse un erro inesperado no proceso de
 an-unexpected-system-error-occurred=Produciuse un erro inesperado do sistema.
 analytics=Analytics (Automatic Copy)
 and=e
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=E despois por
 and-x-more=e {0} máis.
 anniversary=Aniversario
@@ -1308,6 +1311,9 @@ border-styles=Estilos do bordo
 border-styling=Estilos do bordo
 border-width=Ancho do bordo
 bottom=Pé
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Rama
 branches=Ramas
 breadcrumb=Camiño de migas
@@ -1372,6 +1378,7 @@ cas-server-name-help=Establecer esto a enlaces fortes activo no portal (ex. http
 cas-server-url-help=Establecer a URL do servidor de dominio CAS.
 cas-service-url-help=Establecer esto a enlaces fortes inactivo no portal (ex. http://localhost:8080/c/portal/login). Non establezas esto si o nome do servidor CAS está activo.
 categories=Categorías
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Categorías e mensaxes
 categories[message-board]=Categorías
 categorization=Clasificación
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Conxunto de categorías
 category[message-board]=Categoría
 cc=CC (Automatic Copy)
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express (Automatic Copy)
 cc_discover=Descubrir
 cc_mastercard=MasterCard (Automatic Copy)
@@ -1428,6 +1437,7 @@ chapter=Capítulo
 chapters=Capítulos
 characters-maximum=Número máximo de carácteres
 chart=Gráfico
+chart-type=Chart Type (Automatic Copy)
 chart-width=Chart Width (Automatic Copy)
 charts=Gráficas
 chat=Gráfico
@@ -1745,6 +1755,7 @@ custom-message=Mensaxe personalizada
 custom-portlet-xml=portlet.xml personalizado
 custom-question=Pregunta personalizada
 custom-range=Custom Range (Automatic Copy)
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Atributos personalizados
 custom-user-attributes-help=Specifying the custom user attributes will retrieve assets that have matching categorization. Categories must be from the global context. (Automatic Copy)
 custom.field.boolean=Certo/Falso
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Botarse atrás
 display=Presentación
 display-a-datepicker=Mostrar selector de data
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Display Additional Activity Counters (Automatic Copy)
 display-as-tooltip=Mostrar suxerencias
 display-asset-categories-facet=Display Asset Categories Facet (Automatic Copy)
@@ -2480,7 +2492,9 @@ finished=Terminar
 firm-name=Nome da compañía
 firms=Compañías
 first=Primeiro
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Primeira mensaxe
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Nome
 first-name-attribute=Atributo do primero nome
 first-thread=Primeiro fío
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=Tipo de linguaxe
 languages=Idiomas
 large=Longo
+large-file=Large File (Automatic Copy)
 large-image=Imaxe grande
 large-image-url=URL da imaxe grande
 large-rectangle=Rectángulo grande
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Plugin de disposición
 layout-template-plugins=Plugins de disposición
 layout-templates=Disposicións de páxina
@@ -3087,6 +3103,9 @@ leave-site=Abandoar sitio
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Deixar este espazo en branco se o cupón non coincide co SKU do artigo.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Deixar este espazo en branco se o cupón non coincide con algunha das categorías do artigo.
 left=Esquerdo
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=ID legal
 legal-name=Nome legal
 legal-type=Tipo legal
@@ -3161,6 +3180,7 @@ lockout-duration-help=Determina a cantidade de tempo que a conta dun usuario é 
 lockout-enabled=Permitir bloqueo
 lockout-enabled-help=Se é activado, bloquearase a conta dun usuario se supera o límite de intentos de entrada errados.
 log-levels=Niveis de trazas
+logger-name=Logger Name (Automatic Copy)
 login=Acceso
 login-through-facebook=Identificarse a través de Facebook
 login-url=URL de identificación
@@ -3280,6 +3300,7 @@ maybe-attending=Quizá atendan
 me=Eu
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats: (Automatic Copy)
 medium=Medio
+medium-file=Medium File (Automatic Copy)
 medium-image=Imaxe de tamaño mediano
 medium-image-url=URL da imaxe de tamaño mediano
 medium-rectangle=Rectángulo mediano
@@ -3296,6 +3317,8 @@ membership-type-private-help=Os usuarios non teñen permitido solicitar ser memb
 membership-type-restricted-help=Os usuarios teñen permitido solicitar ser membros. A solicitude necesitará ser aprobado polos administradores do sitio web.
 memberships=Membros
 memory=Memoria
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Fusionar
 merge-data=Mesturar datos
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Fusionar {0} páxinas públicas
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=Mensaxe
 message-added-email=Notificación de mensaxe engadida
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Mensaxe
 message-boards-home=Foro
 message-boards-message-anonymous-help=Se marcas isto, despois esta mensaxe será fixada anónima.
@@ -3543,6 +3567,7 @@ monday-abbreviation=L
 monitoring=Supervisión
 month=Mes
 month-abbreviation=m (Automatic Copy)
+month-position=Month Position (Automatic Copy)
 month-s=mes(es)
 monthly=Mensual
 monthly-payment=Cota mensual
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Máis filas ao final.
 more-x-results=Máis {0} resultados
 move=Mover
 move-column=Mover a columna
+move-down=Move Down (Automatic Copy)
 move-files=Mover arquivos
 move-page=Mover páxina
 move-selected-item-in-x-one-position-down=Mover o elemento seleccionado en {0} unha posición cara abaixo.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Mover os elementos seleccionados desde {0} a {1}
 move-thread=Mover fío de discusión
 move-to=Mover a
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Contido web do pé
 move-x=Move {0} (Automatic Copy)
 movie=Película
@@ -3616,6 +3643,7 @@ never-review=Non revisado
 new=Novo
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=New Application Display Template (Automatic Copy)
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Nova entrada do blog
 new-bookmark=Novo favorito
 new-category=Nova categoría
@@ -4059,6 +4087,7 @@ pause=Pausa
 payer-email-address=Enderezo de correo do pagador
 payment-gross=Importe bruto
 payment-settings=Configuración do pago
+paypal=PayPal (Automatic Copy)
 paypal-email-address=Enderezo de correo electrónico de payPal
 paypal-order=Pedido de PayPal
 pending=Pendente
@@ -4389,6 +4418,7 @@ pop-up=Ventá emerxente
 port=Porto
 portal=Portal (Automatic Copy)
 portal-data=Datos do portal
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Instancias do portal
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Principal (Automatic Copy)
 print=Imprimir
 print-x-x=Imprimir <span class="{0}">{1}</span>
 priority=Prioridad
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privado
 private-node=Nodo privado
 private-nodes=Nodos privados
@@ -4552,6 +4585,7 @@ purchase-order=Pagar pedido
 px=px (Automatic Copy)
 quantity=Cantidade
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Lembrarme
 reminder=Recordatorio
 reminder-queries=Preguntas recordatorio
 reminder-query-and-answer-cannot-be-empty=A pregunta recordatorio e a resposta non poden estar en blanco.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=IP do servidor remoto
 remote-live=Live remoto
 remote-live-connection-settings=Configuración da conexión remota Live
@@ -4714,6 +4749,7 @@ reply=Responder
 reply-all=Responder a todos
 reply-as=Responder como...
 reply-as-anonymous=Responder como anónimo
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Comentarios da contestación
 reply-date=Data da contestación
 reply-membership-request-for-x=Resposta á petición de inscripción para {0}
@@ -4816,6 +4852,9 @@ rich=Avanzado
 rich-text-format=Formato de texto enriquecido
 ridge=No alto
 right=Dereita
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robots (Automatic Copy)
 role=Rol
 role-name=Nome do rol
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Buscar
 search-all-organizations=Buscar organizacións
 search-all-users=Buscar usuarios
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Buscar aplicacións (conforme escribas).
 search-bookmarks=Buscar en favoritos
 search-by-id-or-url=Búscar por ID ou URL
 search-categories=Buscar categorías
 search-configuration=Configuración por defecto
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string. (Automatic Copy)
+search-content=Search Content (Automatic Copy)
 search-coupons=Buscar cupóns
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Por favor, selecciona un tipo válido.
@@ -4918,6 +4959,7 @@ search-operator=Operador de procura
 search-orders=Buscar pedidos
 search-organizations=Buscar organizacións
 search-pages=Buscar páxinas
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Buscar políticas de contraseñas
 search-plugins=Buscar plugins
 search-products=Buscar produtos
@@ -4966,6 +5008,7 @@ select-a-page=Páxina seleccionada
 select-a-site=Páxina seleccionada
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Selecciona unha estrutura para filtrar o contido web por unha estrutura.
 select-a-type=Páxina seleccionada
+select-all=Select All (Automatic Copy)
 select-an-action-type=Select an Action Type (Automatic Copy)
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Selecciona unha lista existente ou engade unha lista para ser mostrada neste portlet.
 select-and-copy=Seleccionar e copiar
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Seleccionar portlet
 select-question=Select Question (Automatic Copy)
 select-recipients=Seleccionar destinatarios
+select-search=Select Search (Automatic Copy)
 select-site=Páxina seleccionada
 select-tags=Seleccionar etiquetas
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Selecciona a acción que este rol pode levar a cabo no portlet <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Servidores
 service=Servizo
 service-account=Conta do servizo
 service-password=Contraseña do servizo
+service-search=Service Search (Automatic Copy)
 service-url=URL do servizo
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Servizos
@@ -5287,15 +5332,19 @@ sku=SKU (Automatic Copy)
 skus=SKUs (Automatic Copy)
 skype=Skype (Automatic Copy)
 skyscraper=Skyscraper (Automatic Copy)
+slide-show=Slide Show (Automatic Copy)
 slovak=Eslovaco
 small=Pequeno
+small-file=Small File (Automatic Copy)
 small-image=Imaxe pequena
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL da imaxe pequena
 small-rectangle=Rectángulo pequeno
 small-square=Cadrado pequeno
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=ID SMS
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=Mañá
 ton=Tonelada
 tools=Ferramentas
 top=Subir
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level Organizations (Automatic Copy)
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Usuarios máis activos
 top-users-out-of-x=Usuarios máis activos fora de {0}.
 topic=Tema
@@ -6693,6 +6745,7 @@ with-scope=con ámbito
 withdraw-submission=Proposta de retirar
 within=Dentro
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Buscar por palabras
 word-spacing=Espazo entre palabras
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=CSV de yahoo!:
 yard=Yarda
 year=Ano
 year-abbreviation=a
+year-position=Year Position (Automatic Copy)
 year-s=ano(s)
 year-to-date=Ano ata a data
 yearly=Anualmente
