--- a/portal-impl/src/content/Language_lt.properties
+++ b/portal-impl/src/content/Language_lt.properties
@@ -888,6 +888,7 @@ always=Always (Automatic Copy)
 always-use-my-user-id=Always use my user ID. (Automatic Copy)
 am=AM (Automatic Copy)
 am-pm=AM/PM (Automatic Copy)
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Americas (Automatic Copy)
 amount=Amount (Automatic Copy)
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=An account with {0} as the email address already exists in the portal. Do you want to associate this activity with that account? (Automatic Copy)
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=An unexpected sign in error occurred. (Auto
 an-unexpected-system-error-occurred=An unexpected system error occurred. (Automatic Copy)
 analytics=Analytics (Automatic Copy)
 and=And (Automatic Copy)
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=And Then By (Automatic Copy)
 and-x-more=and {0} more. (Automatic Copy)
 anniversary=Anniversary (Automatic Copy)
@@ -1308,6 +1311,9 @@ border-styles=Border Styles (Automatic Copy)
 border-styling=Border Styling (Automatic Copy)
 border-width=Border Width (Automatic Copy)
 bottom=Bottom (Automatic Copy)
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Branch (Automatic Copy)
 branches=Branches (Automatic Copy)
 breadcrumb=Breadcrumb (Automatic Copy)
@@ -1372,6 +1378,7 @@ cas-server-name-help=Set this to enable deep linking into the portal (e.g. http:
 cas-server-url-help=Set the CAS server domain URL. (Automatic Copy)
 cas-service-url-help=Set this to disable deep linking into the portal (e.g. http://localhost:8080/c/portal/login). Do not set this if the CAS server name is set. (Automatic Copy)
 categories=Categories (Automatic Copy)
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Categories and Messages (Automatic Copy)
 categories[message-board]=Categories (Automatic Copy)
 categorization=Categorization (Automatic Copy)
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Category Sets (Automatic Copy)
 category[message-board]=Category (Automatic Copy)
 cc=CC (Automatic Copy)
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express (Automatic Copy)
 cc_discover=Discover (Automatic Copy)
 cc_mastercard=MasterCard (Automatic Copy)
@@ -1428,6 +1437,7 @@ chapter=Chapter (Automatic Copy)
 chapters=Chapters (Automatic Copy)
 characters-maximum=Characters Maximum (Automatic Copy)
 chart=Chart (Automatic Copy)
+chart-type=Chart Type (Automatic Copy)
 chart-width=Chart Width (Automatic Copy)
 charts=Charts (Automatic Copy)
 chat=Chat (Automatic Copy)
@@ -1745,6 +1755,7 @@ custom-message=Custom Message (Automatic Copy)
 custom-portlet-xml=Custom portlet.xml (Automatic Copy)
 custom-question=Custom Question (Automatic Copy)
 custom-range=Custom Range (Automatic Copy)
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Custom User Attributes (Automatic Copy)
 custom-user-attributes-help=Specifying the custom user attributes will retrieve assets that have matching categorization. Categories must be from the global context. (Automatic Copy)
 custom.field.boolean=True/False (Automatic Copy)
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Dismiss (Automatic Copy)
 display=Display (Automatic Copy)
 display-a-datepicker=Display a Datepicker (Automatic Copy)
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Display Additional Activity Counters (Automatic Copy)
 display-as-tooltip=Display as Tooltip (Automatic Copy)
 display-asset-categories-facet=Display Asset Categories Facet (Automatic Copy)
@@ -2480,7 +2492,9 @@ finished=Finished (Automatic Copy)
 firm-name=Firm Name (Automatic Copy)
 firms=Firms (Automatic Copy)
 first=First (Automatic Copy)
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=First Message (Automatic Copy)
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=First Name (Automatic Copy)
 first-name-attribute=First Name Attribute (Automatic Copy)
 first-thread=First Thread (Automatic Copy)
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=Language Type (Automatic Copy)
 languages=Languages (Automatic Copy)
 large=Large (Automatic Copy)
+large-file=Large File (Automatic Copy)
 large-image=Large Image (Automatic Copy)
 large-image-url=Large Image URL (Automatic Copy)
 large-rectangle=Large Rectangle (Automatic Copy)
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Layout Template Plugin (Automatic Copy)
 layout-template-plugins=Layout Template Plugins (Automatic Copy)
 layout-templates=Layout Templates (Automatic Copy)
@@ -3087,6 +3103,9 @@ leave-site=Leave Site (Automatic Copy)
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Leave this blank if the coupon does not check for the item SKU. (Automatic Copy)
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Leave this blank if the coupon does not check for the parent categories of an item. (Automatic Copy)
 left=left
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Legal ID (Automatic Copy)
 legal-name=Legal Name (Automatic Copy)
 legal-type=Legal Type (Automatic Copy)
@@ -3161,6 +3180,7 @@ lockout-duration-help=This determines the amount of time that a user's account i
 lockout-enabled=Lockout Enabled (Automatic Copy)
 lockout-enabled-help=If this is checked, a user can attempt to login a certain number of times before their account is locked. (Automatic Copy)
 log-levels=Log Levels (Automatic Copy)
+logger-name=Logger Name (Automatic Copy)
 login=Login (Automatic Copy)
 login-through-facebook=Login through Facebook (Automatic Copy)
 login-url=Login URL (Automatic Copy)
@@ -3280,6 +3300,7 @@ maybe-attending=Maybe Attending (Automatic Copy)
 me=Me (Automatic Copy)
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats: (Automatic Copy)
 medium=Medium (Automatic Copy)
+medium-file=Medium File (Automatic Copy)
 medium-image=Medium Image (Automatic Copy)
 medium-image-url=Medium Image URL (Automatic Copy)
 medium-rectangle=Medium Rectangle (Automatic Copy)
@@ -3296,6 +3317,8 @@ membership-type-private-help=Users are not allowed to request membership. Only s
 membership-type-restricted-help=Users are allowed to request membership. The request will need to be approved by the site administrators. (Automatic Copy)
 memberships=Memberships (Automatic Copy)
 memory=Memory (Automatic Copy)
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Merge (Automatic Copy)
 merge-data=Merge Data (Automatic Copy)
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Merge {0} public pages (Automatic Copy)
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=Pranešimų lentos
 message-added-email=Message Added Email (Automatic Copy)
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Message Board Messages (Automatic Copy)
 message-boards-home=Message Boards Home (Automatic Copy)
 message-boards-message-anonymous-help=If this is checked, then this message will be posted anonymously. (Automatic Copy)
@@ -3543,6 +3567,7 @@ monday-abbreviation=M (Automatic Copy)
 monitoring=Monitoring (Automatic Copy)
 month=Month (Automatic Copy)
 month-abbreviation=m (Automatic Copy)
+month-position=Month Position (Automatic Copy)
 month-s=month(s) (Automatic Copy)
 monthly=Monthly (Automatic Copy)
 monthly-payment=Monthly Payment (Automatic Copy)
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=More rows at bottom. (Automatic Copy)
 more-x-results=More {0} Results (Automatic Copy)
 move=Move (Automatic Copy)
 move-column=Move Column (Automatic Copy)
+move-down=Move Down (Automatic Copy)
 move-files=Move Files (Automatic Copy)
 move-page=Move Page (Automatic Copy)
 move-selected-item-in-x-one-position-down=Move selected item in {0} one position down. (Automatic Copy)
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Move selected items from {0} to {1}. (Automatic 
 move-thread=Move Thread (Automatic Copy)
 move-to=Move To (Automatic Copy)
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Move Web Content (Automatic Copy)
 move-x=Move {0} (Automatic Copy)
 movie=Movie (Automatic Copy)
@@ -3616,6 +3643,7 @@ never-review=Never Review (Automatic Copy)
 new=New (Automatic Copy)
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=New Application Display Template (Automatic Copy)
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=New Blog Entry (Automatic Copy)
 new-bookmark=New Bookmark (Automatic Copy)
 new-category=New Category (Automatic Copy)
@@ -4059,6 +4087,7 @@ pause=Pause (Automatic Copy)
 payer-email-address=Payer Email Address (Automatic Copy)
 payment-gross=Payment Gross (Automatic Copy)
 payment-settings=Payment Settings (Automatic Copy)
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal Email Address (Automatic Copy)
 paypal-order=PayPal Order (Automatic Copy)
 pending=Pending (Automatic Copy)
@@ -4389,6 +4418,7 @@ pop-up=Pop Up (Automatic Copy)
 port=Port (Automatic Copy)
 portal=Portal (Automatic Copy)
 portal-data=Portal Data (Automatic Copy)
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Portal Instance (Automatic Copy)
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Principal (Automatic Copy)
 print=Print (Automatic Copy)
 print-x-x=Print <span class="{0}">{1}</span> (Automatic Copy)
 priority=Priority (Automatic Copy)
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Private (Automatic Copy)
 private-node=Private Node (Automatic Copy)
 private-nodes=Private Nodes (Automatic Copy)
@@ -4552,6 +4585,7 @@ purchase-order=Purchase Order (Automatic Copy)
 px=px (Automatic Copy)
 quantity=Quantity (Automatic Copy)
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Remember Me (Automatic Copy)
 reminder=Reminder (Automatic Copy)
 reminder-queries=Reminder Queries (Automatic Copy)
 reminder-query-and-answer-cannot-be-empty=Reminder query and answer cannot be empty. (Automatic Copy)
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Remote Host/IP (Automatic Copy)
 remote-live=Remote Live (Automatic Copy)
 remote-live-connection-settings=Remote Live Connection Settings (Automatic Copy)
@@ -4714,6 +4749,7 @@ reply=Reply (Automatic Copy)
 reply-all=Reply All (Automatic Copy)
 reply-as=Reply as... (Automatic Copy)
 reply-as-anonymous=Reply as Anonymous (Automatic Copy)
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Reply Comments (Automatic Copy)
 reply-date=Reply Date (Automatic Copy)
 reply-membership-request-for-x=Reply Membership Request for {0} (Automatic Copy)
@@ -4816,6 +4852,9 @@ rich=Rich (Automatic Copy)
 rich-text-format=Rich Text Format (Automatic Copy)
 ridge=Ridge (Automatic Copy)
 right=right
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robots (Automatic Copy)
 role=Role (Automatic Copy)
 role-name=Role Name (Automatic Copy)
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Paieška
 search-all-organizations=Search All Organizations (Automatic Copy)
 search-all-users=Search All Users (Automatic Copy)
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Search applications (searches as you type). (Automatic Copy)
 search-bookmarks=Search Bookmarks (Automatic Copy)
 search-by-id-or-url=Search by ID or URL (Automatic Copy)
 search-categories=Search Categories (Automatic Copy)
 search-configuration=Search Configuration (Automatic Copy)
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string. (Automatic Copy)
+search-content=Search Content (Automatic Copy)
 search-coupons=Search Coupons (Automatic Copy)
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Please select a valid date range. (Automatic Copy)
@@ -4918,6 +4959,7 @@ search-operator=Search Operator (Automatic Copy)
 search-orders=Search Orders (Automatic Copy)
 search-organizations=Search Organizations (Automatic Copy)
 search-pages=Search Pages (Automatic Copy)
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Search Password Policies (Automatic Copy)
 search-plugins=Search Plugins (Automatic Copy)
 search-products=Search Products (Automatic Copy)
@@ -4966,6 +5008,7 @@ select-a-page=Select a Page (Automatic Copy)
 select-a-site=Select a Site (Automatic Copy)
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Select a structure to filter the web content list by a structure. (Automatic Copy)
 select-a-type=Select a Type (Automatic Copy)
+select-all=Select All (Automatic Copy)
 select-an-action-type=Select an Action Type (Automatic Copy)
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Select an existing list or add a list to be displayed in this portlet. (Automatic Copy)
 select-and-copy=Select And Copy (Automatic Copy)
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Select Portlet (Automatic Copy)
 select-question=Select Question (Automatic Copy)
 select-recipients=Select Recipients (Automatic Copy)
+select-search=Select Search (Automatic Copy)
 select-site=Select Site (Automatic Copy)
 select-tags=Select Tags (Automatic Copy)
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Select the action that this role can perform on the <em>{0}</em> portlet. (Automatic Copy)
@@ -5078,6 +5122,7 @@ servers=Servers (Automatic Copy)
 service=Service (Automatic Copy)
 service-account=Service Account (Automatic Copy)
 service-password=Service Password (Automatic Copy)
+service-search=Service Search (Automatic Copy)
 service-url=Service URL (Automatic Copy)
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6. (Automatic Copy)
 services=Services (Automatic Copy)
@@ -5287,15 +5332,19 @@ sku=SKU (Automatic Copy)
 skus=SKUs (Automatic Copy)
 skype=Skype (Automatic Copy)
 skyscraper=Skyscraper (Automatic Copy)
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovak (Automatic Copy)
 small=Small (Automatic Copy)
+small-file=Small File (Automatic Copy)
 small-image=Small Image (Automatic Copy)
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=Small Image URL (Automatic Copy)
 small-rectangle=Small Rectangle (Automatic Copy)
 small-square=Small Square (Automatic Copy)
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=SMS Messenger ID (Automatic Copy)
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=Tomorrow (Automatic Copy)
 ton=Ton (Automatic Copy)
 tools=Tools (Automatic Copy)
 top=Top (Automatic Copy)
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level Organizations (Automatic Copy)
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Top Posters (Automatic Copy)
 top-users-out-of-x=Top users out of {0}. (Automatic Copy)
 topic=Topic (Automatic Copy)
@@ -6693,6 +6745,7 @@ with-scope=with scope (Automatic Copy)
 withdraw-submission=Withdraw Submission (Automatic Copy)
 within=Within (Automatic Copy)
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Word Search (Automatic Copy)
 word-spacing=Word Spacing (Automatic Copy)
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV: (Automatic Copy)
 yard=Yard (Automatic Copy)
 year=Year (Automatic Copy)
 year-abbreviation=y (Automatic Copy)
+year-position=Year Position (Automatic Copy)
 year-s=year(s) (Automatic Copy)
 year-to-date=Year to Date (Automatic Copy)
 yearly=Yearly (Automatic Copy)
