--- a/portal-impl/src/content/Language_nl.properties
+++ b/portal-impl/src/content/Language_nl.properties
@@ -888,6 +888,7 @@ always=Altijd
 always-use-my-user-id=Altijd mijn gebruikers-ID gebruiken.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Amazon Rankings (Automatic Translation)
 americas=Amerika
 amount=Bedrag
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Er bestaat al een account met e-mailadres {0} in de portal. Wilt u deze activiteit aan die account koppelen?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Er trad een aanmeldfout op.
 an-unexpected-system-error-occurred=Er trad een systeemfout op.
 analytics=Statistieken
 and=En
+and-operator=And, Operator (Automatic Translation)
+and-or-operator=En/of beheerder (Automatic Translation)
 and-then-by=en dan op
 and-x-more=en {0} meer.
 anniversary=Verjaardag
@@ -1308,6 +1311,9 @@ border-styles=Randstijlen
 border-styling=Randstyling
 border-width=Randbreedte
 bottom=Bodem
+bottom-border-unit=Onderste grens eenheid (Automatic Translation)
+bottom-margin-unit=Onderste marge eenheid (Automatic Translation)
+bottom-padding-unit=Onder Opvulling eenheid (Automatic Translation)
 branch=Tak
 branches=Takken
 breadcrumb=Klikpad
@@ -1372,6 +1378,7 @@ cas-server-name-help=Als u deze optie inschakelt, staat u diepere links in de po
 cas-server-url-help=URL voor CAS-serverdomein instellen.
 cas-service-url-help=Als u deze optie inschakelt, blokkeert u diepere links in de portal (bijv. http://localhost:8080/c/portal/login). Doe dit niet als de CAS- servernaam is ingesteld.
 categories=Categorieën
+categories-admin-select-search=Rubrieken door Admin Selecteer te zoeken (Automatic Translation)
 categories-and-messages=Categorieën en berichten
 categories[message-board]=Categorieën
 categorization=Categoriseren
@@ -1383,6 +1390,8 @@ category-services=Category Services
 category-sets=Categoriereeksen
 category[message-board]=Categorie
 cc=CC
+cc-exp-month=CC vervaldatum maand (Automatic Translation)
+cc-exp-year=CC vervaldatum jaar (Automatic Translation)
 cc_amex=American Express
 cc_discover=Discover
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Hoofdstuk
 chapters=Hoofdstukken
 characters-maximum=Maximaal aantal tekens
 chart=Grafiek
+chart-type=Grafiektype (Automatic Translation)
 chart-width=Grafiekbreedte
 charts=Grafieken
 chat=Chat
@@ -1745,6 +1755,7 @@ custom-message=Specifiek bericht
 custom-portlet-xml=Aangepaste portlet.xml
 custom-question=Specifieke vraag
 custom-range=Specifieke reikwijdte
+custom-title=Aangepaste titel (Automatic Translation)
 custom-user-attributes=Extra gebruikerskenmerken
 custom-user-attributes-help=Als u extra gebruikerskenmerken specificeert, wordt er content opgehaald die hetzelfde is gecategoriseerd. De categorieën moeten afkomstig zijn uit de globale context.
 custom.field.boolean=Waar/Onwaar
@@ -1986,6 +1997,7 @@ disk=Schijf
 dismiss=Negeren
 display=Weergeven
 display-a-datepicker=Een datumkiezer weergeven
+display-activity-counter-name=Weergavenaam activiteit teller (Automatic Translation)
 display-additional-activity-counters=Extra activiteiten-tellers weergeven
 display-as-tooltip=Als knopinfo weergeven
 display-asset-categories-facet=Contentcategoriefacet weergeven
@@ -2480,7 +2492,9 @@ finished=Afgerond
 firm-name=Bedrijfsnaam
 firms=Bedrijven
 first=Eerste
+first-day-of-week=Eerste dag van de Week (Automatic Translation)
 first-message=Eerste bericht
+first-month-of-year=Eerste maand van het jaar (Automatic Translation)
 first-name=Voornaam
 first-name-attribute=Kenmerk van voornaam
 first-thread=Eerste conversatie
@@ -2995,6 +3009,7 @@ language-to=Taal naar
 language-type=Taaltype
 languages=Talen
 large=Groot
+large-file=Groot bestand (Automatic Translation)
 large-image=Grote afbeelding
 large-image-url=Grote afbeelding-URL
 large-rectangle=Grote rechthoek
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 kolommen (70/30) (Automatic Translation)
 layout-template-3-2-3-columns=3-2-3 kolommen (Automatic Translation)
 layout-template-3-columns=3 kolommen (Automatic Translation)
 layout-template-freeform=Vrije vorm (Automatic Translation)
+layout-template-id=Lay-out sjabloon ID (Automatic Translation)
 layout-template-plugin=Lay-outsjabloon plug-in
 layout-template-plugins=Lay-outsjabloon plug-ins
 layout-templates=Lay-outsjablonen
@@ -3087,6 +3103,9 @@ leave-site=Site verlaten
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Dit veld leeg laten als de kortingsbon het artikelnummer niet controleert.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Dit veld leeg laten als de kortingsbon de bovenliggende categorieën van een artikel niet controleert.
 left=Links
+left-border-unit=Linkerrand eenheid (Automatic Translation)
+left-margin-unit=Linkermarge eenheid (Automatic Translation)
+left-padding-unit=Linker opvulling eenheid (Automatic Translation)
 legal-id=KVK-nummer
 legal-name=Bedrijfsnaam
 legal-type=Bedrijfsvorm
@@ -3161,6 +3180,7 @@ lockout-duration-help=Hier kunt u bepalen voor hoeveel tijd het account van een 
 lockout-enabled=Vergrendeling ingeschakeld
 lockout-enabled-help=Als u dit activeert, kan een gebruiker een bepaald aantal aanmeldpogingen doen voordat zijn account wordt vergrendeld.
 log-levels=Logboekniveaus
+logger-name=Naam logboekregistratiesessie (Automatic Translation)
 login=Aanmelden
 login-through-facebook=Inloggen via Facebook
 login-url=Aanmeld-URL
@@ -3280,6 +3300,7 @@ maybe-attending=Misschien aanwezig
 me=Ik
 media-files-must-be-one-of-the-following-formats=Mediabestanden moeten van een van de volgende typen zijn:
 medium=Middel
+medium-file=Middellange bestand (Automatic Translation)
 medium-image=Middelgrote afbeelding
 medium-image-url=Middelgrote afbeelding-URL
 medium-rectangle=Middelgrote rechthoek
@@ -3296,6 +3317,8 @@ membership-type-private-help=Gebruikers kunnen niet om lidmaatschap verzoeken. A
 membership-type-restricted-help=Gebruikers kunnen om lidmaatschap verzoeken. Een sitebeheerder moet het verzoek goedkeuren.
 memberships=Lidmaatschap
 memory=Geheugen
+memory-used-vs-max-memory=Geheugen gebruikt vs. Max geheugen (Automatic Translation)
+memory-used-vs-total-memory=Geheugen gebruikt vs. totaalgeheugen (Automatic Translation)
 menu=Menu
 merge=Samenvoegen
 merge-data=Data samenvoegen
@@ -3312,6 +3335,7 @@ merge-x-public-pages={0} openbare pagina's samenvoegen
 merged-from-x-x=(samengevoegd van {0}, {1})
 message=Bericht
 message-added-email=E-mail: 'Bericht toegevoegd'
+message-attachment=Mailbijlage (Automatic Translation)
 message-board-messages=Berichten
 message-boards-home=Startpagina van forum
 message-boards-message-anonymous-help=Als u dit activeert, wordt dit bericht anoniem geplaatst.
@@ -3543,6 +3567,7 @@ monday-abbreviation=ma
 monitoring=Monitoren
 month=Maand
 month-abbreviation=m
+month-position=Maand positie (Automatic Translation)
 month-s=maand(en)
 monthly=Maandelijks
 monthly-payment=Maandelijkse betaling
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Meer rijen onderaan.
 more-x-results=Meer {0} resultaten
 move=Verplaatsen
 move-column=Kolom verplaatsen
+move-down=Omlaag (Automatic Translation)
 move-files=Bestanden verplaatsen
 move-page=Pagina verplaatsen
 move-selected-item-in-x-one-position-down=Het in {0} geselecteerde item een positie lager verplaatsen.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=De geselecteerde items van {0} naar {1} verplaat
 move-thread=Conversatie verplaatsen
 move-to=Verplaatsen naar
 move-to-the-recycle-bin=Naar de prullenbak verplaatsen
+move-up=Omhoog (Automatic Translation)
 move-web-content=Webcontent verplaatsen
 move-x={0} verplaatsen
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Nooit beoordelen
 new=Nieuw
 new-action-for-x=Nieuwe actie voor {0}
 new-application-display-template=Nieuwe weergavesjabloon voor toepassing
+new-article-id=Nieuwe artikel-ID (Automatic Translation)
 new-blog-entry=Nieuwe blog
 new-bookmark=Nieuwe bladwijzer
 new-category=Nieuwe categorie
@@ -4059,6 +4087,7 @@ pause=Pauze
 payer-email-address=E-mailadres van betaler
 payment-gross=Brutobetaling
 payment-settings=Betalingsinstellingen
+paypal=PayPal (Automatic Translation)
 paypal-email-address=PayPal e-mailadres
 paypal-order=PayPal bestelling
 pending=Lopende
@@ -4389,6 +4418,7 @@ pop-up=Pop-up
 port=Poort
 portal=Portal
 portal-data=Portaldata
+portal-ext=Portaal EXT (Automatic Translation)
 portal-instance=Portalinstantie
 portal-instance-help=Object dat de huidige portalinstantie vertegenwoordigt.
 portal-instance-id=Portalinstantie-identificatie
@@ -4473,6 +4503,9 @@ principal=Belangrijkste
 print=Afdrukken
 print-x-x=<span class="{0}">{1}</span> afdrukken
 priority=Prioriteit
+priority-image=Prioriteit afbeelding (Automatic Translation)
+priority-name=Prioriteit naam (Automatic Translation)
+priority-value=Prioriteitswaarde (Automatic Translation)
 private=Besloten
 private-node=Besloten knooppunt
 private-nodes=Besloten knooppunten
@@ -4552,6 +4585,7 @@ purchase-order=Bestelling
 px=px
 quantity=Hoeveelheid
 query=Query (Automatic Translation)
+query-contains=Query bevat (Automatic Translation)
 query-indexing-enabled-help=Als u dit activeert, worden query's die de drempel halen geïndexeerd. Deze query's worden aan gebruikers voorgesteld als gerelateerde query's of als onderdeel van automatisch aangevulde voorstellen.
 query-indexing-threshold=Drempel voor query-indexering
 query-indexing-threshold-help=Als het aantal zoekresultaten de drempel haalt, wordt de query geïndexeerd en voorgesteld aan gebruikers met een vergelijkbare query.
@@ -4669,6 +4703,7 @@ remember-me=Onthoud mij
 reminder=Herinnering
 reminder-queries=Herinneringsvragen
 reminder-query-and-answer-cannot-be-empty=De vraag en het antwoord van de herinnering kunnen niet leeg zijn.
+reminder-query-question=Query herinneringsvraag (Automatic Translation)
 remote-host-ip=Remote host/IP
 remote-live=Externe productieomgeving
 remote-live-connection-settings=Instellingen voor externe productieomgeving
@@ -4714,6 +4749,7 @@ reply=Beantwoorden
 reply-all=Allen beantwoorden
 reply-as=Beantwoorden als
 reply-as-anonymous=Anoniem beantwoorden
+reply-body=Antwoord lichaam (Automatic Translation)
 reply-comments=Reacties beantwoorden
 reply-date=Antwoorddatum
 reply-membership-request-for-x=Verzoek om lidmaatschap van {0} beantwoorden
@@ -4816,6 +4852,9 @@ rich=Rijk
 rich-text-format=Rich Text Format
 ridge=Rand
 right=Rechts
+right-border-unit=Rechterrand eenheid (Automatic Translation)
+right-margin-unit=Rechtermarge eenheid (Automatic Translation)
+right-padding-unit=Opvulling rechts eenheid (Automatic Translation)
 robots=Robots
 role=Rol
 role-name=Rolnaam
@@ -4886,12 +4925,14 @@ script-file=Scriptbestand
 search=Zoeken
 search-all-organizations=Alle organisaties doorzoeken
 search-all-users=Alle gebruikers doorzoeken
+search-application=Zoektoepassing (Automatic Translation)
 search-applications-searches-as-you-type=Toepassingen zoeken (terwijl u typt).
 search-bookmarks=Bladwijzers zoeken
 search-by-id-or-url=Op ID of URL zoeken
 search-categories=Categorieën zoeken
 search-configuration=Zoekconfiguratie
 search-configuration-help=Via dit veld kunt u geavanceerde zoekconfiguratieinstellingen in JSON-formaat toepassen.
+search-content=Zoeken in de inhoud (Automatic Translation)
 search-coupons=Kortingsbonnen zoeken
 search-custom-range-date-format=Voer een datum in met de volgende indeling: JJJJ-MM-DD
 search-custom-range-invalid-date-range=Selecteer een geldig datumbereik.
@@ -4918,6 +4959,7 @@ search-operator=Zoekoperator
 search-orders=Bestellingen zoeken
 search-organizations=Organisaties zoeken
 search-pages=Pagina's zoeken
+search-panel=Deelvenster ' zoeken ' (Automatic Translation)
 search-password-policies=Wachtwoordbeleid zoeken
 search-plugins=Plug-ins zoeken
 search-products=Producten zoeken
@@ -4966,6 +5008,7 @@ select-a-page=Selecteer een pagina
 select-a-site=Selecteer een site
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Een structuur selecteren om de webcontentlijst op te filteren.
 select-a-type=Selecteer een type
+select-all=Selecteer alle (Automatic Translation)
 select-an-action-type=Selecteer een actietype
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Selecteer een bestaande lijst of voeg een lijst toe om in deze portlet weer te geven.
 select-and-copy=Selecteren en kopiëren
@@ -4997,6 +5040,7 @@ select-parent-site=Bovenliggende site selecteren
 select-portlet=Portlet selecteren
 select-question=Vraag selecteren
 select-recipients=Ontvangers selecteren
+select-search=Selecteer zoeken (Automatic Translation)
 select-site=Site selecteren
 select-tags=Labels selecteren
 select-the-action-that-this-role-can-perform-on-the-x-portlet=De actie selecteren die deze rol mag uitvoeren op de <em>{0}</em> portlet.
@@ -5078,6 +5122,7 @@ servers=Servers
 service=Service
 service-account=Serviceaccount
 service-password=Wachtwoord voor serviceaccount
+service-search=Service zoeken (Automatic Translation)
 service-url=Service-URL
 service-url-for-opensso-help=Deze URL geeft toegang tot OpenSSO om gebruik te maken van de authenticatie web services. Als u OpenSSO 8 of hoger gebruikt, dan moet de server op Java 6 draaien.
 services=Services
@@ -5287,15 +5332,19 @@ sku=Artikelnummer
 skus=Artikelnummers
 skype=Skype
 skyscraper=Skyscraper (banner)
+slide-show=Diavoorstelling (Automatic Translation)
 slovak=Slowaaks
 small=Klein
+small-file=Klein bestand (Automatic Translation)
 small-image=Kleine afbeelding
+small-image-file=Kleine afbeeldingsbestand (Automatic Translation)
 small-image-url=Kleine afbeelding-URL
 small-rectangle=Kleine rechthoek
 small-square=Klein vierkant
 smartphone=Smartphone
 sms=sms
 sms-messenger-id=SMS Messenger-ID
+sms-sn=SMS schermnaam (Automatic Translation)
 social-activity-limit-type-times=keer
 social-activity-limit-type-times-a-day=keer per dag
 social-activity-limit-type-times-per-period=keer per periode
@@ -6197,8 +6246,11 @@ tomorrow=Morgen
 ton=Ton
 tools=Tools
 top=Bovenkant
+top-border-unit=Bovenrand eenheid (Automatic Translation)
 top-level=Hoogste niveau
 top-level-organizations=Organisaties van het hoogste niveau
+top-margin-unit=Bovenmarge eenheid (Automatic Translation)
+top-padding-unit=Top Padding eenheid (Automatic Translation)
 top-posters=Topinzenders
 top-users-out-of-x=Topgebruikers van de {0}.
 topic=Onderwerp
@@ -6693,6 +6745,7 @@ with-scope=met werkingsgebied
 withdraw-submission=Inzending intrekken
 within=Binnen
 within-x=Binnen {0}
+word=Word (Automatic Translation)
 word-search=Woord zoeken
 word-spacing=Afstand tussen woorden
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV:
 yard=Yard
 year=Jaar
 year-abbreviation=jr
+year-position=Jaar positie (Automatic Translation)
 year-s=ja(a)r(en)
 year-to-date=Huidig jaar
 yearly=Jaarlijks
