--- a/portal-impl/src/content/Language_nl_BE.properties
+++ b/portal-impl/src/content/Language_nl_BE.properties
@@ -888,6 +888,7 @@ always=Altijd
 always-use-my-user-id=Gebruik altijd mijn ID.
 am=AM (Automatic Translation)
 am-pm=AM/PM (Automatic Translation)
+amazon-rankings=Amazon Rankings (Automatic Translation)
 americas=Amerika
 amount=Bedrag
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Er bestaat al een account met e-mailadres {0} in de portal. Wilt u deze activiteit aan die account koppelen?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Er trad een onverwachte aanmeldfout op.
 an-unexpected-system-error-occurred=Er trad een onverwachte systeemfout op.
 analytics=Statistieken
 and=en
+and-operator=And, Operator (Automatic Translation)
+and-or-operator=En/of beheerder (Automatic Translation)
 and-then-by=en dan door
 and-x-more=en {0} meer.
 anniversary=Verjaardag
@@ -1308,6 +1311,9 @@ border-styles=border-styles
 border-styling=border-styling
 border-width=border-width
 bottom=bottom
+bottom-border-unit=Onderste grens eenheid (Automatic Translation)
+bottom-margin-unit=Onderste marge eenheid (Automatic Translation)
+bottom-padding-unit=Onder Opvulling eenheid (Automatic Translation)
 branch=Tak
 branches=Takken
 breadcrumb=Breadcrumbs
@@ -1372,6 +1378,7 @@ cas-server-name-help=Stel dit in om deep linking naar het portaal mogelijk te ma
 cas-server-url-help=CAS server domain URL instellen.
 cas-service-url-help=Stel dit in om deep linking naar het portaal mogelijk te maken (bijv. http://localhost:8080/c/portal/login). Stel dit niet in als de CAS server name is ingesteld.
 categories=Categorieën
+categories-admin-select-search=Rubrieken door Admin Selecteer te zoeken (Automatic Translation)
 categories-and-messages=Categorieën en berichten
 categories[message-board]=Categorieën
 categorization=Categorisatie
@@ -1383,6 +1390,8 @@ category-services=Categorie Services (Automatic Translation)
 category-sets=Reeksen
 category[message-board]=Categorie
 cc=CC (Automatic Translation)
+cc-exp-month=CC vervaldatum maand (Automatic Translation)
+cc-exp-year=CC vervaldatum jaar (Automatic Translation)
 cc_amex=American Express (Automatic Translation)
 cc_discover=Ontdek (Automatic Translation)
 cc_mastercard=MasterCard (Automatic Translation)
@@ -1428,6 +1437,7 @@ chapter=Hoofdstuk
 chapters=Hoofdstukken
 characters-maximum=Maximum aantal karakters
 chart=Grafiek
+chart-type=Grafiektype (Automatic Translation)
 chart-width=Grafiekbreedte
 charts=Grafieken
 chat=Grafiek
@@ -1745,6 +1755,7 @@ custom-message=Aangepast bericht
 custom-portlet-xml=Aangepaste portlet.xml
 custom-question=Aangepaste vraag
 custom-range=Specifieke reikwijdte
+custom-title=Aangepaste titel (Automatic Translation)
 custom-user-attributes=Aangepaste attributen
 custom-user-attributes-help=Als u extra gebruikerskenmerken specificeert, wordt er content opgehaald die hetzelfde is gecategoriseerd. De categorieën moeten afkomstig zijn uit de globale context.
 custom.field.boolean=Waar/Onwaar
@@ -1986,6 +1997,7 @@ disk=Schijf
 dismiss=Negeren
 display=Weergave
 display-a-datepicker=Datumkiezen tonen
+display-activity-counter-name=Weergavenaam activiteit teller (Automatic Translation)
 display-additional-activity-counters=Extra activiteiten-tellers weergeven
 display-as-tooltip=Tooltip tonen
 display-asset-categories-facet=Contentcategoriefacet weergeven
@@ -2480,7 +2492,9 @@ finished=Afronden
 firm-name=Bedrijfsnaam
 firms=Bedrijven
 first=Eerste
+first-day-of-week=Eerste dag van de Week (Automatic Translation)
 first-message=Eerste bericht
+first-month-of-year=Eerste maand van het jaar (Automatic Translation)
 first-name=Voornaam
 first-name-attribute=Voornaam eigenschappen
 first-thread=Eerste thread
@@ -2995,6 +3009,7 @@ language-to=Taal naar
 language-type=Taal type
 languages=Talen
 large=Groter
+large-file=Groot bestand (Automatic Translation)
 large-image=Grote afbeelding
 large-image-url=Grote afbeelding URL
 large-rectangle=Grote rechthoek
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 kolommen (70/30) (Automatic Translation)
 layout-template-3-2-3-columns=3-2-3 kolommen (Automatic Translation)
 layout-template-3-columns=3 kolommen (Automatic Translation)
 layout-template-freeform=Vrije vorm (Automatic Translation)
+layout-template-id=Lay-out sjabloon ID (Automatic Translation)
 layout-template-plugin=Layout template
 layout-template-plugins=Layout templates
 layout-templates=Layout templates
@@ -3087,6 +3103,9 @@ leave-site=Site verlaten
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Laat dit veld leeg wanneer de kortingsbon niet het artikelnummer controleerd.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Laat dit veld leeg wanneer de kortingsbon niet de oudercategorieën van een item controleerd.
 left=Koppelingen
+left-border-unit=Linkerrand eenheid (Automatic Translation)
+left-margin-unit=Linkermarge eenheid (Automatic Translation)
+left-padding-unit=Linker opvulling eenheid (Automatic Translation)
 legal-id=KVK-nummer
 legal-name=Bedrijfsnaam
 legal-type=Bedrijfsvorm
@@ -3161,6 +3180,7 @@ lockout-duration-help=Dit bepaalt de tijdsduur dat het account van een gebruiker
 lockout-enabled=Uitsluiting ingesteld
 lockout-enabled-help=Indien geselecteerd, kan een gebruiker een login een bepaald aantal keren proberen alvorens hun account wordt geblokkeerd.
 log-levels=Logboekniveaus
+logger-name=Naam logboekregistratiesessie (Automatic Translation)
 login=Aanmelden
 login-through-facebook=Inloggen via Facebook
 login-url=Aanmeld URL
@@ -3280,6 +3300,7 @@ maybe-attending=Misschien aanwezig
 me=Ik
 media-files-must-be-one-of-the-following-formats=Mediabestanden moeten van een van de volgende typen zijn:
 medium=Middel
+medium-file=Middellange bestand (Automatic Translation)
 medium-image=Middelgrote afbeelding
 medium-image-url=Middelgrote afbeelding URL
 medium-rectangle=Middelgrote rechthoek
@@ -3296,6 +3317,8 @@ membership-type-private-help=Gebruikers kunnen niet om lidmaatschap verzoeken. A
 membership-type-restricted-help=Gebruikers kunnen om lidmaatschap verzoeken. Een sitebeheerder moet het verzoek goedkeuren.
 memberships=Lidmaatschap
 memory=Geheugen
+memory-used-vs-max-memory=Geheugen gebruikt vs. Max geheugen (Automatic Translation)
+memory-used-vs-total-memory=Geheugen gebruikt vs. totaalgeheugen (Automatic Translation)
 menu=Menu (Automatic Translation)
 merge=Samenvoegen
 merge-data=Gegevens samenvoegen
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Samenvoegen met de {0} openbare gastpagina’s
 merged-from-x-x=(samengevoegd van {0}, {1})
 message=Bericht
 message-added-email=E-mail: “Bericht toegevoegd”
+message-attachment=Mailbijlage (Automatic Translation)
 message-board-messages=Bericht
 message-boards-home=Startpagina forum
 message-boards-message-anonymous-help=Indien geselecteerd, zal dit bericht anoniem worden gepost.
@@ -3543,6 +3567,7 @@ monday-abbreviation=ma
 monitoring=Monitor
 month=Maand
 month-abbreviation=m (Automatic Translation)
+month-position=Maand positie (Automatic Translation)
 month-s=Maand(en)
 monthly=Maandelijks
 monthly-payment=Maandelijkse betaling
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Meer rijen onderaan.
 more-x-results=Meer {0} resultaten
 move=Verplaatsen
 move-column=Verplaats kolom
+move-down=Omlaag (Automatic Translation)
 move-files=Bestanden verwijderen
 move-page=Verplaats pagina
 move-selected-item-in-x-one-position-down=Het geselecteerd item verplaatsen in {0} een positie lager.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=De geselecteerd items verplaatsen van {0} naar {
 move-thread=Thread verplaatsen
 move-to=Verplaatsen naar
 move-to-the-recycle-bin=Naar de prullenbak verplaatsen
+move-up=Omhoog (Automatic Translation)
 move-web-content=Web Content voetnoot
 move-x={0} verplaatsen
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Nooit beoordelen
 new=Nieuw
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=Weergavesjabloon voor toepassing toevoegen
+new-article-id=Nieuwe artikel-ID (Automatic Translation)
 new-blog-entry=Nieuwe blog
 new-bookmark=Nieuwe bookmark
 new-category=Nieuwe categorie
@@ -4059,6 +4087,7 @@ pause=Pauze
 payer-email-address=E-mailadres van de betaler
 payment-gross=Bruto betaling
 payment-settings=Betalingseigenschappen
+paypal=PayPal (Automatic Translation)
 paypal-email-address=PayPal e-mailadres
 paypal-order=PayPal order
 pending=Lopende
@@ -4389,6 +4418,7 @@ pop-up=Pop-up
 port=Poort
 portal=Portaal
 portal-data=Portaalgegevens
+portal-ext=Portaal EXT (Automatic Translation)
 portal-instance=Instanties
 portal-instance-help=-Object dat het huidige portal exemplaar vertegenwoordigt. (Automatic Translation)
 portal-instance-id=Portal exemplaar-id (Automatic Translation)
@@ -4473,6 +4503,9 @@ principal=Belangrijkste
 print=Afdrukken
 print-x-x=Druk <span class="{0}">{1}</span> af
 priority=Prioriteit
+priority-image=Prioriteit afbeelding (Automatic Translation)
+priority-name=Prioriteit naam (Automatic Translation)
+priority-value=Prioriteitswaarde (Automatic Translation)
 private=Privaat
 private-node=Private node
 private-nodes=Private nodes
@@ -4552,6 +4585,7 @@ purchase-order=Order
 px=PX (Automatic Translation)
 quantity=Hoeveelheid
 query=Query (Automatic Translation)
+query-contains=Query bevat (Automatic Translation)
 query-indexing-enabled-help=Als dit selectievakje is ingeschakeld, worden de query's die voldoen aan de drempel geïndexeerd en voorgesteld om gebruikers als verwante query's of als onderdeel van de voorstellen van AutoAanvullen. (Automatic Translation)
 query-indexing-threshold=Query indexeren drempel (Automatic Translation)
 query-indexing-threshold-help=Als het aantal zoekresultaten voldoet aan deze drempel, is de query geïndexeerd en stelde aan gebruikers die zoeken met soortgelijke queries. (Automatic Translation)
@@ -4669,6 +4703,7 @@ remember-me=Onthoud mij
 reminder=Herinnering
 reminder-queries=Herinnering
 reminder-query-and-answer-cannot-be-empty=De vraag en het antwoord van de herinnering kunnen niet leeg zijn.
+reminder-query-question=Query herinneringsvraag (Automatic Translation)
 remote-host-ip=Externe host/IP
 remote-live=Externe production environment
 remote-live-connection-settings=Instellingen van de externe production environment
@@ -4714,6 +4749,7 @@ reply=Beantwoorden
 reply-all=Beantwoord allen
 reply-as=Beantwoorden als…
 reply-as-anonymous=Anoniem beantwoorden
+reply-body=Antwoord lichaam (Automatic Translation)
 reply-comments=Opmerking beantwoorden
 reply-date=Antwoorddatum
 reply-membership-request-for-x=Beantwoord lidmaatschapverzoek voor {0}
@@ -4816,6 +4852,9 @@ rich=Rijk
 rich-text-format=Rich Text Formaat
 ridge=Rand
 right=Rechts
+right-border-unit=Rechterrand eenheid (Automatic Translation)
+right-margin-unit=Rechtermarge eenheid (Automatic Translation)
+right-padding-unit=Opvulling rechts eenheid (Automatic Translation)
 robots=Robots (Automatic Translation)
 role=Rol
 role-name=Rolnaam
@@ -4886,12 +4925,14 @@ script-file=Scriptbestand (Automatic Translation)
 search=Zoeken
 search-all-organizations=Organisaties zoeken
 search-all-users=Gebruikers zoeken
+search-application=Zoektoepassing (Automatic Translation)
 search-applications-searches-as-you-type=Toepassingen zoeken
 search-bookmarks=Bookmarks zoeken
 search-by-id-or-url=Op ID of URL zoeken
 search-categories=Categorieën zoeken
 search-configuration=Standaard configuratie
 search-configuration-help=Via dit veld kunt u geavanceerde zoekconfiguratieinstellingen in JSON-formaat toepassen.
+search-content=Zoeken in de inhoud (Automatic Translation)
 search-coupons=Coupons zoeken
 search-custom-range-date-format=Voer een datum in de volgende notatie: JJJJ-MM-DD (Automatic Translation)
 search-custom-range-invalid-date-range=Selecteer een geldig type.
@@ -4918,6 +4959,7 @@ search-operator=Operator zoeken
 search-orders=Bestellingen zoeken
 search-organizations=Organisaties zoeken
 search-pages=Pagina’s zoeken
+search-panel=Deelvenster ' zoeken ' (Automatic Translation)
 search-password-policies=Wachtwoordbeleid zoeken
 search-plugins=Plugins zoeken
 search-products=Producten zoeken
@@ -4966,6 +5008,7 @@ select-a-page=Geselecteerde pagina
 select-a-site=Geselecteerde pagina
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Selecteer een structuur om de Web Content lijst te filteren.
 select-a-type=Geselecteerde pagina
+select-all=Selecteer alle (Automatic Translation)
 select-an-action-type=Selecteer een actietype
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Selecteer een bestaande lijst of voeg een lijst toe om in deze portlet weer te geven.
 select-and-copy=Selecteer en kopieer
@@ -4997,6 +5040,7 @@ select-parent-site=Selecteer de bovenliggende Site (Automatic Translation)
 select-portlet=Selecteer portlet
 select-question=Vraag selecteren
 select-recipients=Selecteer ontvangers
+select-search=Selecteer zoeken (Automatic Translation)
 select-site=Geselecteerde pagina
 select-tags=Selecteer tags
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Selecteer een actie die deze rol op de <em>{0}</em> portlet mag uitvoeren.
@@ -5078,6 +5122,7 @@ servers=Servers (Automatic Translation)
 service=Service (Automatic Translation)
 service-account=Serviceaccount
 service-password=Serviceaccount wachtwoord
+service-search=Service zoeken (Automatic Translation)
 service-url=Service-URL
 service-url-for-opensso-help=Deze URL geeft toegang tot OpenSSO om gebruik te maken van de authenticatie web services. Als u OpenSSO 8 of hoger gebruikt, dan moet de server op Java 6 draaien.
 services=Diensten (Automatic Translation)
@@ -5287,15 +5332,19 @@ sku=Artikelnummer
 skus=Artikelnummers
 skype=Skype (Automatic Translation)
 skyscraper=Skyscraper (banner)
+slide-show=Diavoorstelling (Automatic Translation)
 slovak=Slowaak
 small=Klein
+small-file=Klein bestand (Automatic Translation)
 small-image=Kleine afbeelding
+small-image-file=Kleine afbeeldingsbestand (Automatic Translation)
 small-image-url=Kleine afbeelding URL
 small-rectangle=Kleine rechthoek
 small-square=Klein vierkant
 smartphone=Smartphone (Automatic Translation)
 sms=sms
 sms-messenger-id=SMS Messenger-ID
+sms-sn=SMS schermnaam (Automatic Translation)
 social-activity-limit-type-times=keer
 social-activity-limit-type-times-a-day=keer per dag
 social-activity-limit-type-times-per-period=keer per periode
@@ -6197,8 +6246,11 @@ tomorrow=Morgen
 ton=Ton (Automatic Translation)
 tools=tools
 top=Bovenkant
+top-border-unit=Bovenrand eenheid (Automatic Translation)
 top-level=Hoogste niveau (Automatic Translation)
 top-level-organizations=Organisaties van het hoogste niveau
+top-margin-unit=Bovenmarge eenheid (Automatic Translation)
+top-padding-unit=Top Padding eenheid (Automatic Translation)
 top-posters=Top inzenders
 top-users-out-of-x=Top gebruikers van de {0}.
 topic=Onderwerp
@@ -6693,6 +6745,7 @@ with-scope=met werkingsgebied
 withdraw-submission=Inzending intrekken
 within=Binnen
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Translation)
 word-search=Zoek woord
 word-spacing=Woordruimte
 wordpress=WordPress (Automatic Translation)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV
 yard=Werf (Automatic Translation)
 year=Jaar
 year-abbreviation=jr
+year-position=Jaar positie (Automatic Translation)
 year-s=ja(a)r(en)
 year-to-date=Huidige jaar
 yearly=Jaarlijks
