--- a/portal-impl/src/content/Language_pl.properties
+++ b/portal-impl/src/content/Language_pl.properties
@@ -888,6 +888,7 @@ always=Zawsze
 always-use-my-user-id=Zawsze używaj mojego identyfikatora użytkownika.
 am=AM (Automatic Copy)
 am-pm=AM/PM (Automatic Copy)
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Ameryki
 amount=Ilość
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Konto z {0} jako adresem email już istnieje w portalu. Czy chcesz przyporządkować to działanie do tego konta?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Wystąpił nieoczekiwany błąd podczas log
 an-unexpected-system-error-occurred=Wystąpił nieoczekiwany błąd systemu.
 analytics=Analityka
 and=I
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=Następnie po
 and-x-more=i {0} więcej.
 anniversary=Rocznica
@@ -1308,6 +1311,9 @@ border-styles=Style ramki
 border-styling=Stylizowanie ramki
 border-width=Szerokość ramki
 bottom=Dół
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Branch
 branches=Branche
 breadcrumb=Okruszek chleba
@@ -1372,6 +1378,7 @@ cas-server-name-help=Ustaw to aby włączyć głębokie linkowanie do portalu (n
 cas-server-url-help=Ustaw URL domeny serwera CAS.
 cas-service-url-help=Ustaw to aby wyłączyć głębokie linkowanie do portalu (np.: http://localhost:8080). Nie ustawiaj tej opcji jeśli został ustawiony URL do usługi CAS.
 categories=Kategorie
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategorie i wiadomości
 categories[message-board]=Kategorie
 categorization=Kategoryzacja
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Zestawy kategorii
 category[message-board]=Kategoria
 cc=Kopia
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express (Automatic Copy)
 cc_discover=Wykryj
 cc_mastercard=MasterCard (Automatic Copy)
@@ -1428,6 +1437,7 @@ chapter=Rozdział
 chapters=Rozdziały
 characters-maximum=Maksymalna ilość znaków
 chart=Wykres
+chart-type=Chart Type (Automatic Copy)
 chart-width=Chart Width (Automatic Copy)
 charts=Wykresy
 chat=Czat
@@ -1745,6 +1755,7 @@ custom-message=Niestandardowa wiadomość
 custom-portlet-xml=Niestandardowy portlet.xml
 custom-question=Niestandardowe pytanie
 custom-range=Custom Range (Automatic Copy)
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Niestandardowe właściwości
 custom-user-attributes-help=Specifying the custom user attributes will retrieve assets that have matching categorization. Categories must be from the global context. (Automatic Copy)
 custom.field.boolean=Prawda/Fałsz
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Pomiń
 display=Wyświetl
 display-a-datepicker=Wyświetl wybieracz dat
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Display Additional Activity Counters (Automatic Copy)
 display-as-tooltip=Wyświetl jako tooltip
 display-asset-categories-facet=Display Asset Categories Facet (Automatic Copy)
@@ -2480,7 +2492,9 @@ finished=Zakończone
 firm-name=Nazwa firmy
 firms=Firmy
 first=Pierwszy
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Pierwsza wiadomość
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Imię
 first-name-attribute=Atrybut imienia
 first-thread=Pierwszy wątek
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=Rodzaj języka
 languages=Języki
 large=Duży
+large-file=Large File (Automatic Copy)
 large-image=Duży obrazek
 large-image-url=URL dużego obrazka
 large-rectangle=Duży prostokąt
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Wtyczka szablony układu
 layout-template-plugins=Wtyczki szablonu układów
 layout-templates=Szablony układów
@@ -3087,6 +3103,9 @@ leave-site=Opuść witrynę
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Pozostaw puste jeśli kupon nie pasuje do SKU pozycji.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Pozostaw puste jeśli kupon nie pasuje do nadrzędnych kategorii pozycji.
 left=Lewy
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=ID
 legal-name=Nazwa prawna
 legal-type=Typ prawny
@@ -3161,6 +3180,7 @@ lockout-duration-help=Określa ilość czasu przez jaki konto użytkownika jest 
 lockout-enabled=Blokada włączona
 lockout-enabled-help=Jeśli zaznaczone, użytkownik może próbować się zalogować określoną ilość razy zanim jego konto zostanie zablokowane.
 log-levels=Poziomy logowania
+logger-name=Logger Name (Automatic Copy)
 login=Login (Automatic Copy)
 login-through-facebook=Loguj się przez Facebook
 login-url=URL logowania
@@ -3280,6 +3300,7 @@ maybe-attending=Być może uczestniczy
 me=Ja
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats: (Automatic Copy)
 medium=Średnie
+medium-file=Medium File (Automatic Copy)
 medium-image=Średniej wielkości obrazek
 medium-image-url=URL średniej wielkości obrazka
 medium-rectangle=Średni prostokąt
@@ -3296,6 +3317,8 @@ membership-type-private-help=Użytkownicy nie mogą wysyłać próśb o członko
 membership-type-restricted-help=Użytkownicy mogą wysyłać prośby o członkostwo. Prośby będą zatwierdzane przez administratorów witryny.
 memberships=Członkostwa
 memory=Pamięć
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Scal
 merge-data=Scal dane
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Scal {0} strony publiczne
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=Wiadomość
 message-added-email=Email z dołączoną wiadomością
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Wpis forum dyskusyjnego
 message-boards-home=Strona główna forum
 message-boards-message-anonymous-help=Jeśli to jest zaznaczone, to ta wiadomość będzie opublikowana anonimowo.
@@ -3543,6 +3567,7 @@ monday-abbreviation=Pn
 monitoring=Monitoring (Automatic Copy)
 month=Miesiąc
 month-abbreviation=m (Automatic Copy)
+month-position=Month Position (Automatic Copy)
 month-s=miesiąc(e)
 monthly=Miesięcznie
 monthly-payment=Płatności miesięczne
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Więcej wierszy na dole.
 more-x-results=Więcej {0} wyników
 move=Przenieś
 move-column=Przenieś kolumnę
+move-down=Move Down (Automatic Copy)
 move-files=Przenieś pliki
 move-page=Przenieś stronę
 move-selected-item-in-x-one-position-down=Przenieś zaznaczone pozycje w {0} o jedną pozycję niżej.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Przenieś zaznaczone pozycje z {0} do {1}.
 move-thread=Przenieś wątek
 move-to=Przenieś do
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Stopka zawartości strony
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Nigdy nie dawaj do przeglądu
 new=Nowy
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=New Application Display Template (Automatic Copy)
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Nowy wpis na blogu
 new-bookmark=Nowa zakładka
 new-category=Nowa kategoria
@@ -4059,6 +4087,7 @@ pause=Pauza
 payer-email-address=Adres email płatnika
 payment-gross=Płatność brutto
 payment-settings=Ustawienia płatności
+paypal=PayPal (Automatic Copy)
 paypal-email-address=Adres email PayPal
 paypal-order=Zamówienie PayPal
 pending=Oczekujące
@@ -4389,6 +4418,7 @@ pop-up=Pop Up (Automatic Copy)
 port=Zamieść
 portal=Portal (Automatic Copy)
 portal-data=Dane portalu
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Instancje portalu
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=DN administratora
 print=Drukuj
 print-x-x=Drukuj <span class="{0}">{1}</span>
 priority=Priorytet
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Prywatny
 private-node=Węzeł prywatny
 private-nodes=Węzły prywatne
@@ -4552,6 +4585,7 @@ purchase-order=Zamówienie
 px=px (Automatic Copy)
 quantity=Ilość
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Zapamiętaj mnie
 reminder=Przypominanie
 reminder-queries=Pytania przypominania
 reminder-query-and-answer-cannot-be-empty=Pytanie i odpowiedź przypominania nie może być pusta.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Zdalny Host/IP
 remote-live=Zdalna produkcja
 remote-live-connection-settings=Ustawienia połączenia zdalnego
@@ -4714,6 +4749,7 @@ reply=Odpowiedź
 reply-all=Odpowiedz wszystkim
 reply-as=Odpowiedz jako...
 reply-as-anonymous=Odpowiedz jako anonim
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Odpowiedz na komentarze
 reply-date=Data odpowiedzi
 reply-membership-request-for-x=Odpowiedz na prośbę o członkostwo w {0}.
@@ -4816,6 +4852,9 @@ rich=Wzbogacony
 rich-text-format=Wzbogacony format tekstowy (RTF)
 ridge=Krawędź
 right=Prawo
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Roboty
 role=Rola
 role-name=Nazwa roli
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Szukaj
 search-all-organizations=Szukaj organizacji
 search-all-users=Szukaj użytkowników
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Szukaj aplikacji (wyszukuje podczas pisania).
 search-bookmarks=Przeszukaj zakładki
 search-by-id-or-url=Szukaj po ID lub URL
 search-categories=Szukaj kategorii
 search-configuration=Domyślna konfiguracja
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string. (Automatic Copy)
+search-content=Search Content (Automatic Copy)
 search-coupons=Szukaj kuponów
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Wybierz prawidłowy typ.
@@ -4918,6 +4959,7 @@ search-operator=Operator wyszukiwania
 search-orders=Szukaj zamówień
 search-organizations=Szukaj organizacji
 search-pages=Szukaj stron
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Szukaj polityk haseł
 search-plugins=Szukaj wtyczek
 search-products=Szukaj produktów
@@ -4966,6 +5008,7 @@ select-a-page=Wybrana strona
 select-a-site=Wybrana strona
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Wybierz strukturę do filtrowania listy zawartości stron po strukturze.
 select-a-type=Wybrana strona
+select-all=Select All (Automatic Copy)
 select-an-action-type=Select an Action Type (Automatic Copy)
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Wybierz istniejącą listę bądź dodaj listę która ma być wyświetlona w tym portlecie.
 select-and-copy=Zaznacz i skopiuj
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Wybierz portlet
 select-question=Select Question (Automatic Copy)
 select-recipients=Wybierz odbiorców
+select-search=Select Search (Automatic Copy)
 select-site=Wybrana strona
 select-tags=Wybierz tagi
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Wybierz działanie, które ta rola może wykonywać na portlecie <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Serwery
 service=Usługa
 service-account=Konto usługi
 service-password=Hasło usługi
+service-search=Service Search (Automatic Copy)
 service-url=URL usługi
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Usługi
@@ -5287,15 +5332,19 @@ sku=SKU (Automatic Copy)
 skus=SKUs (Automatic Copy)
 skype=Skype (Automatic Copy)
 skyscraper=Skyscraper (Automatic Copy)
+slide-show=Slide Show (Automatic Copy)
 slovak=Słowacki
 small=Małe
+small-file=Small File (Automatic Copy)
 small-image=Miniaturka
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL miniaturki
 small-rectangle=Mały prostokąt
 small-square=Mały kwadrat
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=ID komunikatora SMS
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=Jutro
 ton=Tona
 tools=Narzędzia
 top=Najpopularniejsze
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level Organizations (Automatic Copy)
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Najpopularniejsi autorzy
 top-users-out-of-x=Najpopularniejsi użytkownicy z {0}.
 topic=Temat
@@ -6693,6 +6745,7 @@ with-scope=o zakresie
 withdraw-submission=Wycofaj zgłoszenie
 within=W ramach
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Szukaj słowa
 word-spacing=Odstępy między słowami
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV: (Automatic Copy)
 yard=Jard
 year=Rok
 year-abbreviation=r.
+year-position=Year Position (Automatic Copy)
 year-s=lata
 year-to-date=Narastająco od początku roku
 yearly=Rocznie
