--- a/portal-impl/src/content/Language_pt_BR.properties
+++ b/portal-impl/src/content/Language_pt_BR.properties
@@ -888,6 +888,7 @@ always=Sempre
 always-use-my-user-id=Sempre usar meu ID de usuário.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Rankings da Amazon (Automatic Translation)
 americas=Américas
 amount=Quantia
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Uma conta com {0} como o endereço de email já existe no portal. Você deseja associar esta atividade com essa conta?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Um inesperado erro ocorreu na autenticaçã
 an-unexpected-system-error-occurred=Um inesperado erro ocorreu no sistema.
 analytics=Estatísticas
 and=e
+and-operator=E operador (Automatic Translation)
+and-or-operator=E/ou operador (Automatic Translation)
 and-then-by=E então por
 and-x-more=e {0} mais.
 anniversary=Aniversário
@@ -1308,6 +1311,9 @@ border-styles=Estilos da borda
 border-styling=Estilo da borda
 border-width=Comprimento da borda
 bottom=Rodapé
+bottom-border-unit=Unidade de fronteira inferior (Automatic Translation)
+bottom-margin-unit=Unidade de margem inferior (Automatic Translation)
+bottom-padding-unit=Unidade de preenchimento de fundo (Automatic Translation)
 branch=Branch
 branches=Branches
 breadcrumb=Breadcrumb
@@ -1372,6 +1378,7 @@ cas-server-name-help=Selecione este item para habilitar "deep linking" no portal
 cas-server-url-help=Configure a URL do domínio do servidor CAS.
 cas-service-url-help=Selecione este item para habilitar "deep linking" no portal (por exemplo, http://localhost:8080). Não habilite caso o nome do servidor CAS esteja preenchido.
 categories=Categorias
+categories-admin-select-search=Busca de categorias selecione Admin (Automatic Translation)
 categories-and-messages=Categorias e mensagens
 categories[message-board]=Categorias
 categorization=Categorização
@@ -1383,6 +1390,8 @@ category-services=Category Services
 category-sets=Conjuntos de categoria
 category[message-board]=Categoria
 cc=CC
+cc-exp-month=Mês de expiração de CC (Automatic Translation)
+cc-exp-year=Ano de expiração de CC (Automatic Translation)
 cc_amex=Amex
 cc_discover=Discover
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Capítulo
 chapters=Capítulos
 characters-maximum=Máximo de caracteres
 chart=Gráfico
+chart-type=Tipo de gráfico (Automatic Translation)
 chart-width=Largura do gráfico
 charts=Gráficos
 chat=Bate papo
@@ -1745,6 +1755,7 @@ custom-message=Mensagem customizada
 custom-portlet-xml=Portlet.xml customizado
 custom-question=Pergunta personalizada
 custom-range=Período personalizado
+custom-title=Título personalizado (Automatic Translation)
 custom-user-attributes=Atributos personalizados do usuário
 custom-user-attributes-help=Especificando os atributos personalizados do usuário recuperará conteúdos que têm categorização correspondente. Categorias deve ser originárias do contexto global.
 custom.field.boolean=Verdadeiro/Falso
@@ -1986,6 +1997,7 @@ disk=Disco
 dismiss=Demitir
 display=Exibir
 display-a-datepicker=Exiba um Datepicker
+display-activity-counter-name=Nome de contador exibir atividade (Automatic Translation)
 display-additional-activity-counters=Exibir contadores de atividade adicionais
 display-as-tooltip=Exibir como Tooltip
 display-asset-categories-facet=Exibir aspecto de categorias do conteúdo
@@ -2480,7 +2492,9 @@ finished=Finalizado
 firm-name=Nome da firma
 firms=Firmas
 first=Primeiro
+first-day-of-week=Primeiro dia da semana (Automatic Translation)
 first-message=Primeira mensagem
+first-month-of-year=Primeiro mês do ano (Automatic Translation)
 first-name=Primeiro nome
 first-name-attribute=Atributo primeiro nome
 first-thread=Primeiro tópico
@@ -2995,6 +3009,7 @@ language-to=Idioma para
 language-type=Tipo de linguagem
 languages=Idiomas
 large=Grande
+large-file=Arquivo grande (Automatic Translation)
 large-image=Imagem grande
 large-image-url=URL da imagem grande
 large-rectangle=Retângulo grande
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 colunas (70/30) (Automatic Translation)
 layout-template-3-2-3-columns=3-2-3 colunas (Automatic Translation)
 layout-template-3-columns=3 colunas (Automatic Translation)
 layout-template-freeform=Forma livre (Automatic Translation)
+layout-template-id=Identidade do modelo de layout (Automatic Translation)
 layout-template-plugin=Plugin de modelo de Layout
 layout-template-plugins=Plugins de modelo de Layout
 layout-templates=Modelos de layout
@@ -3087,6 +3103,9 @@ leave-site=Deixar o site
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Deixe em branco se o cupom não habilita para o item SKU.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Deixe em branco se o cupom não habilita para categorias pai de um item.
 left=Esquerda
+left-border-unit=Unidade de borda esquerda (Automatic Translation)
+left-margin-unit=Unidade de margem esquerda (Automatic Translation)
+left-padding-unit=Unidade de preenchimento à esquerda (Automatic Translation)
 legal-id=ID oficial
 legal-name=Nome oficial
 legal-type=Tipo oficial
@@ -3161,6 +3180,7 @@ lockout-duration-help=Esse valor determina o tempo que uma conta de usuário per
 lockout-enabled=Desbloqueio habilitado
 lockout-enabled-help=Se habilitado, um usuário pode tentar fazer o login até um determinado número de vezes antes de sua conta ser bloqueada.
 log-levels=Níveis de Log
+logger-name=Nome do agente de log (Automatic Translation)
 login=Login
 login-through-facebook=Faça o login através do Facebook
 login-url=URL de login
@@ -3280,6 +3300,7 @@ maybe-attending=Talvez participando
 me=Eu
 media-files-must-be-one-of-the-following-formats=Os arquivos de mídia devem ser de um dos seguintes formatos:
 medium=Médio
+medium-file=Arquivo médio (Automatic Translation)
 medium-image=Imagem média
 medium-image-url=URL da imagem média
 medium-rectangle=Retângulo médio
@@ -3296,6 +3317,8 @@ membership-type-private-help=Usuários não estão autorizados a solicitar parti
 membership-type-restricted-help=Os usuários têm permissão para solicitar a participação. O pedido precisa ser aprovado pelos administradores do site.
 memberships=Membros
 memory=Memória
+memory-used-vs-max-memory=Memória usada vs Max memória (Automatic Translation)
+memory-used-vs-total-memory=Memória usada vs memória Total (Automatic Translation)
 menu=Menu
 merge=Fusão
 merge-data=Mesclar dados
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Mesclar {0} páginas públicas
 merged-from-x-x=(Mesclado de {0}, {1})
 message=Mensagem
 message-added-email=Email de adição de mensagem
+message-attachment=Anexo de mensagem (Automatic Translation)
 message-board-messages=Mensagens do fórum
 message-boards-home=Home do Fórum
 message-boards-message-anonymous-help=Se habilitado, esta mensagem será postada anonimamente.
@@ -3543,6 +3567,7 @@ monday-abbreviation=S
 monitoring=Monitoramento
 month=Mês
 month-abbreviation=M
+month-position=Posição do mês (Automatic Translation)
 month-s=Mês(es)
 monthly=Mensal
 monthly-payment=Pagamento mensal
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Mais linhas na parte inferior.
 more-x-results=Mais {0} resultados
 move=Mover
 move-column=Mover coluna
+move-down=Mover para baixo (Automatic Translation)
 move-files=Mover arquivos
 move-page=Mover página
 move-selected-item-in-x-one-position-down=Mova o item selecionado em {0} uma posição para baixo.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Mova os itens selecionados de {0} para {1}.
 move-thread=Mover tópico
 move-to=Mover para
 move-to-the-recycle-bin=Mover para a lixeira
+move-up=Mover para cima (Automatic Translation)
 move-web-content=Mover conteúdo web
 move-x=Mover {0}
 movie=Filme
@@ -3616,6 +3643,7 @@ never-review=Nunca revisar
 new=Novo
 new-action-for-x=Nova ação para {0}
 new-application-display-template=Novo Modelo de Exibição da Aplicação
+new-article-id=Novo artigo ID (Automatic Translation)
 new-blog-entry=Novo blog
 new-bookmark=Novo marcador
 new-category=Nova categoria
@@ -4059,6 +4087,7 @@ pause=Pausa
 payer-email-address=Endereço de email do pagante
 payment-gross=Pagamento bruto
 payment-settings=Configurações de pagamento
+paypal=PayPal (Automatic Translation)
 paypal-email-address=Endereço de email da conta PayPal
 paypal-order=Pedido do PayPal
 pending=Pendente
@@ -4389,6 +4418,7 @@ pop-up=Pop Up
 port=Porta
 portal=Portal
 portal-data=Dados do portal
+portal-ext=Portal EXT (Automatic Translation)
 portal-instance=Instancia do portal
 portal-instance-help=Objeto que representa a instância atual do portal.
 portal-instance-id=Identificador da instância do portal
@@ -4473,6 +4503,9 @@ principal=Principal
 print=Imprimir
 print-x-x=Imprimir <span class="{0}">{1}</span>
 priority=Prioridade
+priority-image=Imagem de prioridade (Automatic Translation)
+priority-name=Nome de prioridade (Automatic Translation)
+priority-value=Valor de prioridade (Automatic Translation)
 private=Privado
 private-node=Nó privado
 private-nodes=Nós privados
@@ -4552,6 +4585,7 @@ purchase-order=Ordem de compra
 px=px
 quantity=Quantidade
 query=Consulta (Automatic Translation)
+query-contains=Consulta contém (Automatic Translation)
 query-indexing-enabled-help=Se esta opção estiver marcada, as consultas que atendam o limite são indexadas e sugeridas aos usuários como consultas relacionadas ou como parte de sugestões de preenchimento automático.
 query-indexing-threshold=Limite de indexação da consulta
 query-indexing-threshold-help=Se o número de resultados de uma busca atingir o limite, a consulta é são indexada e sugerida aos usuários que estão buscando com consultas similares.
@@ -4669,6 +4703,7 @@ remember-me=Lembre de mim
 reminder=Lembrete
 reminder-queries=Perguntas do lembrete
 reminder-query-and-answer-cannot-be-empty=A pergunta e a resposta do lembrete não podem ser vazias.
+reminder-query-question=Pergunta de consulta de lembrete (Automatic Translation)
 remote-host-ip=IP do servidor remoto
 remote-live=Produção remota
 remote-live-connection-settings=Ajustes de conexão para produção remota
@@ -4714,6 +4749,7 @@ reply=Responder
 reply-all=Responder todos
 reply-as=Responda como...
 reply-as-anonymous=Responder como anônimo
+reply-body=Corpo da resposta (Automatic Translation)
 reply-comments=Responder comentários
 reply-date=Data da resposta
 reply-membership-request-for-x=Responder pedido de participação para {0}
@@ -4816,6 +4852,9 @@ rich=Completo
 rich-text-format=Formato de texto rico
 ridge=Cume
 right=Direita
+right-border-unit=Unidade da borda direita (Automatic Translation)
+right-margin-unit=Margem direita unidade (Automatic Translation)
+right-padding-unit=Unidade de enchimento direito (Automatic Translation)
 robots=Robôs
 role=Papel
 role-name=Nome do papel
@@ -4886,12 +4925,14 @@ script-file=Script
 search=Pesquisar
 search-all-organizations=Pesquisar em todas as organizações
 search-all-users=Pesquisar em todos os usuários
+search-application=Aplicativo de pesquisa (Automatic Translation)
 search-applications-searches-as-you-type=Aplicações de pesquisa (pesquisa enquanto você digita).
 search-bookmarks=Pesquisar bookmarks
 search-by-id-or-url=Pesquisar por ID ou URL
 search-categories=Pesquisar categorias
 search-configuration=Configuração da pesquisa
 search-configuration-help=Este campo é utilizado para aplicar configurações avançadas de pesquisa na forma de uma string JSON.
+search-content=Pesquisar conteúdo (Automatic Translation)
 search-coupons=Pesquisar cupons
 search-custom-range-date-format=Por favor, entre com a data no seguinte formato: YYYY-MM-DD
 search-custom-range-invalid-date-range=Por favor, selecione um intervalo válido entre as datas.
@@ -4918,6 +4959,7 @@ search-operator=Operador lógico de pesquisa
 search-orders=Pesquisar pedidos
 search-organizations=Pesquisar organizações
 search-pages=Pesquisar páginas
+search-panel=Painel de pesquisa (Automatic Translation)
 search-password-policies=Pesquisar políticas de senha
 search-plugins=Pesquisar plugins
 search-products=Pesquisar produtos
@@ -4966,6 +5008,7 @@ select-a-page=Selecionar página
 select-a-site=Selecione um site
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Selecionar uma estrutura para filtrar o conteúdo web pela estrutura.
 select-a-type=Selecione um tipo
+select-all=Selecionar tudo (Automatic Translation)
 select-an-action-type=Selecione um tipo de ação
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Selecione uma lista existente ou adicione uma lista para ser exibida neste portlet.
 select-and-copy=Selecionar e copiar
@@ -4997,6 +5040,7 @@ select-parent-site=Escolher site superior
 select-portlet=Selecionar portlet
 select-question=Selecionar pergunta
 select-recipients=Selecionar destinatários
+select-search=Selecione a pesquisa (Automatic Translation)
 select-site=Selecionar site
 select-tags=Selecionar tags
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Selecionar a ação que este papel está permitido a fazer no portlet <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Servidores
 service=Serviço
 service-account=Conta de serviço
 service-password=Senha de serviço
+service-search=Busca de serviço (Automatic Translation)
 service-url=URL de serviço
 service-url-for-opensso-help=Esta URL é onde o OpenSSO pode ser acessado para usar os serviços de autenticação. Se você estiver utilizando o OpenSSO Express 8 ou maior, você precisará ter um servidor rodando Java 6.
 services=Serviços
@@ -5287,15 +5332,19 @@ sku=SKU
 skus=SKUs
 skype=Skype
 skyscraper=Arranha-céus
+slide-show=Apresentação de slides (Automatic Translation)
 slovak=Eslovaco
 small=Pequeno
+small-file=Pequeno arquivo (Automatic Translation)
 small-image=Imagem pequena
+small-image-file=Arquivo de imagem pequeno (Automatic Translation)
 small-image-url=URL da imagem pequena
 small-rectangle=Retângulo pequeno
 small-square=Quadrado pequeno
 smartphone=Smartphone
 sms=SMS
 sms-messenger-id=ID do remetente SMS
+sms-sn=Nome de tela SMS (Automatic Translation)
 social-activity-limit-type-times=vezes
 social-activity-limit-type-times-a-day=vezes por dia
 social-activity-limit-type-times-per-period=vezes por o período
@@ -6197,8 +6246,11 @@ tomorrow=Amanhã
 ton=Tonelada
 tools=Ferramentas
 top=Topo
+top-border-unit=Borda superior unidade (Automatic Translation)
 top-level=Nível mais alto
 top-level-organizations=Organizações de primeiro nível
+top-margin-unit=Margem superior unidade (Automatic Translation)
+top-padding-unit=Top estofamento unidade (Automatic Translation)
 top-posters=Usuário mais ativos
 top-users-out-of-x=Usuários mais ativos de {0}.
 topic=Tópico
@@ -6693,6 +6745,7 @@ with-scope=Com escopo
 withdraw-submission=Suspenda a submissão
 within=Dentro
 within-x=Dentro de {0}
+word=Palavra (Automatic Translation)
 word-search=Busca da palavra
 word-spacing=Espaçamento de palavra
 wordpress=WordPress
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV:
 yard=Jarda
 year=Ano
 year-abbreviation=a
+year-position=Posição do ano (Automatic Translation)
 year-s=ano(s)
 year-to-date=Ano à data
 yearly=Anualmente
