--- a/portal-impl/src/content/Language_ro.properties
+++ b/portal-impl/src/content/Language_ro.properties
@@ -888,6 +888,7 @@ always=Mereu
 always-use-my-user-id=Mereu folosește Id-ul meu de utilizator.
 am=AM (Automatic Copy)
 am-pm=AM/PM (Automatic Copy)
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Americii
 amount=Sumă
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=An account with {0} as the email address already exists in the portal. Do you want to associate this activity with that account? (Automatic Copy)
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=O eroare neașteptată de semn a apărut.
 an-unexpected-system-error-occurred=O eroare neașteptată de sistem a apărut.
 analytics=Analytics (Automatic Copy)
 and=Și
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=Și după de
 and-x-more=and {0} more. (Automatic Copy)
 anniversary=Aniversare
@@ -1308,6 +1311,9 @@ border-styles=Stiluri Frontieră
 border-styling=Mod de Stilare Frontieră
 border-width=Latime Frontieră
 bottom=Fund
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Branch (Automatic Copy)
 branches=Branches (Automatic Copy)
 breadcrumb=Cale Site
@@ -1372,6 +1378,7 @@ cas-server-name-help=Set this to enable deep linking into the portal (e.g. http:
 cas-server-url-help=Set the CAS server domain URL. (Automatic Copy)
 cas-service-url-help=URL-ul de login a serverul Liferay. Setează doar dacă vrei să dezactivezi legătura cu modulul. (http://localhost:8080/c/portal/login) Nu seta dacă serverul de nume este setat.
 categories=Categorii
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Categorii și Mesaje
 categories[message-board]=Categorii
 categorization=Categorizare
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Seturi Categorie
 category[message-board]=Categorie
 cc=CC (Automatic Copy)
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express (Automatic Copy)
 cc_discover=Discover (Automatic Copy)
 cc_mastercard=MasterCard (Automatic Copy)
@@ -1428,6 +1437,7 @@ chapter=Capitol
 chapters=Capitole
 characters-maximum=Maximum de caractere
 chart=Diagramă
+chart-type=Chart Type (Automatic Copy)
 chart-width=Chart Width (Automatic Copy)
 charts=Diagrame
 chat=Diagramă
@@ -1745,6 +1755,7 @@ custom-message=Mesaje Editabile
 custom-portlet-xml=portlet.xml Editabil
 custom-question=Întrebare Editabila
 custom-range=Custom Range (Automatic Copy)
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Atribute Editabile
 custom-user-attributes-help=Specifying the custom user attributes will retrieve assets that have matching categorization. Categories must be from the global context. (Automatic Copy)
 custom.field.boolean=Adevarat/Fals
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Revoca
 display=Afișare
 display-a-datepicker=Afișeaza Selectorel de culori
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Display Additional Activity Counters (Automatic Copy)
 display-as-tooltip=Afișeaza ca Tooltip
 display-asset-categories-facet=Display Asset Categories Facet (Automatic Copy)
@@ -2480,7 +2492,9 @@ finished=Terminat
 firm-name=Nume Firmă
 firms=Companii
 first=Prima
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Primul Mesaj
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Prenume
 first-name-attribute=Atribute Prenume
 first-thread=Prima Discuţie
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=Tio Limba
 languages=Limbi
 large=Mai Mare
+large-file=Large File (Automatic Copy)
 large-image=Imagine Mare
 large-image-url=URL Imagine Mare
 large-rectangle=Dreptunghi Mare
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Plugin Sablon Afisare
 layout-template-plugins=Plugin-uri Sablonuri Afisare
 layout-templates=Sabloane Afisare
@@ -3087,6 +3103,9 @@ leave-site=Leave Site (Automatic Copy)
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Lasa acest spatiul gol daca cuponul nu vertifica pentru SKU.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Lasa acest spatiu gol daca cuponul nu verifica pentru cateria parinte a unui element.
 left=Stanga
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=ID Stanga
 legal-name=Nume Legal
 legal-type=Tip Legal
@@ -3161,6 +3180,7 @@ lockout-duration-help=Aceasta determina perioada de timp care un utilizator este
 lockout-enabled=Interdictie Activata
 lockout-enabled-help=Daca acesta este bifat, un utilizator poate incerca sa se conecteze de un anumit numar de ori inainte ca contul lor sa primeasca interdictie.
 log-levels=NiveleLog
+logger-name=Logger Name (Automatic Copy)
 login=Inregistrare
 login-through-facebook=Login through Facebook (Automatic Copy)
 login-url=URL Inregistrare
@@ -3280,6 +3300,7 @@ maybe-attending=Poate particip
 me=Eu
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats: (Automatic Copy)
 medium=Mediu
+medium-file=Medium File (Automatic Copy)
 medium-image=Imagine Medie
 medium-image-url=URL Imagine Medie
 medium-rectangle=Dreptunghi Mediu
@@ -3296,6 +3317,8 @@ membership-type-private-help=Users are not allowed to request membership. Only s
 membership-type-restricted-help=Users are allowed to request membership. The request will need to be approved by the site administrators. (Automatic Copy)
 memberships=Memberships (Automatic Copy)
 memory=Memorie
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Uneste
 merge-data=Uneste Datele
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Uneste {0} pagini publice
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=Mesaj
 message-added-email=Email de Mesaj Adaugat
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Mesaje Tabelă Mesaje
 message-boards-home=Pagina de Start Tabela Mesaje
 message-boards-message-anonymous-help=Daca acesta este bifat, atunci measjul va fi publicat ca anonim.
@@ -3543,6 +3567,7 @@ monday-abbreviation=L
 monitoring=Monitorizare
 month=Luna
 month-abbreviation=l
+month-position=Month Position (Automatic Copy)
 month-s=luna(i)
 monthly=Lunara
 monthly-payment=Plata Lunara
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=More rows at bottom. (Automatic Copy)
 more-x-results=Mai Multe {0} Rezultate
 move=Muta
 move-column=Muta Coloana
+move-down=Move Down (Automatic Copy)
 move-files=Sterge Fisiere
 move-page=Muta Pagina
 move-selected-item-in-x-one-position-down=Muta elementele selectate cu {0} pozitii mai jos.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Muta elementele selectate de la {0} la {1}.
 move-thread=Muta Discutia
 move-to=Muta la
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Conţinut Footer
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Niciodata sa nu Revizuiesti
 new=Nou
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=New Application Display Template (Automatic Copy)
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Intrare Noua in Blog
 new-bookmark=Marcaj Nou
 new-category=Categorie Noua
@@ -4059,6 +4087,7 @@ pause=Pauza
 payer-email-address=Adresa Email Jucator
 payment-gross=Plata Bruta
 payment-settings=Setari Plata
+paypal=PayPal (Automatic Copy)
 paypal-email-address=Adresa Email Paypal
 paypal-order=Comanda PayPal
 pending=In Asteptare
@@ -4389,6 +4418,7 @@ pop-up=Pop Up (Automatic Copy)
 port=Publica
 portal=Portal (Automatic Copy)
 portal-data=Date Portal
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Instanțele Portalului
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Principal (Automatic Copy)
 print=Printeaza
 print-x-x=Printeaza <span class="{0}">{1}</span>
 priority=Prioritate
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privat
 private-node=Nod Private
 private-nodes=Noduri Private
@@ -4552,6 +4585,7 @@ purchase-order=Comanda Achizitii
 px=px (Automatic Copy)
 quantity=Cantitate
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Tine-ma minte
 reminder=Atentionare
 reminder-queries=Tine Minte Interogarile
 reminder-query-and-answer-cannot-be-empty=Atentionare interogare si raspuns nu pot fi goale.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Gazda la Distanta/IP
 remote-live=Live la Distanta
 remote-live-connection-settings=Setari Conexiune Live la Distanta
@@ -4714,6 +4749,7 @@ reply=Raspunde
 reply-all=Raspunde la Toti
 reply-as=Reply as... (Automatic Copy)
 reply-as-anonymous=Respunde ca Anonim
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Comentarii Raspuns
 reply-date=Data Raspuns
 reply-membership-request-for-x=Raspunge la cerere de a fi membru {0}
@@ -4816,6 +4852,9 @@ rich=Bogat
 rich-text-format=Format Text Bogat
 ridge=Margine
 right=Dreapta
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Roboti
 role=Rol
 role-name=Nume Rol
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Cauta
 search-all-organizations=Cauta Organizatii
 search-all-users=Cauta Utilizatori
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Cauta Aplicatii (cauta in timp ce tastezi).
 search-bookmarks=Cauta Marcaje
 search-by-id-or-url=Cauta dupa ID sau URL
 search-categories=Cauta Categorii
 search-configuration=Configurație Implicită
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string. (Automatic Copy)
+search-content=Search Content (Automatic Copy)
 search-coupons=Cauta Cupoate
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Te rog selecteaza un tip valid.
@@ -4918,6 +4959,7 @@ search-operator=Cauta Operator
 search-orders=Cauta Comanda
 search-organizations=Cauta Organizatii
 search-pages=Cauta Pagini
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Cauta Politici de setare a Parolei
 search-plugins=Cauta Plugin-uri
 search-products=Cauta Produse
@@ -4966,6 +5008,7 @@ select-a-page=Pagina Selectata
 select-a-site=Pagina Selectata
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Selecteaza o structura pentru a filtra lista continutului web dupa structura.
 select-a-type=Pagina Selectata
+select-all=Select All (Automatic Copy)
 select-an-action-type=Select an Action Type (Automatic Copy)
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Select an existing list or add a list to be displayed in this portlet. (Automatic Copy)
 select-and-copy=Selecteaza si Copiaza
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Selecteaza Modul
 select-question=Select Question (Automatic Copy)
 select-recipients=Selecteaza Recipienti
+select-search=Select Search (Automatic Copy)
 select-site=Pagina Selectata
 select-tags=Selecteaza Etichete
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Selecteaza actiunea pe care acest rol o poate executa pe modulele <em>{0}</em>.
@@ -5078,6 +5122,7 @@ servers=Servere
 service=Servicii
 service-account=Cont Service
 service-password=Parola Service
+service-search=Service Search (Automatic Copy)
 service-url=Service URL (Automatic Copy)
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Servicii
@@ -5287,15 +5332,19 @@ sku=SKU-uri
 skus=SKU-uri
 skype=Skype (Automatic Copy)
 skyscraper=Zgarienori
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovaca
 small=Small (Automatic Copy)
+small-file=Small File (Automatic Copy)
 small-image=Imagine Mica
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=URL Imagine Minca
 small-rectangle=Dreptunghi Mic
 small-square=Patrat Mic
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=ID Mesager SMS
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=Maine
 ton=Ton (Automatic Copy)
 tools=Unelte
 top=Top (Automatic Copy)
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level Organizations (Automatic Copy)
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Publicatorii de Top
 top-users-out-of-x=Utilizatorii de Top din {0}.
 topic=Subiect
@@ -6693,6 +6745,7 @@ with-scope=cu scop
 withdraw-submission=Retrare depunerea
 within=In interiorul
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Cautare Cuvinte
 word-spacing=Spatiere Cuvinte
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV: (Automatic Copy)
 yard=Yard (Automatic Copy)
 year=An
 year-abbreviation=a
+year-position=Year Position (Automatic Copy)
 year-s=an(i)
 year-to-date=An la data
 yearly=Devreme
