--- a/portal-impl/src/content/Language_sv.properties
+++ b/portal-impl/src/content/Language_sv.properties
@@ -888,6 +888,7 @@ always=Alltid
 always-use-my-user-id=Använd alltid mitt användarid.
 am=AM
 am-pm=AM/PM
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Nord- och Sydamerika
 amount=Mängd
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Ett konto med e-postadressen {0} finns redan i portalen. Vill du knyta den här aktiviteten till det kontot?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Ett oväntat inloggningsfel har inträffat.
 an-unexpected-system-error-occurred=Ett oväntat systemfel har inträffat.
 analytics=Uppföljning
 and=och
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=och sedan på
 and-x-more=och {0} till.
 anniversary=Jubileum
@@ -1308,6 +1311,9 @@ border-styles=Kanttyper
 border-styling=Kantstilar
 border-width=Kantbredd
 bottom=Underkant
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Gren
 branches=Grenar
 breadcrumb=Breadcrumb spår
@@ -1372,6 +1378,7 @@ cas-server-name-help=Välj detta för att aktivera djuplänkning in i portalen (
 cas-server-url-help=Ange CAS server domän-URL.
 cas-service-url-help=Ange detta för att avaktivera djuplänkning in i portalen (t.ex. http://localhost:8080/c/portal/login). Ange inte detta om CAS server name är satt.
 categories=Kategorier
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategorier och meddelanden
 categories[message-board]=Kategorier
 categorization=Kategorisering
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Kategoriuppsättningar
 category[message-board]=Kategori
 cc=Kopia
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express
 cc_discover=Discover
 cc_mastercard=MasterCard
@@ -1428,6 +1437,7 @@ chapter=Kapitel
 chapters=Kapitel
 characters-maximum=Max antal tecken
 chart=Diagram
+chart-type=Chart Type (Automatic Copy)
 chart-width=Diagrambredd
 charts=Diagram
 chat=Chat
@@ -1745,6 +1755,7 @@ custom-message=Eget meddelande
 custom-portlet-xml=Egen portlet.xml
 custom-question=Egen fråga
 custom-range=Egen tidsperiod
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Egna attribut för användare
 custom-user-attributes-help=När du anger egna attribut för användare kommer dessa att hämta innehåll som har matchande kategorisering. Kategorier måste vara från den globala kontexten.
 custom.field.boolean=Sant/Falskt
@@ -1986,6 +1997,7 @@ disk=Disk
 dismiss=Avslå
 display=Visa
 display-a-datepicker=Visa en datumväljare
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Visa ytterligare aktivitetsräknare
 display-as-tooltip=Visa som Tooltip
 display-asset-categories-facet=Visa kategorier som facetter
@@ -2480,7 +2492,9 @@ finished=Klar
 firm-name=Företagsnamn
 firms=Företag
 first=Första
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Första meddelandet
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Tilltalsnamn
 first-name-attribute=Förnamnsattribut
 first-thread=Första tråd
@@ -2995,6 +3009,7 @@ language-to=Språk till
 language-type=Språktyp
 languages=Språk
 large=Stor
+large-file=Large File (Automatic Copy)
 large-image=Stor bild
 large-image-url=Stor bild-URL
 large-rectangle=Stor rektangel
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Formatmallstillägg
 layout-template-plugins=Formatmallstillägg
 layout-templates=Formatmallar
@@ -3087,6 +3103,9 @@ leave-site=Lämna plats
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Lämna detta blankt om kupongen inte motsvarar varans SKU.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Lämna detta blankt om kupongen inte motsvarar varans övre kategorier.
 left=Vänster
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Org nr
 legal-name=Registrerat namn
 legal-type=Organisationsform
@@ -3161,6 +3180,7 @@ lockout-duration-help=Den tid en användares konto är låst
 lockout-enabled=Utelåsning aktiverad
 lockout-enabled-help=Kryssa i för att låsa ett konto där upprepade misslyckade inloggningsförsök görs.
 log-levels=Fel- och varningsmeddelanden
+logger-name=Logger Name (Automatic Copy)
 login=Inloggning
 login-through-facebook=Logga in med Facebook
 login-url=Inlogggnings-URL
@@ -3280,6 +3300,7 @@ maybe-attending=Kanske närvarande
 me=Jag
 media-files-must-be-one-of-the-following-formats=Mediafiler behöver ha något av följande format:
 medium=Mellan
+medium-file=Medium File (Automatic Copy)
 medium-image=Medelstor bild
 medium-image-url=Medelstor bild URL
 medium-rectangle=Medelstor rektangel
@@ -3296,6 +3317,8 @@ membership-type-private-help=Användare kan inte begära medlemskap. Endast admi
 membership-type-restricted-help=Användare kan begära medlemskap. Förfrågningarna måste godkännas av en av platsens administratörer.
 memberships=Medlemskap
 memory=Minne
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Slå ihop
 merge-data=Slå samman data
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Slå ihop {0} publika sidor
 merged-from-x-x=(Ihopslagna från {0}, {1})
 message=Meddelande
 message-added-email=E-post om nytt meddelande
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Foruminlägg
 message-boards-home=Forum, hem
 message-boards-message-anonymous-help=Kryssa i för att meddelanden ska anslås anonymnt.
@@ -3543,6 +3567,7 @@ monday-abbreviation=Mån
 monitoring=Bevakning
 month=Månad
 month-abbreviation=mm
+month-position=Month Position (Automatic Copy)
 month-s=Månader
 monthly=Månatlig
 monthly-payment=Månatligt belopp
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=More rows at bottom. (Automatic Copy)
 more-x-results=Fler {0} resultat
 move=Flytta
 move-column=Flytta kolumn
+move-down=Move Down (Automatic Copy)
 move-files=Flytta filer
 move-page=Flytta sida
 move-selected-item-in-x-one-position-down=Move selected item in {0} one position down. (Automatic Copy)
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Move selected items from {0} to {1}. (Automatic 
 move-thread=Flytta tråd
 move-to=Flytta till
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Sidfotsinnehåll
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Granskas aldrig
 new=Ny
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=Lägg till applikationsvisningsmall
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Nytt blogginlägg
 new-bookmark=Se bokmärken
 new-category=Skapa kategori
@@ -4059,6 +4087,7 @@ pause=Paus
 payer-email-address=Betalarens E-postadress
 payment-gross=Betalning (inkl. moms)
 payment-settings=Betalnings inställningar
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal e-postadress
 paypal-order=PayPal-beställning
 pending=Väntar
@@ -4389,6 +4418,7 @@ pop-up=Popup-fönster
 port=Skicka
 portal=Portal
 portal-data=Portaldata
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Portaler
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Systemanvändare
 print=Skriv ut
 print-x-x=Skriv ut <span class="{0}">{1}</span>
 priority=Prioritet
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Eget
 private-node=Egen nod
 private-nodes=Egna noder
@@ -4552,6 +4585,7 @@ purchase-order=Inköpsorder
 px=px (Automatic Copy)
 quantity=Kvantitet
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Kom ihåg mig
 reminder=Påminnelse
 reminder-queries=Påminnelsefrågor
 reminder-query-and-answer-cannot-be-empty=Fråga och svar för påminnelse kan inte lämnas tomma.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Fjärrvärd/IP
 remote-live=Remote Live (Automatic Copy)
 remote-live-connection-settings=Remote Live Connection Settings (Automatic Copy)
@@ -4714,6 +4749,7 @@ reply=Svara
 reply-all=Svara alla
 reply-as=Svara som...
 reply-as-anonymous=Svara som anonym
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Svarskommentarer
 reply-date=Svarsdatum
 reply-membership-request-for-x=Reply Membership Request for {0} (Automatic Copy)
@@ -4816,6 +4852,9 @@ rich=Rikt
 rich-text-format=Rich Text Format (Automatic Copy)
 ridge=Toppnivå
 right=Höger
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robotar
 role=Roll
 role-name=Roll namn
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Sök
 search-all-organizations=Sök organisationer
 search-all-users=Sök användare
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Sök portlets (som innehåller bokstäverna)
 search-bookmarks=Sök bokmärken
 search-by-id-or-url=Sök enlig ID eller URL
 search-categories=Sök kategorier
 search-configuration=Huvudkonfiguration
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string. (Automatic Copy)
+search-content=Search Content (Automatic Copy)
 search-coupons=Sök kuponger
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Ange en giltig typ.
@@ -4918,6 +4959,7 @@ search-operator=Sökoperatör
 search-orders=Sök beställningar
 search-organizations=Sök organisationer
 search-pages=Sök sidor
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Sök lösenordsregler
 search-plugins=Sök tilläggsmoduler
 search-products=Sök produkter
@@ -4966,6 +5008,7 @@ select-a-page=Välj en sida
 select-a-site=Välj en plats
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Välj en artikelstruktur om du vill filtrera bort andra.
 select-a-type=Välj en typ
+select-all=Select All (Automatic Copy)
 select-an-action-type=Välj en åtgärdstyp
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Välj en lista från urvalslistan eller skapa en ny lista som skall visas.
 select-and-copy=Välj och kopiera
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Välj portlet
 select-question=Välj fråga
 select-recipients=Välj mottagare
+select-search=Select Search (Automatic Copy)
 select-site=Välj en plats
 select-tags=Välj taggar
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Välj funktionen som denna roll kan utföra på <em>{0}</em>-portleten.
@@ -5078,6 +5122,7 @@ servers=Servrar
 service=Tjänst
 service-account=Service Account (Automatic Copy)
 service-password=Lösenord för tjänst
+service-search=Service Search (Automatic Copy)
 service-url=Tjänst-URL
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Tjänster
@@ -5287,15 +5332,19 @@ sku=Artikelnr
 skus=Artikelnr
 skype=Skype (Automatic Copy)
 skyscraper=Skyskrapa
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovakiska
 small=Liten
+small-file=Small File (Automatic Copy)
 small-image=Liten bild
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=Liten bild-URL
 small-rectangle=Liten rektangel
 small-square=Liten kvadrat
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=SMS Messenger ID (Automatic Copy)
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=Imorgon
 ton=Ton (Automatic Copy)
 tools=Verktyg
 top=Topp
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level Organizations (Automatic Copy)
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Flest inlägg av
 top-users-out-of-x=Top users out of {0}. (Automatic Copy)
 topic=Ämne
@@ -6693,6 +6745,7 @@ with-scope=med omfattning
 withdraw-submission=Withdraw Submission (Automatic Copy)
 within=Inom
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Sök ord
 word-spacing=Mellanrum
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV: (Automatic Copy)
 yard=Yard (Automatic Copy)
 year=År
 year-abbreviation=åå
+year-position=Year Position (Automatic Copy)
 year-s=år
 year-to-date=År till datum
 yearly=Årligen
