--- a/portal-impl/src/content/Language_tr.properties
+++ b/portal-impl/src/content/Language_tr.properties
@@ -888,6 +888,7 @@ always=Her Zaman
 always-use-my-user-id=Her zaman kullanıcı id'mi kullan.
 am=AM (Automatic Copy)
 am-pm=AM/PM (Automatic Copy)
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Amerika
 amount=Miktar
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=An account with {0} as the email address already exists in the portal. Do you want to associate this activity with that account? (Automatic Copy)
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Beklenmeyen bir giriş hatası oluştu.
 an-unexpected-system-error-occurred=Beklenmeyen bir sistem hatası oluştu.
 analytics=Analytics (Automatic Copy)
 and=Ve
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=And Then By (Automatic Copy)
 and-x-more=and {0} more. (Automatic Copy)
 anniversary=Yıldönümü
@@ -1308,6 +1311,9 @@ border-styles=Kenar Stilleri
 border-styling=Kenar Biçimlendirme
 border-width=Kenar Kalınlığı
 bottom=Alt
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Branch (Automatic Copy)
 branches=Branches (Automatic Copy)
 breadcrumb=Breadcrumb (Automatic Copy)
@@ -1372,6 +1378,7 @@ cas-server-name-help=Set this to enable deep linking into the portal (e.g. http:
 cas-server-url-help=Set the CAS server domain URL. (Automatic Copy)
 cas-service-url-help=Set this to disable deep linking into the portal (e.g. http://localhost:8080/c/portal/login). Do not set this if the CAS server name is set. (Automatic Copy)
 categories=Kategoriler
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategoriler ve Mesajlar
 categories[message-board]=Kategoriler
 categorization=Sınıflandırma
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Kategori Kümeleri
 category[message-board]=Kategori
 cc=CC (Automatic Copy)
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=American Express (Automatic Copy)
 cc_discover=Discover (Automatic Copy)
 cc_mastercard=MasterCard (Automatic Copy)
@@ -1428,6 +1437,7 @@ chapter=Bölüm
 chapters=Bölümler
 characters-maximum=Maksimum Karakter
 chart=Grafik(Tablo)
+chart-type=Chart Type (Automatic Copy)
 chart-width=Chart Width (Automatic Copy)
 charts=Grafikler(Tablolar)
 chat=Sohbet
@@ -1745,6 +1755,7 @@ custom-message=Özel Mesaj
 custom-portlet-xml=Özel portlet.xml
 custom-question=Custom Question (Automatic Copy)
 custom-range=Custom Range (Automatic Copy)
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Custom User Attributes (Automatic Copy)
 custom-user-attributes-help=Specifying the custom user attributes will retrieve assets that have matching categorization. Categories must be from the global context. (Automatic Copy)
 custom.field.boolean=True/False (Automatic Copy)
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Dismiss (Automatic Copy)
 display=Görünüm
 display-a-datepicker=Display a Datepicker (Automatic Copy)
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Display Additional Activity Counters (Automatic Copy)
 display-as-tooltip=Display as Tooltip (Automatic Copy)
 display-asset-categories-facet=Display Asset Categories Facet (Automatic Copy)
@@ -2480,7 +2492,9 @@ finished=Bitti
 firm-name=Şirket Adı
 firms=Şirketler
 first=İlk
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=İlk Mesaj
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=İlk İsim
 first-name-attribute=İlk İsim Niteliği
 first-thread=İlk Konu
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=Dil Tipi
 languages=Diller
 large=Daha Büyük
+large-file=Large File (Automatic Copy)
 large-image=Büyük Resim
 large-image-url=Büyük Resim URL
 large-rectangle=Büyük Dikdörtgen
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Yerleşim Şablonu Eklentisi
 layout-template-plugins=Yerleşim Şablonu Eklentileri
 layout-templates=Yerleşim Şablonları
@@ -3087,6 +3103,9 @@ leave-site=Leave Site (Automatic Copy)
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Eğer kupon SKU öğesini kontrol etmez ise bunu boş bırakın.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Eğer kupon öğenin ana kategorilerini kontrol etmez ise bunu boş bırakın.
 left=Ayrıldı/Bırakıldı/Vazgeçildi
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Yasal ID/Numara
 legal-name=Yasal Ad
 legal-type=Yasal Tip
@@ -3161,6 +3180,7 @@ lockout-duration-help=Kullanıcının hesabının kilitli olduğu süreyi belirt
 lockout-enabled=Kilitlenme Etkinleştirildi.
 lockout-enabled-help=Eğer bu seçili ise, kullanıcı hesapları kilitlenmeden oturum açmak için belirli sayıda girişimde bulunabilir.
 log-levels=Kayıt Seviyeleri/Dereceleri
+logger-name=Logger Name (Automatic Copy)
 login=Giriş
 login-through-facebook=Login through Facebook (Automatic Copy)
 login-url=Giriş URL
@@ -3280,6 +3300,7 @@ maybe-attending=Belki Katılan
 me=Ben
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats: (Automatic Copy)
 medium=Orta/Ortalama
+medium-file=Medium File (Automatic Copy)
 medium-image=Orta/Ortalama Resim
 medium-image-url=Orta/Ortalama Resim URL’si
 medium-rectangle=Orta/Ortalama Dikdörtgen
@@ -3296,6 +3317,8 @@ membership-type-private-help=Users are not allowed to request membership. Only s
 membership-type-restricted-help=Users are allowed to request membership. The request will need to be approved by the site administrators. (Automatic Copy)
 memberships=Memberships (Automatic Copy)
 memory=Bellek
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Merge (Automatic Copy)
 merge-data=Veriyi Birleştir
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Merge {0} public pages (Automatic Copy)
 merged-from-x-x=(Merged from {0}, {1}) (Automatic Copy)
 message=Mesaj
 message-added-email=Mesaj Ekli E-posta
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Mesaj Tahtası Mesajı
 message-boards-home=Mesaj Tahtası Konusu
 message-boards-message-anonymous-help=Eğer bu seçili ise, bu mesaj isimsiz gönderilecek.
@@ -3543,6 +3567,7 @@ monday-abbreviation=P
 monitoring=İzleme
 month=Ay
 month-abbreviation=a
+month-position=Month Position (Automatic Copy)
 month-s=ay(lar)
 monthly=Aylık
 monthly-payment=Aylık Ödeme
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=More rows at bottom. (Automatic Copy)
 more-x-results=More {0} Results (Automatic Copy)
 move=Taşı
 move-column=Sütunu Taşı
+move-down=Move Down (Automatic Copy)
 move-files=Dosyaları Kaldır
 move-page=Sayfayı Taşı
 move-selected-item-in-x-one-position-down=Move selected item in {0} one position down. (Automatic Copy)
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Move selected items from {0} to {1}. (Automatic 
 move-thread=Konu Başlığını Taşı
 move-to=Şuraya Taşı
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Başlık Web İçeriği
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Hiçbir Zaman Gözden Geçirme.
 new=Yeni
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=New Application Display Template (Automatic Copy)
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Blog İçeriği Ekle
 new-bookmark=Yer İmlerini Görüntüle
 new-category=Kategori Ekle
@@ -4059,6 +4087,7 @@ pause=Duraklat
 payer-email-address=Ödeyen E-posta Adresi
 payment-gross=Brüt Ödeme
 payment-settings=Ödeme Şekilleri
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal E-posta Adresi
 paypal-order=PayPal Sipariş
 pending=Bekliyor
@@ -4389,6 +4418,7 @@ pop-up=Pop Up (Automatic Copy)
 port=Gönder
 portal=Portal (Automatic Copy)
 portal-data=Portal Verisi
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Portal Örnekleri(Instances)
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Başlıca/Temel
 print=Baskıya yolla
 print-x-x=Print <span class="{0}">{1}</span> (Automatic Copy)
 priority=Öncelik
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Özel
 private-node=Özel Düğüm
 private-nodes=Özel Düğümler
@@ -4552,6 +4585,7 @@ purchase-order=Purchase Order (Automatic Copy)
 px=px (Automatic Copy)
 quantity=Miktar
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Beni Hatırla
 reminder=Hatırlatma
 reminder-queries=Hatırlatıcı Sorgular
 reminder-query-and-answer-cannot-be-empty=Hatırlatıcı sorgu ve cevabı boş olamaz.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Uzak Host/IP
 remote-live=Remote Live (Automatic Copy)
 remote-live-connection-settings=Remote Live Connection Settings (Automatic Copy)
@@ -4714,6 +4749,7 @@ reply=Yanıt
 reply-all=Hepsini Yanıtla
 reply-as=Reply as... (Automatic Copy)
 reply-as-anonymous=İsimsiz Olarak Yanıtla
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Yorumları Yanıtla
 reply-date=Yanıt Tarihi
 reply-membership-request-for-x=Reply Membership Request for {0} (Automatic Copy)
@@ -4816,6 +4852,9 @@ rich=Zengin
 rich-text-format=Zengin Metin Biçimi
 ridge=Ridge (Automatic Copy)
 right=Sağ
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Robotlar
 role=Rol
 role-name=Rol Adı
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Ara
 search-all-organizations=Organizasyonları Ara
 search-all-users=Kullanıcıları Ara
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Search applications (searches as you type). (Automatic Copy)
 search-bookmarks=Search Bookmarks (Automatic Copy)
 search-by-id-or-url=ID'den veya URL'den Ara
 search-categories=Kategorilerde Ara(Arama Kategorileri)
 search-configuration=Ana Konfigürasyon
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string. (Automatic Copy)
+search-content=Search Content (Automatic Copy)
 search-coupons=Kuponları Ara
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Lütfen bir tür seçin.
@@ -4918,6 +4959,7 @@ search-operator=Operatör Ara
 search-orders=Emirleri Ara
 search-organizations=Organizasyonları Ara
 search-pages=Sayfaları Ara
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Şifre Kurallarını Ara
 search-plugins=Eklentileri Ara
 search-products=Ürünleri Ara
@@ -4966,6 +5008,7 @@ select-a-page=Seçilmiş Sayfa
 select-a-site=Seçilmiş Sayfa
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Select a structure to filter the web content list by a structure. (Automatic Copy)
 select-a-type=Seçilmiş Sayfa
+select-all=Select All (Automatic Copy)
 select-an-action-type=Select an Action Type (Automatic Copy)
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Select an existing list or add a list to be displayed in this portlet. (Automatic Copy)
 select-and-copy=Seç ve Kopyala
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Portleti Seç
 select-question=Select Question (Automatic Copy)
 select-recipients=Alcıları Seç
+select-search=Select Search (Automatic Copy)
 select-site=Seçilmiş Sayfa
 select-tags=Etiketleri Seç
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Bu rölün <em>{0}</em> portleti üzerinde gerçekleştirebileceği faaliyeti seç.
@@ -5078,6 +5122,7 @@ servers=Sunucu
 service=Servis
 service-account=Service Account (Automatic Copy)
 service-password=Service Password (Automatic Copy)
+service-search=Service Search (Automatic Copy)
 service-url=Servis URL
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Servisler
@@ -5287,15 +5332,19 @@ sku=SKU (Automatic Copy)
 skus=SKUs (Automatic Copy)
 skype=Skype (Automatic Copy)
 skyscraper=Skyscraper (Automatic Copy)
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovakça
 small=Small (Automatic Copy)
+small-file=Small File (Automatic Copy)
 small-image=Küçük Resim
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=Küçük Resim URL'i
 small-rectangle=Küçük Dikdörtgen
 small-square=Küçük Kare
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=SMS Messenger ID (Automatic Copy)
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=times (Automatic Copy)
 social-activity-limit-type-times-a-day=times a day (Automatic Copy)
 social-activity-limit-type-times-per-period=times per period (Automatic Copy)
@@ -6197,8 +6246,11 @@ tomorrow=Yarın
 ton=Ton (Automatic Copy)
 tools=Araçlar
 top=Yukarı
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Top Level Organizations (Automatic Copy)
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Afişler
 top-users-out-of-x=Top users out of {0}. (Automatic Copy)
 topic=Başlık
@@ -6693,6 +6745,7 @@ with-scope=amacı ile
 withdraw-submission=Withdraw Submission (Automatic Copy)
 within=İçinde
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Sözcük Arama
 word-spacing=Kelime Aralığı
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV: (Automatic Copy)
 yard=Yard (Automatic Copy)
 year=Yıl
 year-abbreviation=y (Automatic Copy)
+year-position=Year Position (Automatic Copy)
 year-s=yıl(lar)
 year-to-date=Year to Date (Automatic Copy)
 yearly=Yıllık
